@@ -33,6 +33,9 @@
 package megamek.client.ratgenerator;
 
 import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import megamek.common.units.EntityMovementMode;
@@ -52,6 +55,7 @@ public class ForceNode extends RulesetNode {
     protected Integer echelon;
     protected String echelonName;
     protected ArrayList<ValueNode> nameNodes;
+    protected ArrayList<ValueNode> weightTargetNodes;
     protected ArrayList<CommanderNode> coNodes;
     protected ArrayList<CommanderNode> xoNodes;
     protected ArrayList<ArrayList<OptionGroupNode>> ruleGroups;
@@ -65,6 +69,7 @@ public class ForceNode extends RulesetNode {
         echelon = null;
         echelonName = null;
         nameNodes = new ArrayList<>();
+        weightTargetNodes = new ArrayList<>();
         coNodes = new ArrayList<>();
         xoNodes = new ArrayList<>();
         ruleGroups = new ArrayList<>();
@@ -88,10 +93,19 @@ public class ForceNode extends RulesetNode {
                     case "weightClass":
                         if (fd.getWeightClass() == null
                               || rule.predicates.containsKey("ifWeightClass")) {
+                            String priorWeightCode = fd.getWeightClassCode();
                             valueNode = rule.selectOption(fd, true);
                             if (valueNode != null) {
                                 fd.setWeightClass(ForceDescriptor.decodeWeightClass(valueNode.getContent()));
+                                logger.debug("[ForceGen][Weight] {} (faction={}): random <weightClass> block applied" +
+                                            " '{}' -> {} (prior={})",
+                                      echelonName, fd.getFaction(), valueNode.getContent(),
+                                      fd.getWeightClassCode(), priorWeightCode.isEmpty() ? "unset" : priorWeightCode);
                             }
+                        } else {
+                            logger.debug("[ForceGen][Weight] {} (faction={}): kept caller-supplied weightClass={}" +
+                                        " (random <weightClass> block skipped)",
+                                  echelonName, fd.getFaction(), fd.getWeightClassCode());
                         }
                         break;
                     case "unitType":
@@ -146,8 +160,11 @@ public class ForceNode extends RulesetNode {
                         }
                         break;
                     case "formation":
-                        if (null == fd.getFormation()
+                        if (fd.getFormation() == null
                               || rule.predicates.containsKey("ifFormation")) {
+                            // What the rule offered, captured before the pick applies its result and changes the
+                            // properties the predicates were judged against.
+                            fd.setEligibleFormations(offeredFormations(rule, fd));
                             valueNode = rule.selectOption(fd, true);
                             if (valueNode == null) {
                                 break;
@@ -155,7 +172,7 @@ public class ForceNode extends RulesetNode {
                             content = valueNode.getContent();
                             if (content != null) {
                                 FormationType ft = FormationType.getFormationType(content);
-                                if (null == ft) {
+                                if (ft == null) {
                                     logger.error("Could not parse formation type {}", content);
                                 }
                                 fd.setFormationType(ft);
@@ -239,6 +256,16 @@ public class ForceNode extends RulesetNode {
             fd.setNameNodes(nameNodes);
         }
 
+        // Resolve <weightTarget> blocks now that the cluster's own weight class is rolled, so
+        // ifWeightClass-gated targets match correctly. WeightBudgetAllocator consumes these after
+        // the whole tree is built.
+        if (!weightTargetNodes.isEmpty()) {
+            Map<Integer, WeightTarget> targets = resolveWeightTargets(fd);
+            if (!targets.isEmpty()) {
+                fd.setWeightTargets(targets);
+            }
+        }
+
         String generate = assertions.getProperty("generate");
         if (subForces.isEmpty()) {
             generate = "model";
@@ -301,6 +328,28 @@ public class ForceNode extends RulesetNode {
         }
     }
 
+    /**
+     * Resolves the {@code <weightTarget>} blocks that match this descriptor into a per-unit-type budget map. First
+     * match per unit type wins, mirroring the {@code <name>} cascade.
+     *
+     * @param fd the descriptor being built (its weight class and flags drive predicate matching)
+     *
+     * @return a map of unit type to its resolved {@link WeightTarget}, possibly empty
+     */
+    private Map<Integer, WeightTarget> resolveWeightTargets(ForceDescriptor fd) {
+        Map<Integer, WeightTarget> out = new HashMap<>();
+        for (ValueNode node : weightTargetNodes) {
+            if (!node.matches(fd)) {
+                continue;
+            }
+            WeightTarget target = WeightTarget.fromNode(node);
+            if (target != null) {
+                out.putIfAbsent(target.unitType(), target);
+            }
+        }
+        return out;
+    }
+
     public Integer getEchelon() {
         return echelon;
     }
@@ -322,6 +371,7 @@ public class ForceNode extends RulesetNode {
         return xoNodes;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public Integer getCoRank(ForceDescriptor fd) {
         for (CommanderNode n : coNodes) {
             if (n.matches(fd)) {
@@ -331,12 +381,35 @@ public class ForceNode extends RulesetNode {
         return null;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public void setEchelon(Integer echelon) {
         this.echelon = echelon;
     }
 
     public String getEchelonName() {
         return echelonName;
+    }
+
+    /**
+     * The formation types a rule is offering this node, mapped to the weight the ruleset gave each.
+     *
+     * <p>Options carrying the same formation name have their weights merged, so the result reads as one entry per
+     * formation with the odds the ruleset actually assigns it.</p>
+     *
+     * @param rule the formation property rule about to be applied
+     * @param fd   the node the rule is being applied to
+     *
+     * @return the offered formations and their weights, in the order the ruleset declares them
+     */
+    private static Map<String, Integer> offeredFormations(OptionGroupNode rule, ForceDescriptor fd) {
+        Map<String, Integer> offered = new LinkedHashMap<>();
+        for (ValueNode option : rule.matchingOptions(fd)) {
+            String formationName = option.getContent();
+            if ((formationName != null) && !formationName.isBlank()) {
+                offered.merge(formationName.trim(), option.getWeight(), Integer::sum);
+            }
+        }
+        return offered;
     }
 
     public static ForceNode createFromXml(Node node) {
@@ -369,6 +442,9 @@ public class ForceNode extends RulesetNode {
                 case "name":
                     nameNodes.add(ValueNode.createFromXml(wn));
                     break;
+                case "weightTarget":
+                    weightTargetNodes.add(ValueNode.createFromXml(wn));
+                    break;
                 case "co":
                     coNodes.add(CommanderNode.createFromXml(wn));
                     break;
@@ -388,7 +464,7 @@ public class ForceNode extends RulesetNode {
                         currentRuleGroup = new ArrayList<>();
                         ruleGroups.add(currentRuleGroup);
                     }
-                    ruleGroups.get(0).add(OptionGroupNode.createFromXml(wn));
+                    ruleGroups.getFirst().add(OptionGroupNode.createFromXml(wn));
                     break;
                 case "ruleGroup":
                     currentRuleGroup = new ArrayList<>();
@@ -424,7 +500,7 @@ public class ForceNode extends RulesetNode {
      * @return A description of the node
      */
     public String show() {
-        if (null == desc) {
+        if (desc == null) {
             desc = "Force Node [echelon:" + echelon + " predicates:"
                   + predicates.entrySet().stream().map(e -> e.getKey() + "=" + e.getValue())
                   .collect(Collectors.joining(","))
