@@ -34,14 +34,7 @@
  */
 package megamek.client.ui.clientGUI;
 
-import java.awt.BorderLayout;
-import java.awt.CardLayout;
-import java.awt.Component;
-import java.awt.Container;
-import java.awt.Cursor;
-import java.awt.Dimension;
-import java.awt.HeadlessException;
-import java.awt.Image;
+import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.ComponentAdapter;
@@ -56,6 +49,8 @@ import java.io.OutputStream;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.*;
+import java.util.List;
+import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.function.Consumer;
 import java.util.jar.JarFile;
 import javax.imageio.ImageIO;
@@ -67,14 +62,15 @@ import megamek.MMConstants;
 import megamek.client.AbstractClient;
 import megamek.client.Client;
 import megamek.client.TimerSingleton;
+import megamek.client.bot.AIType;
 import megamek.client.bot.BotClient;
 import megamek.client.bot.princess.BehaviorSettings;
-import megamek.client.bot.princess.Princess;
 import megamek.client.commands.*;
 import megamek.client.event.BoardViewEvent;
 import megamek.client.event.BoardViewListener;
 import megamek.client.event.MekDisplayEvent;
 import megamek.client.event.MekDisplayListener;
+import megamek.client.ratgenerator.GenerationContext;
 import megamek.client.ui.Messages;
 import megamek.client.ui.clientGUI.audio.AudioService;
 import megamek.client.ui.clientGUI.audio.SoundManager;
@@ -83,24 +79,19 @@ import megamek.client.ui.clientGUI.boardview.BoardView;
 import megamek.client.ui.clientGUI.boardview.CollapseWarning;
 import megamek.client.ui.clientGUI.boardview.IBoardView;
 import megamek.client.ui.clientGUI.boardview.RulerDialog;
+import megamek.client.ui.clientGUI.boardview.overlay.BoardToastOverlay;
 import megamek.client.ui.clientGUI.boardview.overlay.ChatterBoxOverlay;
 import megamek.client.ui.clientGUI.boardview.overlay.KeyBindingsOverlay;
 import megamek.client.ui.clientGUI.boardview.overlay.OffBoardTargetOverlay;
 import megamek.client.ui.clientGUI.boardview.overlay.PlanetaryConditionsOverlay;
+import megamek.client.ui.clientGUI.boardview.overlay.ToastLevel;
 import megamek.client.ui.clientGUI.boardview.overlay.TurnDetailsOverlay;
 import megamek.client.ui.clientGUI.boardview.overlay.UnitOverviewOverlay;
 import megamek.client.ui.clientGUI.boardview.spriteHandler.*;
 import megamek.client.ui.clientGUI.boardview.toolTip.TWBoardViewTooltip;
-import megamek.client.ui.dialogs.AccessibilityDialog;
+import megamek.client.ui.dialogs.*;
 import megamek.client.ui.dialogs.BotCommands.BotCommandsDialog;
 import megamek.client.ui.dialogs.BotCommands.BotCommandsPanel;
-import megamek.client.ui.dialogs.ChoiceDialog;
-import megamek.client.ui.dialogs.CommonAboutDialog;
-import megamek.client.ui.dialogs.ConfirmDialog;
-import megamek.client.ui.dialogs.InformDialog;
-import megamek.client.ui.dialogs.PlayerListDialog;
-import megamek.client.ui.dialogs.RandomNameDialog;
-import megamek.client.ui.dialogs.UnitLoadingDialog;
 import megamek.client.ui.dialogs.buttonDialogs.CommonSettingsDialog;
 import megamek.client.ui.dialogs.buttonDialogs.EditBotsDialog;
 import megamek.client.ui.dialogs.buttonDialogs.GameOptionsDialog;
@@ -131,6 +122,8 @@ import megamek.client.ui.tileset.EntityImage;
 import megamek.client.ui.tileset.MMStaticDirectoryManager;
 import megamek.client.ui.tileset.TilesetManager;
 import megamek.client.ui.util.BASE64ToolKit;
+import megamek.client.ui.util.KeyCommandBind;
+import megamek.client.ui.util.MULVersionValidator;
 import megamek.client.ui.util.MegaMekController;
 import megamek.client.ui.util.UIUtil;
 import megamek.common.Hex;
@@ -148,16 +141,10 @@ import megamek.common.equipment.AmmoMounted;
 import megamek.common.equipment.HandheldWeapon;
 import megamek.common.equipment.ICarryable;
 import megamek.common.equipment.Mounted;
+import megamek.common.equipment.SensorFamily;
 import megamek.common.equipment.WeaponMounted;
-import megamek.common.event.GameCFREvent;
-import megamek.common.event.GameEndEvent;
-import megamek.common.event.GameListener;
-import megamek.common.event.GameListenerAdapter;
-import megamek.common.event.GamePhaseChangeEvent;
-import megamek.common.event.GameReportEvent;
-import megamek.common.event.GameScriptedEvent;
-import megamek.common.event.GameScriptedMessageEvent;
-import megamek.common.event.GameSettingsChangeEvent;
+import megamek.common.event.*;
+import megamek.common.event.board.GameBoardChangeEvent;
 import megamek.common.event.board.GameBoardNewEvent;
 import megamek.common.event.entity.GameEntityChangeEvent;
 import megamek.common.event.entity.GameEntityNewEvent;
@@ -176,6 +163,7 @@ import megamek.common.options.OptionsConstants;
 import megamek.common.preference.IPreferenceChangeListener;
 import megamek.common.preference.PreferenceChangeEvent;
 import megamek.common.preference.PreferenceManager;
+import megamek.common.units.ConvInfantry;
 import megamek.common.units.Entity;
 import megamek.common.units.EntityListFile;
 import megamek.common.units.IBomber;
@@ -183,6 +171,8 @@ import megamek.common.units.Targetable;
 import megamek.common.util.AddBotUtil;
 import megamek.common.util.Distractable;
 import megamek.common.util.StringUtil;
+import megamek.common.voting.Poll;
+import megamek.common.voting.PollStatus;
 import megamek.common.weapons.handlers.WeaponOrderHandler;
 import megamek.logging.MMLogger;
 
@@ -238,6 +228,7 @@ public class ClientGUI extends AbstractClientGUI
     public static final String FILE_UNITS_REINFORCE = "fileUnitsReinforce";
     public static final String FILE_UNITS_REINFORCE_RAT = "fileUnitsReinforceRAT";
     public static final String FILE_REFRESH_CACHE = "fileRefreshCache";
+    public static final String FILE_REBUILD_CACHE = "fileRebuildCache";
     public static final String FILE_UNITS_BROWSE = "fileUnitsBrowse";
     public static final String FILE_UNITS_OPEN = "fileUnitsOpen";
     public static final String FILE_UNITS_SAVE = "fileUnitsSave";
@@ -259,6 +250,7 @@ public class ClientGUI extends AbstractClientGUI
     public static final String VIEW_UNIT_OVERVIEW = "viewUnitOverview";
     public static final String VIEW_ZOOM_IN = "viewZoomIn";
     public static final String VIEW_ZOOM_OUT = "viewZoomOut";
+    public static final String VIEW_ZOOM_RESET = "viewZoomReset";
     public static final String VIEW_ZOOM_OVERVIEW_TOGGLE = "viewZoomOverviewToggle";
     public static final String VIEW_TOGGLE_ISOMETRIC = "viewToggleIsometric";
     public static final String VIEW_TOGGLE_HEX_COORDS = "viewToggleHexCoords";
@@ -269,6 +261,7 @@ public class ClientGUI extends AbstractClientGUI
     public static final String VIEW_TOGGLE_FOV_DARKEN = "viewToggleFovDarken";
     public static final String VIEW_TOGGLE_FOV_HIGHLIGHT = "viewToggleFovHighlight";
     public static final String VIEW_TOGGLE_FOV_SPOTTING = "viewToggleFovSpotting";
+    public static final String VIEW_TOGGLE_SHOW_OBJECTS = "viewToggleShowObjects";
     public static final String VIEW_TOGGLE_FIRING_SOLUTIONS = "viewToggleFiringSolutions";
     public static final String VIEW_TOGGLE_CF_WARNING = "viewToggleCFWarnings";
     public static final String VIEW_MOVE_ENV = "viewMovementEnvelope";
@@ -277,14 +270,29 @@ public class ClientGUI extends AbstractClientGUI
     public static final String VIEW_CHANGE_THEME = "viewChangeTheme";
     public static final String VIEW_ROUND_REPORT = "viewRoundReport";
     public static final String VIEW_GAME_OPTIONS = "viewGameOptions";
+    public static final String GAME_GIVE_UP_GAME_MASTER = "gameGiveUpGameMaster";
+    public static final String GAME_REQUEST_GAME_MASTER = "gameRequestGameMaster";
+    public static final String GAME_ALL_MG_BURST_ON = "gameAllMgBurstOn";
+    public static final String GAME_ALL_MG_BURST_OFF = "gameAllMgBurstOff";
+    public static final String GAME_ALL_HOT_LOAD_ON = "gameAllHotLoadOn";
+    public static final String GAME_ALL_HOT_LOAD_OFF = "gameAllHotLoadOff";
     public static final String VIEW_NETWORK_INFORMATION = "viewNetworkInformation";
     public static final String VIEW_CLIENT_SETTINGS = "viewClientSettings";
     public static final String VIEW_LOS_SETTING = "viewLOSSetting";
     public static final String VIEW_PLAYER_SETTINGS = "viewPlayerSettings";
     public static final String VIEW_PLAYER_LIST = "viewPlayerList";
+    public static final String VIEW_ROUNDS_IN_AIR = "viewRoundsInAir";
     public static final String VIEW_RESET_WINDOW_POSITIONS = "viewResetWindowPos";
     public static final String VIEW_BOT_COMMANDS = "viewBotCommands";
+    public static final String VIEW_BOT_COMMANDS_OFF = "viewBotCommandsOff";
+    public static final String VIEW_BOT_COMMANDS_FLOAT = "viewBotCommandsFloat";
+    public static final String VIEW_BOT_COMMANDS_DOCK = "viewBotCommandsDock";
     // endregion view menu
+
+    /** Bot commands panel location: shown in a floating dialog. */
+    public static final int BOT_COMMANDS_LOCATION_FLOATING = 0;
+    /** Bot commands panel location: docked into the top of the board area. */
+    public static final int BOT_COMMANDS_LOCATION_DOCKED = 1;
 
     // region fire menu
     public static final String FIRE_SAVE_WEAPON_ORDER = "saveWeaponOrder";
@@ -303,6 +311,7 @@ public class ClientGUI extends AbstractClientGUI
     public static final String CG_STARTING_SCENARIO = "JLabel-StartingScenario";
     public static final String CG_EXCHANGE = "JLabel-Exchange";
     public static final String CG_SELECT_ARTY_AUTO_HIT_HEX_DISPLAY = "SelectArtyAutoHitHexDisplay";
+    public static final String CG_VICTORY_SETUP_DISPLAY = "VictorySetupDisplay";
     public static final String CG_DEPLOY_MINEFIELD_DISPLAY = "DeployMinefieldDisplay";
     public static final String CG_DEPLOYMENT_DISPLAY = "DeploymentDisplay";
     public static final String CG_TARGETING_PHASE_DISPLAY = "TargetingPhaseDisplay";
@@ -350,6 +359,7 @@ public class ClientGUI extends AbstractClientGUI
     private FleeZoneSpriteHandler fleeZoneSpriteHandler;
     private SensorRangeSpriteHandler sensorRangeSpriteHandler;
     private CollapseWarningSpriteHandler collapseWarningSpriteHandler;
+    private SawClearingSpriteHandler sawClearingSpriteHandler;
     private GroundObjectSpriteHandler groundObjectSpriteHandler;
     private FiringSolutionSpriteHandler firingSolutionSpriteHandler;
     private FiringArcSpriteHandler firingArcSpriteHandler;
@@ -363,6 +373,8 @@ public class ClientGUI extends AbstractClientGUI
     private UnitDisplayDialog unitDisplayDialog;
 
     private BotCommandsDialog botCommandsDialog;
+    private BotCommandsPanel botCommandsPanel;
+    private CommandBarPanel commandBarPanel;
 
     public ForceDisplayPanel forceDisplayPanel;
     private ForceDisplayDialog forceDisplayDialog;
@@ -371,13 +383,23 @@ public class ClientGUI extends AbstractClientGUI
     protected JComponent curPanel;
     public ChatLounge chatlounge;
     private OffBoardTargetOverlay offBoardOverlay;
+    private BoardToastOverlay toastOverlay;
+
+    private final ConcurrentLinkedQueue<Runnable> toastDripQueue = new ConcurrentLinkedQueue<>();
+    private javax.swing.Timer toastDripTimer;
+    /** Normalized report entries already shown as toasts this phase; see {@link ReportToastFormatter#formatReport}. */
+    private final Set<String> toastedReportEntries = new HashSet<>();
+
 
     // some dialogs...
     private GameOptionsDialog gameOptionsDialog;
     private NetworkInformationDialog networkInformationDialog;
     private MegaMekUnitSelectorDialog mekSelectorDialog;
     private PlayerListDialog playerListDialog;
+    private RoundsInAirDialog roundsInAirDialog;
     private RandomArmyDialog randomArmyDialog;
+    /** The poll a running Game Master vote is taken in; open only while a vote runs. */
+    private GameMasterVoteDialog gameMasterVoteDialog;
     /**
      * Save and Open dialogs for MegaMek Unit List (mul) files.
      */
@@ -534,6 +556,170 @@ public class ClientGUI extends AbstractClientGUI
         return (BoardView) boardViews.get(0);
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
+    public BoardToastOverlay getToastOverlay() {
+        return toastOverlay;
+    }
+
+    /**
+     * Shows a toast notification on the board view. Safe to call even when the toast overlay has not been initialized
+     * yet (e.g., during the lobby phase).
+     *
+     * @param level the severity level determining color and default duration
+     * @param text  the message text to display
+     */
+    public void addToast(ToastLevel level, String text) {
+        addToast(level, text, null);
+    }
+
+    /**
+     * Shows a toast notification with the given entity's sprite icon on the board view.
+     *
+     * <p>This is the single entry point for every toast in the client, server-raised ones included, so the player's
+     * {@link GUIPreferences#TOAST_ENABLED} setting is enforced here and nowhere else.</p>
+     *
+     * @param level  the severity level determining color and default duration
+     * @param text   the message text to display
+     * @param entity the entity whose icon to show, or {@code null} for text-only
+     */
+    public void addToast(ToastLevel level, String text, @Nullable Entity entity) {
+        String entityLabel = (entity != null) ?
+              entity.getShortName() + " [" + entity.getId() + "]" :
+              "no entity";
+        // Gate before normalizing: normalizeToastText is regex-heavy and only the shown path needs the
+        // cleaned text. On the suppressed paths log the raw text so switching toasts off does not pay the
+        // normalization cost for every would-be toast.
+        if (toastOverlay == null) {
+            logger.debug("[Toast] suppressed [{}] ({}) - overlay not initialized yet: {}",
+                  level, entityLabel, text);
+            return;
+        }
+        if (!GUIP.getToastEnabled()) {
+            logger.debug("[Toast] suppressed [{}] ({}) - toasts switched off in client settings: {}",
+                  level, entityLabel, text);
+            return;
+        }
+        String normalizedText = ReportToastFormatter.normalizeToastText(text);
+        logger.debug("[Toast] shown [{}] ({}): {}", level, entityLabel, normalizedText);
+        toastOverlay.show(level, normalizedText, entity);
+    }
+
+    /**
+     * Maps the layer-neutral severity carried by a {@link GameToastEvent} to the board view's toast styling.
+     *
+     * @param level the severity from the server-sent toast event
+     *
+     * @return the matching {@link ToastLevel} used to color and time the toast
+     */
+    private static ToastLevel toastLevelFor(GameToastEvent.Level level) {
+        return switch (level) {
+            case SUCCESS -> ToastLevel.SUCCESS;
+            case WARNING -> ToastLevel.WARNING;
+            case ERROR -> ToastLevel.ERROR;
+            case INFO -> ToastLevel.INFO;
+            case GAMEMASTER -> ToastLevel.GAMEMASTER;
+        };
+    }
+
+    /**
+     * Shows a progress toast for each of the local player's platoons that is busy raising or dismantling a bridge
+     * (TO:AUE). Called once per round at the start of the movement phase: a busy platoon is eligible only in the
+     * movement phase (movement-only, so it can continue/cancel/pause/resume) and takes no other action, so this is its
+     * main per-turn feedback besides the hex indicator and the END phase report.
+     */
+    private void showBridgeBuildProgressToasts() {
+        for (Entity entity : getClient().getGame().getEntitiesVector()) {
+            if (!(entity instanceof ConvInfantry convInfantry) || !convInfantry.isBusyWithBridge()
+                  || (convInfantry.getBridgeTargetCoords() == null)
+                  || (entity.getOwnerId() != getClient().getLocalPlayer().getId())) {
+                continue;
+            }
+            if (convInfantry.isDismantlingBridge()) {
+                // Count the standing structure back down on the build's scale (e.g. 4/6, 3/6, ...)
+                addToast(ToastLevel.INFO, Messages.getString("ClientGUI.bridgeDismantleProgress.toast",
+                      entity.getShortName(), convInfantry.getBridgeDismantleRemaining(),
+                      convInfantry.getBridgeBuildRequiredTurns(),
+                      convInfantry.getBridgeTargetCoords().getBoardNum()), entity);
+            } else {
+                int turnsWorked = Math.min(convInfantry.getBridgeBuildTurns(),
+                      convInfantry.getBridgeBuildRequiredTurns());
+                String progressKey = convInfantry.isBridgeBuildRepair() ? "ClientGUI.bridgeRepairProgress.toast"
+                      : "ClientGUI.bridgeBuildProgress.toast";
+                addToast(ToastLevel.INFO, Messages.getString(progressKey,
+                      entity.getShortName(), turnsWorked, convInfantry.getBridgeBuildRequiredTurns(),
+                      convInfantry.getBridgeTargetCoords().getBoardNum()), entity);
+            }
+        }
+    }
+
+    /**
+     * Splits a server-side report HTML stream into per-event toasts via {@link ReportToastFormatter} and drip-feeds
+     * them to the overlay on the {@link GUIPreferences#TOAST_DRIP_SECONDS} cadence so each one has time to scroll past
+     * before the next appears.
+     *
+     * <p>Entries already toasted earlier in the same phase are skipped, because a mid-phase report packet can carry
+     * events that an earlier packet already delivered. Does nothing at all when the player has switched
+     * {@link GUIPreferences#TOAST_REPORT_EVENTS} off; toasts that carry information the report log does not hold are
+     * unaffected by that setting.</p>
+     *
+     * <p>Every reason to skip is checked before the report is formatted, because formatting is what records entries
+     * as already toasted. Recording an entry that was never shown would suppress it later, when the player turns toasts
+     * back on part way through the same phase.</p>
+     */
+    private void showReportAsToasts(String defaultPrefix, String report) {
+        if (toastOverlay == null) {
+            logger.debug("[Toast] report burst suppressed - overlay not initialized yet");
+            return;
+        }
+        if (!GUIP.getToastEnabled()) {
+            logger.debug("[Toast] report burst suppressed - toasts are switched off in client settings");
+            return;
+        }
+        if (!GUIP.getToastReportEvents()) {
+            logger.debug("[Toast] report burst suppressed - round report events are switched off in client settings");
+            return;
+        }
+        List<String> bodies = ReportToastFormatter.formatReport(defaultPrefix, report, toastedReportEntries);
+        logger.debug("[Toast] report burst queued {} new event(s); {} entries seen this phase",
+              bodies.size(), toastedReportEntries.size());
+        for (String body : bodies) {
+            toastDripQueue.offer(() -> addToast(ToastLevel.INFO, body));
+        }
+        startToastDripIfIdle();
+    }
+
+    /**
+     * Releases queued report toasts one at a time on the {@link GUIPreferences#TOAST_DRIP_SECONDS} cadence so the
+     * player can read each one before the next arrives. The first toast of a fresh burst fires immediately; subsequent
+     * toasts wait their turn. If a new burst arrives while the timer is already running, its entries are appended to
+     * the existing queue and picked up by the running timer (the cadence in effect when the timer was created continues
+     * to apply for the duration of that timer; preference changes take effect on the next fresh burst).
+     */
+    private void startToastDripIfIdle() {
+        if (toastDripTimer != null && toastDripTimer.isRunning()) {
+            return;
+        }
+        Runnable first = toastDripQueue.poll();
+        if (first != null) {
+            first.run();
+        }
+        if (toastDripQueue.isEmpty()) {
+            return;
+        }
+        int dripMs = Math.max(1, GUIPreferences.getInstance().getToastDripSeconds()) * 1000;
+        toastDripTimer = new javax.swing.Timer(dripMs, evt -> {
+            Runnable next = toastDripQueue.poll();
+            if (next != null) {
+                next.run();
+            }
+            if (toastDripQueue.isEmpty()) {
+                ((javax.swing.Timer) evt.getSource()).stop();
+                toastDripTimer = null;
+            }
+        });
+        toastDripTimer.start();
+    }
+
     @Override
     public UnitDisplayPanel getUnitDisplay() {
         return unitDisplayPanel;
@@ -577,6 +763,10 @@ public class ClientGUI extends AbstractClientGUI
         this.botCommandsDialog = botCommandsDialog;
     }
 
+    public BotCommandsPanel getBotCommandsPanel() {
+        return botCommandsPanel;
+    }
+
     public MiniReportDisplayPanel getMiniReportDisplay() {
         return miniReportDisplayPanel;
     }
@@ -603,6 +793,15 @@ public class ClientGUI extends AbstractClientGUI
         this.playerListDialog.setFocusableWindowState(false);
     }
 
+    public RoundsInAirDialog getRoundsInAirDialog() {
+        return roundsInAirDialog;
+    }
+
+    public void setRoundsInAirDialog(final RoundsInAirDialog roundsInAirDialog) {
+        this.roundsInAirDialog = roundsInAirDialog;
+        this.roundsInAirDialog.setFocusableWindowState(false);
+    }
+
     @Override
     public void setDisconnectQuietly(boolean quietly) {
         disconnectQuietly = quietly;
@@ -625,6 +824,7 @@ public class ClientGUI extends AbstractClientGUI
     protected void initializeFrame() {
         super.initializeFrame();
         menuBar = CommonMenuBar.getMenuBarForGame();
+        menuBar.setClientSupplier(() -> client);
         frame.setJMenuBar(menuBar);
     }
 
@@ -639,12 +839,100 @@ public class ClientGUI extends AbstractClientGUI
     }
 
     /**
+     * Opens, follows and closes the Game Master vote dialog as the server shares the vote's state: the dialog opens
+     * when a vote is called, follows the ballots as they come in, and closes when the vote resolves. The outcome itself
+     * is announced in the chat.
+     */
+    private void updateGameMasterVoteDialog(Poll poll) {
+        if (poll.getStatus().isResolved()) {
+            if (gameMasterVoteDialog != null) {
+                gameMasterVoteDialog.dispose();
+                gameMasterVoteDialog = null;
+            }
+            if (poll.getStatus() == PollStatus.PASSED) {
+                announceNewGameMaster(poll.getRequesterId());
+            }
+            return;
+        }
+        if (gameMasterVoteDialog == null) {
+            gameMasterVoteDialog = new GameMasterVoteDialog(frame, client);
+        }
+        gameMasterVoteDialog.update(poll);
+        gameMasterVoteDialog.setVisible(true);
+    }
+
+    /**
+     * Keeps the Game menu's Game Master entries in step with who holds the role and whether the game allows one: Give
+     * Up while the local player holds it, Become while the role is free, neither while another player has it.
+     */
+    private void updateGameMasterMenuItems() {
+        Player localPlayer = client.getLocalPlayer();
+        if (localPlayer == null) {
+            return;
+        }
+        boolean gameAllowsGameMaster = client.getGame().getOptions()
+              .booleanOption(OptionsConstants.GAME_MASTER_ALLOW);
+        boolean anyoneHoldsRole = false;
+        for (Player player : client.getGame().getPlayersList()) {
+            if (player.isGameMaster()) {
+                anyoneHoldsRole = true;
+                break;
+            }
+        }
+        menuBar.setGameMasterState(localPlayer.isGameMaster(), gameAllowsGameMaster && !anyoneHoldsRole);
+    }
+
+    /** Keeps the lobby's all-units equipment shortcuts in step with the game options that allow them. */
+    private void updateLobbyEquipmentMenuItems() {
+        menuBar.setLobbyEquipmentOptions(
+              client.getGame().getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_BURST),
+              client.getGame().getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_HOT_LOAD));
+    }
+
+    /**
+     * Asks first, then gives up the Game Master role through the same /gm command that takes it, so the rules stay with
+     * the server. The menu entry that leads here is only shown while the local player holds the role.
+     */
+    private void giveUpGameMaster() {
+        int choice = JOptionPane.showConfirmDialog(frame,
+              Messages.getString("ClientGUI.giveUpGameMaster.message"),
+              Messages.getString("ClientGUI.giveUpGameMaster.title"),
+              JOptionPane.YES_NO_OPTION,
+              JOptionPane.QUESTION_MESSAGE);
+        if (choice == JOptionPane.YES_OPTION) {
+            client.sendChat("/gm");
+        }
+    }
+
+    /**
+     * Tells every player who won a passed Game Master vote and how the role is taken away again: the Game Master gives
+     * it up (the lobby's GM Mode button or the Game menu's Give Up Game Master entry), or the host turns off Allow Game
+     * Master in the game options. Shown after the vote dialog closes, so the outcome is not just a line of chat that
+     * scrolls away. Queued on the event thread so it does not block the game event that brought the result.
+     *
+     * @param gameMasterId the id of the player the vote made Game Master
+     */
+    private void announceNewGameMaster(int gameMasterId) {
+        Player gameMaster = client.getGame().getPlayer(gameMasterId);
+        String gameMasterName = (gameMaster != null)
+              ? gameMaster.getName()
+              : Messages.getString("GameMasterVoteDialog.unknownPlayer");
+        SwingUtilities.invokeLater(() -> new GameMasterAppointedDialog(frame,
+              Messages.getString("GameMasterVoteDialog.passed.message", gameMasterName)).setVisible(true));
+    }
+
+    /**
      * Updates the frame title to show the current round and phase information. The title format is: "PlayerName - Round
      * X - Phase phase - MegaMek" For phases before the game starts (lobby, selection, etc.), only shows: "PlayerName -
      * MegaMek"
      */
     private void updateFrameTitle() {
         StringBuilder title = new StringBuilder(client.getName());
+
+        // mark the local player as the Game Master right after their name, so it is clear who holds the role
+        if ((client.getLocalPlayer() != null) && client.getLocalPlayer().isGameMaster()) {
+            title.append(Messages.getString("ClientGUI.titleGameMaster"));
+        }
 
         GamePhase phase = client.getGame().getPhase();
         int round = client.getGame().getCurrentRound();
@@ -664,26 +952,45 @@ public class ClientGUI extends AbstractClientGUI
         FlareSpritesHandler flareSpritesHandler = new FlareSpritesHandler(this, client.getGame());
         sensorRangeSpriteHandler = new SensorRangeSpriteHandler(this, client.getGame());
         collapseWarningSpriteHandler = new CollapseWarningSpriteHandler(this);
+        sawClearingSpriteHandler = new SawClearingSpriteHandler(this, client.getGame());
+        BridgeBuildSpriteHandler bridgeBuildSpriteHandler = new BridgeBuildSpriteHandler(this, client.getGame());
+        BridgeRepairedSpriteHandler bridgeRepairedSpriteHandler = new BridgeRepairedSpriteHandler(this,
+              client.getGame());
+        BridgeDeploySpriteHandler bridgeDeploySpriteHandler = new BridgeDeploySpriteHandler(this, client.getGame());
         groundObjectSpriteHandler = new GroundObjectSpriteHandler(this, client.getGame());
         firingSolutionSpriteHandler = new FiringSolutionSpriteHandler(this, client);
         firingArcSpriteHandler = new FiringArcSpriteHandler(this);
         fleeZoneSpriteHandler = new FleeZoneSpriteHandler(this);
+        FortifyBuildSpriteHandler fortifyBuildSpriteHandler = new FortifyBuildSpriteHandler(this, client.getGame());
+        DugInSpriteHandler dugInSpriteHandler = new DugInSpriteHandler(this, client.getGame());
+        RubbleClearSpriteHandler rubbleClearSpriteHandler = new RubbleClearSpriteHandler(this, client.getGame());
+        CraneOperationSpriteHandler craneOperationSpriteHandler = new CraneOperationSpriteHandler(this,
+              client.getGame());
 
         spriteHandlers.addAll(List.of(movementEnvelopeHandler,
               movementModifierSpriteHandler,
               sensorRangeSpriteHandler,
               flareSpritesHandler,
               collapseWarningSpriteHandler,
+              sawClearingSpriteHandler,
+              bridgeBuildSpriteHandler,
+              bridgeRepairedSpriteHandler,
+              bridgeDeploySpriteHandler,
               groundObjectSpriteHandler,
               firingSolutionSpriteHandler,
               firingArcSpriteHandler,
-              fleeZoneSpriteHandler));
+              fleeZoneSpriteHandler,
+              fortifyBuildSpriteHandler,
+              dugInSpriteHandler,
+              rubbleClearSpriteHandler,
+              craneOperationSpriteHandler));
         spriteHandlers.forEach(BoardViewSpriteHandler::initialize);
     }
 
     @Override
     public void initialize() {
         menuBar = CommonMenuBar.getMenuBarForGame();
+        menuBar.setClientSupplier(() -> client);
         frame.setJMenuBar(menuBar);
         initializeFrame();
         super.initialize();
@@ -719,6 +1026,10 @@ public class ClientGUI extends AbstractClientGUI
 
         layoutFrame();
         menuBar.addActionListener(this);
+        // the Game Master role may already be settled, taken in the lobby before this window opened, and the
+        // options behind the lobby's all-units equipment shortcuts are set before it opens too
+        updateGameMasterMenuItems();
+        updateLobbyEquipmentMenuItems();
 
         aw = new AccessibilityDialog(this);
         aw.setLocation(0, 0);
@@ -739,16 +1050,29 @@ public class ClientGUI extends AbstractClientGUI
         setMiniReportVisible(GUIP.getMiniReportEnabled());
 
         setPlayerListDialog(new PlayerListDialog(frame, client, false));
+        setRoundsInAirDialog(new RoundsInAirDialog(frame, client));
 
         RulerDialog.color1 = GUIP.getRulerColor1();
         RulerDialog.color2 = GUIP.getRulerColor2();
 
         setBotCommandsDialog(new BotCommandsDialog(frame, this));
-        getBotCommandsDialog().add(new BotCommandsPanel(getClient(), audioService, null));
+        botCommandsPanel = new BotCommandsPanel(getClient(), audioService, null, this);
+        // The command bar holds the Commands button and is the strip the bot commands panel docks into, so it is put
+        // in place first; it stays even when the bot commands panel is off or floating.
+        commandBarPanel = new CommandBarPanel(this);
+        panTop.add(commandBarPanel, BorderLayout.NORTH);
+        maybeShowCommandBar();
+        // Place the panel in its configured location (floating dialog or docked strip) before first use.
+        setBotCommandsLocation(GUIP.getBotCommandsEnabled());
+        // The Bot Commands submenu can no longer carry a working menu accelerator, so wire the show/hide hotkey here.
+        if (controller != null) {
+            controller.registerCommandAction(KeyCommandBind.BOT_COMMANDS.cmd, GUIP::toggleBotCommandsEnabled);
+        }
 
         client.changePhase(GamePhase.UNKNOWN);
-        UnitLoadingDialog unitLoadingDialog = new UnitLoadingDialog(frame);
-        if (!MekSummaryCache.getInstance().isInitialized()) {
+        MekSummaryCache mekSummaryCache = MekSummaryCache.getInstance();
+        UnitLoadingDialog unitLoadingDialog = new UnitLoadingDialog(frame, mekSummaryCache);
+        if (!mekSummaryCache.isInitialized()) {
             unitLoadingDialog.setVisible(true);
         }
         mekSelectorDialog = new MegaMekUnitSelectorDialog(this, unitLoadingDialog);
@@ -767,7 +1091,23 @@ public class ClientGUI extends AbstractClientGUI
      * Called when the user selects the "Help->About" menu item.
      */
     private void showAbout() {
-        new CommonAboutDialog(frame).setVisible(true);
+        new MMAboutDialog(frame).show();
+    }
+
+    private void refreshUnitCache() {
+        MekSummaryCache mekSummaryCache = MekSummaryCache.getInstance();
+        UnitLoadingDialog unitLoadingDialog = new UnitLoadingDialog(frame, mekSummaryCache,
+              Messages.getString("CommonMenuBar.fileUnitsRefreshUnitCache"), !mekSummaryCache.isLoading());
+        MekSummaryCache.refreshUnitData(false);
+        unitLoadingDialog.setVisible(true);
+    }
+
+    private void rebuildUnitCache() {
+        MekSummaryCache mekSummaryCache = MekSummaryCache.getInstance();
+        UnitLoadingDialog unitLoadingDialog = new UnitLoadingDialog(frame, mekSummaryCache,
+              Messages.getString("CommonMenuBar.fileUnitsRebuildUnitCache"), !mekSummaryCache.isLoading());
+        MekSummaryCache.rebuildUnitData(false);
+        unitLoadingDialog.setVisible(true);
     }
 
     /**
@@ -971,7 +1311,10 @@ public class ClientGUI extends AbstractClientGUI
             gameOptionsDialog.setBounds(0, 0, gameOptionsDialog.getWidth(), gameOptionsDialog.getHeight());
         }
         if (networkInformationDialog != null) {
-            networkInformationDialog.setBounds(0, 0, networkInformationDialog.getWidth(), networkInformationDialog.getHeight());
+            networkInformationDialog.setBounds(0,
+                  0,
+                  networkInformationDialog.getWidth(),
+                  networkInformationDialog.getHeight());
         }
         if (commonSettingsDialog != null) {
             commonSettingsDialog.setBounds(0, 0, commonSettingsDialog.getWidth(), commonSettingsDialog.getHeight());
@@ -1066,16 +1409,19 @@ public class ClientGUI extends AbstractClientGUI
             case FILE_UNITS_REINFORCE_RAT:
                 ignoreHotKeys = true;
                 if (client.getLocalPlayer().getTeam() == Player.TEAM_UNASSIGNED) {
-                    doAlertDialog(Messages.getString("ClientGUI.openUnitListFileDialog.noReinforceMessage"),
-                          Messages.getString("ClientGUI.openUnitListFileDialog.noReinforceTitle"),
-                          JOptionPane.ERROR_MESSAGE);
+                    addToast(ToastLevel.ERROR,
+                          Messages.getString("ClientGUI.openUnitListFileDialog.noReinforceMessage"));
                     return;
                 }
                 getRandomArmyDialog().setVisible(true);
                 ignoreHotKeys = false;
                 break;
             case FILE_REFRESH_CACHE:
-                MekSummaryCache.refreshUnitData(false);
+                refreshUnitCache();
+                new Thread(mekSelectorDialog, Messages.getString("ClientGUI.mekSelectorDialog")).start();
+                break;
+            case FILE_REBUILD_CACHE:
+                rebuildUnitCache();
                 new Thread(mekSelectorDialog, Messages.getString("ClientGUI.mekSelectorDialog")).start();
                 break;
             case VIEW_CLIENT_SETTINGS:
@@ -1083,6 +1429,26 @@ public class ClientGUI extends AbstractClientGUI
                 break;
             case VIEW_GAME_OPTIONS:
                 showOptions();
+                break;
+            case GAME_GIVE_UP_GAME_MASTER:
+                giveUpGameMaster();
+                break;
+            case GAME_REQUEST_GAME_MASTER:
+                // the same /gm command the lobby button uses: it puts the role to a vote, and the vote dialog is
+                // where the request is followed and can be withdrawn, so there is nothing to confirm here first
+                client.sendChat("/gm");
+                break;
+            case GAME_ALL_MG_BURST_ON:
+            case GAME_ALL_MG_BURST_OFF:
+                if (curPanel instanceof ChatLounge lounge) {
+                    lounge.setAllBurstMg(event.getActionCommand().equals(GAME_ALL_MG_BURST_ON));
+                }
+                break;
+            case GAME_ALL_HOT_LOAD_ON:
+            case GAME_ALL_HOT_LOAD_OFF:
+                if (curPanel instanceof ChatLounge lounge) {
+                    lounge.setAllHotLoad(event.getActionCommand().equals(GAME_ALL_HOT_LOAD_ON));
+                }
                 break;
             case VIEW_NETWORK_INFORMATION:
                 showNetworkInformation();
@@ -1092,6 +1458,9 @@ public class ClientGUI extends AbstractClientGUI
                 break;
             case VIEW_PLAYER_LIST:
                 GUIP.togglePlayerListEnabled();
+                break;
+            case VIEW_ROUNDS_IN_AIR:
+                GUIP.toggleRoundsInAirEnabled();
                 break;
             case VIEW_ROUND_REPORT:
                 GUIP.toggleRoundReportEnabled();
@@ -1108,8 +1477,16 @@ public class ClientGUI extends AbstractClientGUI
             case VIEW_MINI_MAP:
                 GUIP.toggleMinimapEnabled();
                 break;
-            case VIEW_BOT_COMMANDS:
-                GUIP.toggleBotCommandsEnabled();
+            case VIEW_BOT_COMMANDS_OFF:
+                GUIP.setBotCommandsEnabled(false);
+                break;
+            case VIEW_BOT_COMMANDS_FLOAT:
+                GUIP.setBotCommandsLocation(BOT_COMMANDS_LOCATION_FLOATING);
+                GUIP.setBotCommandsEnabled(true);
+                break;
+            case VIEW_BOT_COMMANDS_DOCK:
+                GUIP.setBotCommandsLocation(BOT_COMMANDS_LOCATION_DOCKED);
+                GUIP.setBotCommandsEnabled(true);
                 break;
             case VIEW_TOGGLE_HEX_COORDS:
                 GUIP.toggleCoords();
@@ -1149,6 +1526,9 @@ public class ClientGUI extends AbstractClientGUI
             case VIEW_ZOOM_OUT:
                 boardViews.get(0).zoomOut();
                 break;
+            case VIEW_ZOOM_RESET:
+                boardViews.get(0).zoomReset();
+                break;
             case VIEW_ZOOM_OVERVIEW_TOGGLE:
                 boardViews.get(0).zoomOverviewToggle();
                 break;
@@ -1183,6 +1563,10 @@ public class ClientGUI extends AbstractClientGUI
                 GUIP.setFovSpottingMode(!GUIP.getFovSpottingMode());
                 boardViews.get(0).refreshDisplayables();
                 ((BoardView) boardViews.get(0)).clearHexImageCache();
+                break;
+            case VIEW_TOGGLE_SHOW_OBJECTS:
+                // the ground object sprite handler listens for the preference change and re-renders
+                GUIP.setShowObjectiveOverlays(!GUIP.getShowObjectiveOverlays());
                 break;
             case VIEW_TOGGLE_FIRING_SOLUTIONS:
                 GUIP.setShowFiringSolutions(!GUIP.getShowFiringSolutions());
@@ -1367,7 +1751,7 @@ public class ClientGUI extends AbstractClientGUI
         }
         return gameOptionsDialog;
     }
-    
+
     public NetworkInformationDialog getNetworkInformationDialog() {
         if (networkInformationDialog == null) {
             networkInformationDialog = new NetworkInformationDialog(this);
@@ -1410,6 +1794,7 @@ public class ClientGUI extends AbstractClientGUI
                 boardViews().forEach(bv -> ((BoardView) bv).getTilesetManager().reset());
                 break;
             case POINTBLANK_SHOT:
+            case VICTORY_SETUP:
             case SET_ARTILLERY_AUTO_HIT_HEXES:
             case DEPLOY_MINEFIELDS:
             case DEPLOYMENT:
@@ -1433,6 +1818,7 @@ public class ClientGUI extends AbstractClientGUI
         }
 
         maybeShowMinimap();
+        maybeShowCommandBar();
         maybeShowBotCommands();
         maybeShowUnitDisplay();
         maybeShowForceDisplay();
@@ -1501,6 +1887,17 @@ public class ClientGUI extends AbstractClientGUI
                 main = CG_EXCHANGE;
                 component.setName(main);
                 panMain.add(component, main);
+                break;
+            case VICTORY_SETUP:
+                component = new VictorySetupDisplay(this);
+                main = CG_BOARD_VIEW;
+                secondary = CG_VICTORY_SETUP_DISPLAY;
+                component.setName(secondary);
+                if (!mainNames.containsValue(main)) {
+                    panMain.add(panTop, main);
+                }
+                currPhaseDisplay = (StatusBarPhaseDisplay) component;
+                panSecondary.add(component, secondary);
                 break;
             case SET_ARTILLERY_AUTO_HIT_HEXES:
                 component = new SelectArtyAutoHitHexDisplay(this);
@@ -1733,25 +2130,51 @@ public class ClientGUI extends AbstractClientGUI
         }
     }
 
+    /**
+     * Shows the command bar during the phases that are played on the board and hides it everywhere else. Unlike the bot
+     * commands panel it has no on/off setting: the Commands button it carries is the only way to reach the game
+     * commands, so it is present whenever there is a game to issue them in.
+     */
+    private void maybeShowCommandBar() {
+        if (commandBarPanel == null) {
+            return;
+        }
+        GamePhase phase = getClient().getGame().getPhase();
+        boolean phaseAllowsCommandBar = phase.isOnMap() || phase.isReport();
+        commandBarPanel.setVisible(phaseAllowsCommandBar);
+        panTop.revalidate();
+        panTop.repaint();
+        logger.debug("[GameCommands] command bar visible={} in phase {}", phaseAllowsCommandBar, phase);
+    }
+
     private void maybeShowBotCommands() {
         GamePhase phase = getClient().getGame().getPhase();
+        boolean phaseAllowsPanel;
         if (phase.isReport()) {
-            int action = GUIP.getBotCommandsAutoDisplayReportPhase();
-            if (action == GUIPreferences.SHOW) {
-                GUIP.setBotCommandsEnabled(true);
-            } else if (action == GUIPreferences.HIDE) {
-                GUIP.setBotCommandsEnabled(false);
-            }
+            phaseAllowsPanel = GUIP.getBotCommandsAutoDisplayReportPhase() != GUIPreferences.HIDE;
         } else if (phase.isOnMap()) {
-            int action = GUIP.getBotCommandsAutoDisplayNonReportPhase();
-            if (action == GUIPreferences.SHOW) {
-                GUIP.setBotCommandsEnabled(true);
-            } else if (action == GUIPreferences.HIDE) {
-                GUIP.setBotCommandsEnabled(false);
-            }
+            phaseAllowsPanel = GUIP.getBotCommandsAutoDisplayNonReportPhase() != GUIPreferences.HIDE;
         } else {
-            GUIP.setBotCommandsEnabled(false);
+            // Lounge and other non-board phases never show the panel, but the player's on/off choice is kept.
+            phaseAllowsPanel = false;
         }
+        // BOT_COMMANDS_ENABLED is the persistent user choice (Off/Float/Dock); honor it here, never overwrite it,
+        // so the chosen mode is remembered across phases and across sessions.
+        setBotCommandsLocation(GUIP.getBotCommandsEnabled() && phaseAllowsPanel && gameHasBots());
+    }
+
+    /**
+     * @return {@code true} if any player in the game is a bot. Without one there is nobody the bot commands panel could
+     *       give orders to, so it stays hidden - leaving the command bar with only the Commands button - until a bot
+     *       joins (e.g. when a player is replaced by one).
+     */
+    private boolean gameHasBots() {
+        for (Player player : getClient().getGame().getPlayersList()) {
+            if (player.isBot()) {
+                return true;
+            }
+        }
+        return false;
     }
 
     /** Shows or hides the minimap based on the current menu setting. */
@@ -1850,6 +2273,22 @@ public class ClientGUI extends AbstractClientGUI
         }
     }
 
+    void setRoundsInAirVisible(boolean visible) {
+        if (getRoundsInAirDialog() != null) {
+            if (visible) {
+                // Push the current "reveal all artillery" preference to the server on open. The preference change
+                // listener only fires the push when the toggle CHANGES, so a value already set to true at game start
+                // would otherwise never reach the server and enemy rounds would stay hidden. The server's reply
+                // refreshes the list.
+                getClient().sendArtilleryRevealPreference(
+                      GUIP.getBoolean(GUIPreferences.REVEAL_ALL_ARTILLERY_ROUNDS));
+                getRoundsInAirDialog().refresh();
+            }
+            getRoundsInAirDialog().setVisible(visible);
+            conditionalRequestFocus(visible);
+        }
+    }
+
     /** Shows or hides the Unit Display based on the current menu setting. */
     public void maybeShowUnitDisplay() {
         GamePhase phase = getClient().getGame().getPhase();
@@ -1908,7 +2347,7 @@ public class ClientGUI extends AbstractClientGUI
               != null)) {
             List<Entity> es = getClient().getGame().getEntitiesVector();
             if (!es.isEmpty()) {
-                getUnitDisplay().displayEntity(es.get(0));
+                getUnitDisplay().displayEntity(es.getFirst());
             }
         }
 
@@ -1917,11 +2356,36 @@ public class ClientGUI extends AbstractClientGUI
         }
     }
 
-    void setBotCommandsDialogVisible(boolean visible) {
-        if (getBotCommandsDialog() != null) {
-            getBotCommandsDialog().setVisible(visible);
-            conditionalRequestFocus(visible);
+    /**
+     * Places the bot commands panel in its configured location and sets its visibility. Mirrors
+     * {@link #setUnitDisplayLocation(boolean)}: the single panel instance is reparented between the floating dialog and
+     * the command bar at the top of the board area, so no command functionality is lost when switching. Floating mode
+     * keeps the panel's original size and two-row layout; docked mode uses a single-row strip that shares the command
+     * bar with the Commands button.
+     *
+     * @param visible whether the bot commands panel should be shown
+     */
+    void setBotCommandsLocation(boolean visible) {
+        if ((botCommandsPanel == null) || (getBotCommandsDialog() == null) || (commandBarPanel == null)) {
+            return;
         }
+        boolean docked = GUIP.getBotCommandsLocation() == BOT_COMMANDS_LOCATION_DOCKED;
+        botCommandsPanel.setDockedLayout(docked);
+        if (docked) {
+            getBotCommandsDialog().setVisible(false);
+            commandBarPanel.dockBotCommandsPanel(botCommandsPanel);
+            botCommandsPanel.setVisible(visible);
+            logger.debug("[BotPanel] docked in the command bar, visible={}", visible);
+        } else {
+            commandBarPanel.undockBotCommandsPanel();
+            getBotCommandsDialog().add(botCommandsPanel);
+            botCommandsPanel.setVisible(true);
+            getBotCommandsDialog().setVisible(visible);
+            logger.debug("[BotPanel] floating dialog, visible={}", visible);
+        }
+        panTop.revalidate();
+        panTop.repaint();
+        conditionalRequestFocus(visible);
     }
 
     private void saveSplitPaneLocations() {
@@ -2221,6 +2685,7 @@ public class ClientGUI extends AbstractClientGUI
      *       to the player, and is only being returned so the calling function can see the answer to the question and
      *       the state of the "Show again?" question.
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public ConfirmDialog doWarnNoBotherDialog(String title, String question) {
         ConfirmDialog confirm = new ConfirmDialog(frame, title, question, true);
         confirm.setVisible(true);
@@ -2249,6 +2714,22 @@ public class ClientGUI extends AbstractClientGUI
     }
 
     /**
+     * Loads a unit file onto a player as reinforcements, arriving next round.
+     *
+     * <p>Public so that a gamemaster tool which already knows which player it is setting up can send units to them
+     * without asking again in a second dialog.</p>
+     *
+     * @param player The player the units are for
+     */
+    public void reinforceFromFile(Player player) {
+        // the team check below is skipped because the caller has just set one. A team change is queued by the
+        // server and applied at the end of the round, so the player is still on no team at this instant even
+        // though they will have one before anything of theirs deploys; checking now would refuse the very case
+        // the gamemaster tools exist to handle.
+        loadListFile(player, true, false);
+    }
+
+    /**
      * Allow the player to select a MegaMek Unit List file to load. The
      * <code>Entity</code>s in the file will replace any that the player has
      * already selected. As such, this method should only be called in the chat lounge. The file can record damage
@@ -2257,13 +2738,25 @@ public class ClientGUI extends AbstractClientGUI
      * @param player The player to add the units to
      */
     protected void loadListFile(Player player, boolean reinforce) {
+        loadListFile(player, reinforce, true);
+    }
+
+    /**
+     * Loads a unit file onto a player.
+     *
+     * @param player        The player to add the units to
+     * @param reinforce     Whether the units arrive as reinforcements during a game
+     * @param requireATeam  Whether to refuse a player who is on no team. A gamemaster tool that has just assigned
+     *                      one passes {@code false}, because the change does not reach the board until the end of
+     *                      the round and the player has no team yet at the moment this is called
+     */
+    protected void loadListFile(Player player, boolean reinforce, boolean requireATeam) {
         if (player != null) {
             boolean addedUnits = false;
 
-            if (reinforce && (player.getTeam() == Player.TEAM_UNASSIGNED)) {
-                doAlertDialog(Messages.getString("ClientGUI.openUnitListFileDialog.noReinforceMessage"),
-                      Messages.getString("ClientGUI.openUnitListFileDialog.noReinforceTitle"),
-                      JOptionPane.ERROR_MESSAGE);
+            if (requireATeam && reinforce && (player.getTeam() == Player.TEAM_UNASSIGNED)) {
+                addToast(ToastLevel.ERROR,
+                      Messages.getString("ClientGUI.openUnitListFileDialog.noReinforceMessage"));
                 return;
             }
             // Build the "load unit" dialog, if necessary.
@@ -2286,8 +2779,12 @@ public class ClientGUI extends AbstractClientGUI
 
             try {
                 // Read the units from the file.
-                final Vector<Entity> loadedUnits = new MULParser(unitFile,
-                      (GameOptions) getClient().getGame().getOptions()).getEntities();
+                final MULParser parser = new MULParser(unitFile,
+                      (GameOptions) getClient().getGame().getOptions());
+                if (!MULVersionValidator.isCorrectVersion(frame, parser)) {
+                    return;
+                }
+                final Vector<Entity> loadedUnits = parser.getEntities();
 
                 // in the Lounge, set default deployment to "Before Game Start", round 0
                 // but in a game in-progress, deploy at the start of next round
@@ -2522,7 +3019,7 @@ public class ClientGUI extends AbstractClientGUI
         // from the same directory that MM is in
         var mmlPath = CP.getMmlPath();
         var autodetect = false;
-        if (null == mmlPath || mmlPath.isBlank()) {
+        if (mmlPath == null || mmlPath.isBlank()) {
             autodetect = true;
             mmlPath = "MegaMekLab.jar";
         }
@@ -2609,8 +3106,8 @@ public class ClientGUI extends AbstractClientGUI
     }
 
     /**
-     * Shows the Ruler/LOS dialog. This consolidates the old LOSDialog functionality into the RulerDialog which
-     * provides distance, to-hit modifiers, and an elevation cross-section diagram.
+     * Shows the Ruler/LOS dialog. This consolidates the old LOSDialog functionality into the RulerDialog which provides
+     * distance, to-hit modifiers, and an elevation cross-section diagram.
      */
     private void showLOSSettingDialog() {
         if (ruler != null) {
@@ -2669,7 +3166,54 @@ public class ClientGUI extends AbstractClientGUI
         }
     }
 
+    /**
+     * Applies the player's sensor preference to their own units, picking for each one the first sensor family on the
+     * preference list that the unit actually carries a sensor for.
+     *
+     * <p>Example: the preference lists Active Probe, then Infrared, then Magscan. A Marauder MAD-3R carries Mek
+     * Radar, Mek IR, Mek Magscan and Mek Seismic but no probe, so it deploys on Mek IR instead of the Mek Radar it
+     * would otherwise have defaulted to. A Cicada CDA-3M carrying a Beagle Active Probe still deploys on the
+     * probe.</p>
+     *
+     * <p>Units belonging to anyone else are left alone, bots included, so this never changes what Princess or CASPAR
+     * do. A unit whose sensor the player picked by hand is left alone as well, in the lobby or in round zero.</p>
+     *
+     * <p>A unit that has already deployed is never touched. Changing the preference part-way through a game switches
+     * the sensors of reinforcements still waiting to come on, and nothing that is already on the board.</p>
+     */
+    private void setSensorPrefs() {
+        List<SensorFamily> preferenceOrder = GUIP.getSensorPreferenceOrder();
+        Player localPlayer = client.getLocalPlayer();
+        for (Entity entity : client.getGame().getEntitiesVector()) {
+            if (!entity.getOwner().equals(localPlayer)
+                  || entity.hasCustomSensorChoice()
+                  || entity.isDeployed()) {
+                continue;
+            }
+            int preferredSensorIndex = SensorFamily.preferredSensorIndex(entity, preferenceOrder);
+            if (preferredSensorIndex >= 0) {
+                entity.setNextSensor(entity.getSensors().elementAt(preferredSensorIndex));
+                client.sendSensorChange(entity.getId(), preferredSensorIndex);
+            }
+        }
+    }
+
     private final GameListener gameListener = new GameListenerAdapter() {
+
+        @Override
+        public void gamePollChange(GamePollEvent evt) {
+            updateGameMasterVoteDialog(evt.getPoll());
+        }
+
+        @Override
+        public void gameBoardChanged(GameBoardChangeEvent e) {
+            // Keep the Rounds in the Air window current the moment in-flight artillery changes. The artillery packet
+            // arrives after the phase-change event, so a phase-change-only refresh would lag a phase (and miss
+            // off-board counter-battery rounds entirely until the next phase).
+            if (roundsInAirDialog != null) {
+                roundsInAirDialog.refresh();
+            }
+        }
 
         @Override
         public void gameBoardNew(GameBoardNewEvent e) {
@@ -2694,7 +3238,10 @@ public class ClientGUI extends AbstractClientGUI
                           ClientGUI.this,
                           null,
                           boardId));
-                    newMinimap.setVisible(true);
+                    // A board arriving during the lounge (lobby-built battlefield) must not pop up the minimap;
+                    // the boards are re-sent at game start (EXCHANGE), which shows it as usual.
+                    boolean isInLounge = client.getGame().getPhase().isLounge();
+                    newMinimap.setVisible(!isInLounge);
                     miniMaps.put(boardId, newMinimap);
                     boardViews.put(boardId, boardView);
                     boardView.getPanel().setPreferredSize(clientGuiPanel.getSize());
@@ -2708,6 +3255,8 @@ public class ClientGUI extends AbstractClientGUI
                     boardView.addOverlay(new KeyBindingsOverlay(boardView));
                     boardView.addOverlay(new PlanetaryConditionsOverlay(boardView));
                     boardView.addOverlay(new TurnDetailsOverlay(boardView));
+                    toastOverlay = new BoardToastOverlay(boardView, ClientGUI.this);
+                    boardView.addOverlay(toastOverlay);
                     boardView.setTooltipProvider(new TWBoardViewTooltip(client.getGame(), ClientGUI.this, boardView));
                     boardViewsContainer.updateMapTabs();
                     ruler = new RulerDialog(frame, boardView, client.getGame());
@@ -2728,6 +3277,13 @@ public class ClientGUI extends AbstractClientGUI
                     currPhaseDisplay.setStatusBarWithNotDonePlayers();
                 }
             }
+            // The bot commands panel is hidden while the game has no bots; a player change can be a bot joining
+            // (e.g. replacing a dropped player) or the last bot leaving, so re-evaluate the panel.
+            maybeShowBotCommands();
+            // the Game Master role may have changed hands, so keep the title's marker and the Game menu's
+            // Game Master entries in step
+            updateFrameTitle();
+            updateGameMasterMenuItems();
         }
 
         @Override
@@ -2768,6 +3324,22 @@ public class ClientGUI extends AbstractClientGUI
             GamePhase phase = getClient().getGame().getPhase();
             switchPanel(phase);
 
+            // Keep the Rounds in the Air list current as rounds are declared, fly, and land each phase.
+            if (roundsInAirDialog != null) {
+                roundsInAirDialog.refresh();
+            }
+
+            // Special-report packets replay the whole phase report each time they are sent, so the "already toasted"
+            // history only has to span a single phase. Clearing it here also lets a line that genuinely recurs in a
+            // later phase toast again.
+            toastedReportEntries.clear();
+
+            // Once per round, remind the player of own platoons busy raising bridges (TO:AUE); building
+            // platoons are ineligible for all phases, so no phase display ever selects them
+            if (phase.isMovement()) {
+                showBridgeBuildProgressToasts();
+            }
+
             // Reset spotting FOV mode at game start to prevent player confusion
             if (phase.isLounge()) {
                 GUIP.setFovSpottingMode(false);
@@ -2775,6 +3347,7 @@ public class ClientGUI extends AbstractClientGUI
 
             if (phase.isDeployment()) {
                 setWeaponOrderPrefs(false);
+                setSensorPrefs();
             }
 
             menuBar.setPhase(phase);
@@ -2827,12 +3400,13 @@ public class ClientGUI extends AbstractClientGUI
                 reportDisplayResetRerollInitiative();
 
                 if (!(getClient() instanceof BotClient)) {
-                    doAlertDialog(Messages.getString("ClientGUI.dialogTacticalGeniusReport"), e.getReport());
+                    showReportAsToasts(Messages.getString("ClientGUI.dialogTacticalGeniusReport"),
+                          e.getReport());
                 }
             } else {
                 // Continued movement after getting up
                 if (!(getClient() instanceof BotClient)) {
-                    doAlertDialog(Messages.getString("ClientGUI.dialogMovementReport"), e.getReport());
+                    showReportAsToasts(Messages.getString("ClientGUI.dialogMovementReport"), e.getReport());
                 }
             }
         }
@@ -2905,6 +3479,11 @@ public class ClientGUI extends AbstractClientGUI
             if (curPanel instanceof ChatLounge cl) {
                 cl.updateMapSettings(getClient().getMapSettings());
             }
+
+            // the host may have turned Allow Game Master on or off, which offers or takes away the Become entry,
+            // or the burst fire and hot-loading options behind the lobby's all-units equipment shortcuts
+            updateGameMasterMenuItems();
+            updateLobbyEquipmentMenuItems();
         }
 
         @Override
@@ -2915,11 +3494,17 @@ public class ClientGUI extends AbstractClientGUI
         }
 
         @Override
+        public void gameToast(GameToastEvent event) {
+            Entity entity = client.getGame().getEntity(event.entityId());
+            addToast(toastLevelFor(event.level()), event.message(), entity);
+        }
+
+        @Override
         public void gameClientFeedbackRequest(GameCFREvent gameCFREvent) {
             // Note: entity may be null for CFR types that don't use entityId (e.g., TAG_TARGET, TELEGUIDED_TARGET)
             // Each case handles null checking as appropriate
             Entity entity = client.getGame().getEntity(gameCFREvent.getEntityId());
-
+            int direction = gameCFREvent.getDirection();
             Object result;
             String input;
 
@@ -2936,14 +3521,17 @@ public class ClientGUI extends AbstractClientGUI
 
                     MovePath stepForward = new MovePath(client.getGame(), entity);
                     MovePath stepBackward = new MovePath(client.getGame(), entity);
-                    stepForward.addStep(MoveStepType.FORWARDS);
-                    stepBackward.addStep(MoveStepType.BACKWARDS);
+                    boolean bNoCost = !Game.rulesManager.getRulesMovement().getDominoDisplacementCostsMP();
+                    stepForward.addStep(MoveStepType.FORWARDS, bNoCost);
+                    stepBackward.addStep(MoveStepType.BACKWARDS, bNoCost);
                     stepForward.compile(client.getGame(), entity, false);
                     stepBackward.compile(client.getGame(), entity, false);
                     Object[] options;
                     MovePath[] paths;
                     int optionType;
-                    if (stepForward.isMoveLegal() && stepBackward.isMoveLegal()) {
+                    if (Game.rulesManager.getRulesMovement().isDominoMoveLegal(direction, entity, stepForward, true)
+                          && Game.rulesManager.getRulesMovement().isDominoMoveLegal(direction, entity, stepBackward,
+                          false)) {
                         options = new Object[3];
                         paths = new MovePath[3];
                         options[0] = Messages.getString("CFRDomino.Forward", stepForward.getMpUsed());
@@ -2953,12 +3541,21 @@ public class ClientGUI extends AbstractClientGUI
                         paths[1] = stepBackward;
                         paths[2] = null;
                         optionType = JOptionPane.YES_NO_CANCEL_OPTION;
-                    } else if (stepForward.isMoveLegal()) {
+                    } else if (Game.rulesManager.getRulesMovement().isDominoMoveLegal(direction, entity, stepForward, true)) {
                         options = new Object[2];
                         paths = new MovePath[2];
                         options[0] = Messages.getString("CFRDomino.Forward", stepForward.getMpUsed());
                         options[1] = Messages.getString("CFRDomino.NoAction");
                         paths[0] = stepForward;
+                        paths[1] = null;
+                        optionType = JOptionPane.YES_NO_OPTION;
+                    } else if (Game.rulesManager.getRulesMovement().isDominoMoveLegal(direction, entity, stepBackward
+                          ,false)) {
+                        options = new Object[2];
+                        paths = new MovePath[2];
+                        options[0] = Messages.getString("CFRDomino.Backward", stepBackward.getMpUsed());
+                        options[1] = Messages.getString("CFRDomino.NoAction");
+                        paths[0] = stepBackward;
                         paths[1] = null;
                         optionType = JOptionPane.YES_NO_OPTION;
                     } else {
@@ -3002,19 +3599,19 @@ public class ClientGUI extends AbstractClientGUI
                         }
                         amsOptions.add(waaMsg);
                     }
-                    
-                    // Updated AMS selection code for dealing with Multi_AMS, Playtest3 and standard selection
+
+                    // Updated AMS selection code for dealing with Multi_AMS and standard selection
                     JList amsList = new JList(amsOptions.toArray());
                     JScrollPane amsScrollPane = new JScrollPane(amsList);
                     if (entity.getGame().getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_MULTI_USE_AMS)) {
                         amsList.setSelectionModel(new AmsAssignGUI(amsList, amsOptions.size()));
-                    } else if (entity.getGame().getOptions().booleanOption(OptionsConstants.PLAYTEST_3)) {
+                    } else if (Game.rulesManager.getRulesEquipment().getAMSMultiShot()) {
                         amsList.setSelectionModel(new AmsAssignGUI(amsList, 2));
                     } else {
                         amsList.setSelectionModel(new AmsAssignGUI(amsList, 1));
                     }
 
-                    int amsResult = JOptionPane.showConfirmDialog(frame, 
+                    int amsResult = JOptionPane.showConfirmDialog(frame,
                           amsScrollPane,
                           Messages.getString("CFRAMSAssign.Message", entity.getDisplayName()),
                           JOptionPane.OK_CANCEL_OPTION, JOptionPane.QUESTION_MESSAGE
@@ -3022,17 +3619,17 @@ public class ClientGUI extends AbstractClientGUI
 
                     int[] selectedItems = amsList.getSelectedIndices();
                     if (amsResult == JOptionPane.OK_OPTION && !(selectedItems.length == 1
-                          && amsList.getSelectedValue() == "NONE") ) {
+                          && amsList.getSelectedValue() == "NONE")) {
                         // Due to the "None" option, reduce all selected index values by 1.
                         // This makes "None" a -1 value.
                         for (int i = 0; i < selectedItems.length; i++) {
-                            selectedItems[i] = selectedItems[i]-1;
+                            selectedItems[i] = selectedItems[i] - 1;
                         }
                         client.sendAMSAssignCFRResponse(selectedItems);
                     } else {
                         client.sendAMSAssignCFRResponse(null);
                     }
-                    
+
                     break;
                 case CFR_APDS_ASSIGN:
                     if (entity == null) {
@@ -3156,7 +3753,7 @@ public class ClientGUI extends AbstractClientGUI
                           JOptionPane.QUESTION_MESSAGE,
                           null,
                           targetDescriptions.toArray(),
-                          targetDescriptions.get(0));
+                          targetDescriptions.getFirst());
                     if (input != null) {
                         for (int i = 0; i < targetDescriptions.size(); i++) {
                             if (input.equals(targetDescriptions.get(i))) {
@@ -3194,7 +3791,7 @@ public class ClientGUI extends AbstractClientGUI
                           JOptionPane.QUESTION_MESSAGE,
                           null,
                           TAGTargetDescriptions.toArray(),
-                          TAGTargetDescriptions.get(0));
+                          TAGTargetDescriptions.getFirst());
                     if (input != null) {
                         for (int i = 0; i < TAGTargetDescriptions.size(); i++) {
                             if (input.equals(TAGTargetDescriptions.get(i))) {
@@ -3249,6 +3846,39 @@ public class ClientGUI extends AbstractClientGUI
     @Override
     public Map<String, AbstractClient> getLocalBots() {
         return client.getBots();
+    }
+
+    /**
+     * What each player's units were generated for - faction, command, year and rating - keyed by
+     * player id. Recorded when an army generator adds units, and used by force organization to build
+     * a structure the way that faction would.
+     *
+     * <p>Client-local and deliberately not transmitted: it describes a choice this client's user made
+     * in a dialog, and only this client generates on their behalf. It is not game state.</p>
+     */
+    private final Map<Integer, GenerationContext> generationContexts = new HashMap<>();
+
+    /**
+     * Records what a player's newly generated units were rolled for, replacing any earlier record.
+     * Callers record only what a generator actually asked the player, never a default, so that a
+     * later roll on a generator that knows nothing cannot erase a real choice.
+     *
+     * @param playerId the owner of the generated units
+     * @param context  what they were generated for
+     */
+    public void setGenerationContext(int playerId, GenerationContext context) {
+        generationContexts.put(playerId, context);
+    }
+
+    /**
+     * @param playerId the player to look up
+     *
+     * @return what that player's units were generated for, or {@code null} when nothing has been
+     *       recorded for them - they have generated nothing, or only from a generator that asks for
+     *       no faction, command or rating
+     */
+    public @Nullable GenerationContext getGenerationContext(int playerId) {
+        return generationContexts.get(playerId);
     }
 
     /**
@@ -3440,14 +4070,34 @@ public class ClientGUI extends AbstractClientGUI
 
         AddBotUtil util = new AddBotUtil();
         Map<String, BehaviorSettings> newBotSettings = rpd.getNewBots();
+        Map<String, AIType> newBotTypes = rpd.getNewBotTypes();
         for (String ghostName : newBotSettings.keySet()) {
             StringBuilder message = new StringBuilder();
-            Princess princess = util.replaceGhostWithBot(newBotSettings.get(ghostName), ghostName, client, message);
+            AIType aiType = newBotTypes.getOrDefault(ghostName, AIType.PRINCESS);
+            BotClient botClient = null;
+            try {
+                botClient = util.replaceGhostWithBot(aiType, newBotSettings.get(ghostName), ghostName,
+                      client, message);
+            } catch (Exception exception) {
+                logger.error(exception, "Failed to stand up a " + aiType + " bot for " + ghostName);
+            }
+            // An experimental bot that fails to stand up must not leave the seat empty: the player asked
+            // for a bot in that slot, so Princess takes it instead. Guarded like the first attempt, so a
+            // failure here degrades to an empty seat and a log line rather than a crash.
+            if ((botClient == null) && (AIType.PRINCESS != aiType)) {
+                message.append(" Falling back to Princess. ");
+                try {
+                    botClient = util.replaceGhostWithBot(AIType.PRINCESS, newBotSettings.get(ghostName),
+                          ghostName, client, message);
+                } catch (Exception exception) {
+                    logger.error(exception, "The Princess fallback failed for " + ghostName + " too");
+                }
+            }
             systemMessage(message.toString());
-            // Make this princess a locally owned bot. This way it can be configured, and if on the lobby
+            // Make this bot a locally owned bot. This way it can be configured, and if on the lobby
             // it will faithfully press Done when the local player does.
-            if (princess != null) {
-                getLocalBots().put(ghostName, princess);
+            if (botClient != null) {
+                getLocalBots().put(ghostName, botClient);
             }
         }
 
@@ -3488,6 +4138,13 @@ public class ClientGUI extends AbstractClientGUI
         switch (e.getName()) {
             case GUIPreferences.MINI_MAP_ENABLED -> setMapVisible(GUIP.getMinimapEnabled());
             case GUIPreferences.PLAYER_LIST_ENABLED -> setPlayerListVisible(GUIP.getPlayerListEnabled());
+            case GUIPreferences.ROUNDS_IN_AIR_ENABLED -> setRoundsInAirVisible(GUIP.getRoundsInAirEnabled());
+            case GUIPreferences.REVEAL_ALL_ARTILLERY_ROUNDS -> {
+                getClient().sendArtilleryRevealPreference(GUIP.getBoolean(GUIPreferences.REVEAL_ALL_ARTILLERY_ROUNDS));
+                if (roundsInAirDialog != null) {
+                    roundsInAirDialog.refresh();
+                }
+            }
             case GUIPreferences.UNIT_DISPLAY_ENABLED, GUIPreferences.UNIT_DISPLAY_LOCATION ->
                   setUnitDisplayVisible(GUIP.getUnitDisplayEnabled());
             case GUIPreferences.FORCE_DISPLAY_ENABLED -> setForceDisplayVisible(GUIP.getForceDisplayEnabled());
@@ -3501,11 +4158,18 @@ public class ClientGUI extends AbstractClientGUI
                 setWeaponOrderPrefs(true);
                 getUnitDisplay().displayEntity(getUnitDisplay().getCurrentEntity());
             }
+            case GUIPreferences.SENSOR_PREFERENCE_ORDER -> {
+                setSensorPrefs();
+                getUnitDisplay().displayEntity(getUnitDisplay().getCurrentEntity());
+            }
             case GUIPreferences.SOUND_BING_FILENAME_CHAT,
                  GUIPreferences.SOUND_BING_FILENAME_MY_TURN,
                  GUIPreferences.SOUND_BING_FILENAME_OTHERS_TURN -> audioService.loadSoundFiles();
             case GUIPreferences.MASTER_VOLUME -> audioService.setVolume();
-            case GUIPreferences.BOT_COMMANDS_ENABLED -> setBotCommandsDialogVisible(GUIP.getBotCommandsEnabled());
+            case GUIPreferences.BOT_COMMANDS_ENABLED, GUIPreferences.BOT_COMMANDS_LOCATION ->
+                // Route through maybeShowBotCommands() so the phase rules (non-board phases never show the panel)
+                // are enforced consistently, whether the change came from the menu, the hotkey, or a phase change.
+                  maybeShowBotCommands();
         }
     }
 
@@ -3582,6 +4246,16 @@ public class ClientGUI extends AbstractClientGUI
      */
     public void showCollapseWarning(Collection<BoardLocation> warnList) {
         collapseWarningSpriteHandler.setCFWarningSprites(warnList);
+    }
+
+    /**
+     * Shows saw clearing indicators on the given hexes in the BoardView.
+     *
+     * @param cutHexes a map of board locations to turns remaining for saw clearing
+     */
+    @Deprecated(since = "0.51.0", forRemoval = true)
+    public void showSawClearingHexes(Map<BoardLocation, Integer> cutHexes) {
+        sawClearingSpriteHandler.setSawClearingSprites(cutHexes);
     }
 
     /**
@@ -3695,13 +4369,13 @@ public class ClientGUI extends AbstractClientGUI
     }
 
     /**
-     * Updates the Nova Networks menu enablement based on whether the local player
-     * has any Nova CEWS units in their force.
+     * Updates the Nova Networks menu enablement based on whether the local player has any Nova CEWS units in their
+     * force.
      */
     private void updateNovaNetworksMenu() {
         boolean hasNovaUnits = client.getGame().getEntitiesVector().stream()
-            .filter(entity -> entity.getOwner().equals(client.getLocalPlayer()))
-            .anyMatch(Entity::hasNovaCEWS);
+              .filter(entity -> entity.getOwner().equals(client.getLocalPlayer()))
+              .anyMatch(Entity::hasNovaCEWS);
         menuBar.setEnabled(VIEW_NOVA_NETWORKS, hasNovaUnits);
     }
 
