@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2008 - Ben Mazur (bmazur@sev.org).
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -48,7 +48,6 @@ import java.awt.geom.Point2D;
 import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
-import java.lang.System;
 import java.util.*;
 import java.util.List;
 import java.util.Queue;
@@ -60,9 +59,7 @@ import javax.swing.plaf.metal.MetalTheme;
 
 import megamek.MMConstants;
 import megamek.client.TimerSingleton;
-import megamek.client.bot.princess.PathEnumerator;
-import megamek.client.bot.princess.Princess;
-import megamek.client.bot.princess.geometry.ConvexBoardArea;
+import megamek.client.bot.princess.MinefieldDeploymentPlanner;
 import megamek.client.event.BoardViewEvent;
 import megamek.client.event.BoardViewListener;
 import megamek.client.ui.IDisplayable;
@@ -77,6 +74,7 @@ import megamek.client.ui.clientGUI.boardview.sprite.isometric.IsometricWreckSpri
 import megamek.client.ui.clientGUI.boardview.toolTip.BoardViewTooltipProvider;
 import megamek.client.ui.dialogs.phaseDisplay.EntityChoiceDialog;
 import megamek.client.ui.tileset.TilesetManager;
+import megamek.client.ui.util.EntityWreckHelper;
 import megamek.client.ui.util.FontHandler;
 import megamek.client.ui.util.ImageCache;
 import megamek.client.ui.util.KeyBindReceiver;
@@ -111,6 +109,7 @@ import megamek.common.compute.Compute;
 import megamek.common.compute.ComputeArc;
 import megamek.common.compute.ComputeECM;
 import megamek.common.enums.MoveStepType;
+import megamek.common.equipment.EquipmentActivation;
 import megamek.common.equipment.Minefield;
 import megamek.common.equipment.Mounted;
 import megamek.common.equipment.WeaponType;
@@ -344,6 +343,10 @@ public final class BoardView extends AbstractBoardView
     // highlighted entity hexes (for Nova CEWS network dialog)
     private List<Coords> highlightedEntityHexes = new ArrayList<>();
 
+    // highlighted demolition charge hexes (selected in the Detonate Charges dialog) - drawn with a bold yellow/black
+    // hazard outline, separate from the plain entity highlight above
+    private List<Coords> demolitionChargeHighlightHexes = new ArrayList<>();
+
     private Coords rulerStart;
     private Coords rulerEnd;
     private Color rulerStartColor;
@@ -513,13 +516,20 @@ public final class BoardView extends AbstractBoardView
                     tileManager.reloadImage(entity);
                 }
 
-                // for units that have been blown up, damaged or ejected, force a reload
-                if ((gameEntityChangeEvent.getOldEntity() != null) && ((entity.getDamageLevel()
-                      != gameEntityChangeEvent.getOldEntity()
-                      .getDamageLevel()) || (entity.isDestroyed()
-                      != gameEntityChangeEvent.getOldEntity().isDestroyed()) || (
-                      entity.getCrew().isEjected()
-                            != gameEntityChangeEvent.getOldEntity().getCrew().isEjected()))) {
+                // For units that have been blown up, damaged, ejected or handed to another player (a traitor
+                // switch means the new owner's camouflage), force a reload. Without the old state we cannot tell
+                // whether the damage changed, so reload to be safe; the reload reuses the cached image when
+                // nothing shown in fact changed, so it costs nothing in the common case.
+                final Entity oldEntity = gameEntityChangeEvent.getOldEntity();
+                boolean shownStateChanged = true;
+                if (oldEntity != null) {
+                    boolean damageChanged = entity.getDamageLevel() != oldEntity.getDamageLevel();
+                    boolean destructionChanged = entity.isDestroyed() != oldEntity.isDestroyed();
+                    boolean ownerChanged = entity.getOwnerId() != oldEntity.getOwnerId();
+                    boolean ejectionChanged = entity.getCrew().isEjected() != oldEntity.getCrew().isEjected();
+                    shownStateChanged = damageChanged || destructionChanged || ownerChanged || ejectionChanged;
+                }
+                if (shownStateChanged) {
                     tileManager.reloadImage(entity);
                 }
 
@@ -1052,7 +1062,25 @@ public final class BoardView extends AbstractBoardView
         }
     }
 
+    /**
+     * Returns whether a unit that finished a move can have that move animated. A unit that mounted a DropShip, was
+     * recovered by a carrier or left the board during its move has no position left, so there is no hex to draw its
+     * ghost sprite in.
+     *
+     * @param entity the unit that finished a move
+     *
+     * @return {@code true} when the unit still has a position to animate from
+     */
+    static boolean canAnimateMove(@Nullable Entity entity) {
+        return (entity != null) && (entity.getPosition() != null);
+    }
+
     void addMovingUnit(Entity entity, Vector<UnitLocation> movePath) {
+        if (!canAnimateMove(entity)) {
+            LOGGER.debug("Move animation skipped: {} has no position (loaded or off board)",
+                  (entity == null) ? "null entity" : entity.getShortName());
+            return;
+        }
         if (!movePath.isEmpty() && isOnThisBord(entity)) {
             MovingUnit m = new MovingUnit(entity, movePath);
             movingUnits.add(m);
@@ -1061,7 +1089,7 @@ public final class BoardView extends AbstractBoardView
             ghostEntitySprites.add(ghostSprite);
 
             // Center on the starting hex of the moving unit.
-            UnitLocation loc = movePath.get(0);
+            UnitLocation loc = movePath.getFirst();
 
             if (GUIP.getAutoCenter()) {
                 centerOnHex(loc.coords());
@@ -1075,7 +1103,7 @@ public final class BoardView extends AbstractBoardView
             return;
         }
         if (GUIP.getShowFPS()) {
-            paintCompsStartTime = System.nanoTime();
+            paintCompsStartTime = java.lang.System.nanoTime();
         }
 
         UIUtil.setHighQualityRendering(graphics2D);
@@ -1177,6 +1205,9 @@ public final class BoardView extends AbstractBoardView
         // Minefield signs all over the place!
         drawMinefields(graphics2D);
 
+        // Demolition charges set by the local player
+        drawDemolitionCharges(graphics2D);
+
         // Artillery targets
         drawArtilleryHexes(graphics2D);
 
@@ -1185,6 +1216,9 @@ public final class BoardView extends AbstractBoardView
 
         // draw entity hex highlights (Nova CEWS network dialog)
         drawEntityHexHighlights(graphics2D);
+
+        // draw demolition charge selection highlights (Detonate Charges dialog)
+        drawDemolitionChargeHighlights(graphics2D);
 
         // draw cursors
         drawSprite(graphics2D, cursorSprite);
@@ -1215,6 +1249,9 @@ public final class BoardView extends AbstractBoardView
 
         // draw onscreen attacks
         drawSprites(graphics2D, attackSprites);
+
+        // draw artillery drift lines (from the targeted hex to where the round actually landed)
+        drawArtilleryDriftLines(graphics2D);
 
         // draw movement vectors.
         if (game.useVectorMove() && game.getPhase().isMovement()) {
@@ -1273,7 +1310,7 @@ public final class BoardView extends AbstractBoardView
                 totalTime = 0;
                 frameCount = 0;
             } else {
-                totalTime += System.nanoTime() - paintCompsStartTime;
+                totalTime += java.lang.System.nanoTime() - paintCompsStartTime;
                 frameCount++;
             }
 
@@ -1285,9 +1322,9 @@ public final class BoardView extends AbstractBoardView
 
         // debugging method that renders the bounding box of a unit's movement envelope.
         // renderClusters((Graphics2D) graphics2D);
-        // renderMovementBoundingBox((Graphics2D) graphics2D);
         // renderDonut(graphics2D, new Coords(10, 10), 2);
         // renderApproxHexDirection((Graphics2D) graphics2D);
+        // renderMinefieldScores((Graphics2D) graphics2D);
     }
 
     /**
@@ -1309,58 +1346,6 @@ public final class BoardView extends AbstractBoardView
         Point p = getCentreHexLocation(donutCoords.getX(), donutCoords.getY(), true);
         p.translate(HEX_W / 2, HEX_H / 2);
         drawHexBorder(g, p, Color.BLUE, 0, 6);
-    }
-
-    /**
-     * Debugging method that renders the bounding hex of a unit's movement envelope. Warning: very slow when rendering
-     * the bounding hex for really fast units.
-     *
-     * @param graphics2D Graphics object on which to draw.
-     */
-    @SuppressWarnings("unused")
-    private void renderMovementBoundingBox(Graphics2D graphics2D) {
-        if (getSelectedEntity() != null) {
-            Princess princess = new Princess("test", MMConstants.LOCALHOST, 2020);
-            princess.startPrecognition();
-            princess.getGame().setBoard(game.getBoard(boardId));
-            PathEnumerator pathEnum = new PathEnumerator(princess, game);
-            pathEnum.recalculateMovesFor(getSelectedEntity());
-
-            ConvexBoardArea cba = pathEnum.getUnitMovableAreas().get(getSelectedEntity().getId());
-            for (int x = 0;
-                  x < game.getBoard(boardId).getWidth();
-                  x++) {
-                for (int y = 0;
-                      y < game.getBoard(boardId).getHeight();
-                      y++) {
-                    Point centreHexLocation = getCentreHexLocation(x, y, true);
-                    centreHexLocation.translate(HEX_W / 2, HEX_H / 2);
-                    Coords coords = new Coords(x, y);
-
-                    if (cba.contains(coords)) {
-                        drawHexBorder(graphics2D, centreHexLocation, Color.PINK, 0, 6);
-                    }
-                }
-            }
-
-            for (int x = 0;
-                  x < 6;
-                  x++) {
-                Coords coords = cba.getVertexNum(x);
-                if (coords == null) {
-                    continue;
-                }
-
-                Point centreHexLocation = getCentreHexLocation(coords.getX(), coords.getY(), true);
-                centreHexLocation.translate(HEX_W / 2, HEX_H / 2);
-
-                drawHexBorder(graphics2D, centreHexLocation, Color.yellow, 0, 3);
-                new StringDrawer(Integer.toString(x)).at(centreHexLocation)
-                      .center()
-                      .color(Color.YELLOW)
-                      .draw(graphics2D);
-            }
-        }
     }
 
     /**
@@ -1396,6 +1381,26 @@ public final class BoardView extends AbstractBoardView
                 drawHexBorder(graphics2D, centreHexLocation, new Color(0, 0, (20 * cluster.id) % 255), 0, 6);
             }
         }
+    }
+
+    /**
+     * Debugging method used to render minefield effectiveness ratings
+     */
+    @SuppressWarnings("unused")
+    private void renderMinefieldScores(Graphics2D graphics2D) {
+    	/*Map<Coords, Integer> minefieldScores = mdp.getMinefieldScores(Minefield.TYPE_CONVENTIONAL, UnitType.TANK,
+    			EntityMovementMode.WHEELED, getBoard());*/
+
+    	MinefieldDeploymentPlanner mdp = new MinefieldDeploymentPlanner(getLocalPlayer(), game);
+    	Map<Coords, Double> minefieldScores = mdp.buildCoalescedMinefieldScores(Minefield.TYPE_CONVENTIONAL, getBoard());
+
+    	for (Coords coords : minefieldScores.keySet()) {
+    		Point centreHexLocation = getCentreHexLocation(coords.getX(), coords.getY(), true);
+            centreHexLocation.translate(HEX_W / 2, HEX_H);
+            graphics2D.setColor(Color.pink);
+            drawCenteredString(String.format("%3.1f", minefieldScores.get(coords)),
+            		centreHexLocation.x, centreHexLocation.y, FONT_14, graphics2D);
+    	}
     }
 
     public void clearShadowMap() {
@@ -1442,20 +1447,22 @@ public final class BoardView extends AbstractBoardView
     }
 
     /**
-     * Draws the wreck sprites for the given hex. This function is used by the isometric rendering process so that
-     * sprites are drawn in the order that hills are rendered to create the appearance that the sprite is behind the
-     * hill.
+     * Draws the wreck sprites for the given hex, optionally filtered by whether the wrecked entity was on a bridge.
+     * Splitting the pass by bridge state lets callers draw under-bridge wrecks beneath the bridge orthograph and
+     * on-bridge wrecks above it.
      *
      * @param coords          The Coordinates of the hex that the sprites should be drawn for.
      * @param graphics2D      The Graphics object for this board.
-     * @param spriteArrayList The complete list of all IsometricSprite on the board.
+     * @param spriteArrayList The complete list of all IsometricWreckSprite on the board.
+     * @param onBridge        When true, only draw wrecks of entities on a bridge; when false, only draw the rest.
      */
     private synchronized void drawIsometricWreckSpritesForHex(Coords coords, Graphics2D graphics2D,
-          ArrayList<IsometricWreckSprite> spriteArrayList) {
+          ArrayList<IsometricWreckSprite> spriteArrayList, boolean onBridge) {
         Rectangle view = graphics2D.getClipBounds();
         for (IsometricWreckSprite sprite : spriteArrayList) {
             Coords spritePosition = sprite.getPosition();
-            if (spritePosition.equals(coords) && view.intersects(sprite.getBounds()) && !sprite.isHidden()) {
+            if (spritePosition.equals(coords) && view.intersects(sprite.getBounds()) && !sprite.isHidden()
+                  && EntityWreckHelper.entityOnBridge(sprite.getEntity()) == onBridge) {
                 if (!sprite.isReady()) {
                     sprite.prepare();
                 }
@@ -1739,13 +1746,59 @@ public final class BoardView extends AbstractBoardView
             Point hexPos = getHexLocation(hex);
             Shape hexBorder = HexDrawUtilities.getHexFullBorderLine(0);
             Shape scaled = AffineTransform
-                    .getScaleInstance(scale, scale)
-                    .createTransformedShape(hexBorder);
+                  .getScaleInstance(scale, scale)
+                  .createTransformedShape(hexBorder);
             Shape translated = AffineTransform
-                    .getTranslateInstance(hexPos.x, hexPos.y)
-                    .createTransformedShape(scaled);
+                  .getTranslateInstance(hexPos.x, hexPos.y)
+                  .createTransformedShape(scaled);
             graphics.draw(translated);
         }
+    }
+
+    /** Hazard-stripe yellow for the bold demolition charge selection outline. */
+    private static final Color DEMO_CHARGE_HAZARD_COLOR = new Color(255, 213, 0);
+
+    /**
+     * Draws the outline around demolition charge hexes selected in the Detonate Charges dialog. With the hazard-outline
+     * client setting on (default), each hex gets a bold yellow/black hazard-stripe border (a thick black base with a
+     * yellow dashed line over it). With the setting off, it falls back to the same plain border the generic entity
+     * highlight uses.
+     *
+     * @param graphics The graphics object to draw on
+     */
+    private void drawDemolitionChargeHighlights(Graphics2D graphics) {
+        if (demolitionChargeHighlightHexes.isEmpty()) {
+            return;
+        }
+        boolean hazard = GUIP.getDemolitionChargeHazardOutline();
+        Stroke oldStroke = graphics.getStroke();
+        for (Coords hex : demolitionChargeHighlightHexes) {
+            Point hexPos = getHexLocation(hex);
+            Shape hexBorder = HexDrawUtilities.getHexFullBorderLine(0);
+            Shape scaled = AffineTransform
+                  .getScaleInstance(scale, scale)
+                  .createTransformedShape(hexBorder);
+            Shape border = AffineTransform
+                  .getTranslateInstance(hexPos.x, hexPos.y)
+                  .createTransformedShape(scaled);
+            if (hazard) {
+                float boldWidth = (float) Math.max(3.0, 4.0 * scale);
+                // Black base pass, then a yellow dashed pass on top so the gaps show black underneath - a hazard stripe.
+                graphics.setColor(Color.BLACK);
+                graphics.setStroke(new BasicStroke(boldWidth, BasicStroke.CAP_BUTT, BasicStroke.JOIN_MITER));
+                graphics.draw(border);
+                float dash = (float) Math.max(6.0, 10.0 * scale);
+                graphics.setColor(DEMO_CHARGE_HAZARD_COLOR);
+                graphics.setStroke(new BasicStroke(boldWidth, BasicStroke.CAP_BUTT, BasicStroke.JOIN_MITER,
+                      10.0f, new float[] { dash, dash }, 0.0f));
+                graphics.draw(border);
+            } else {
+                graphics.setColor(UIUtil.uiGreen());
+                graphics.setStroke(new BasicStroke((float) (2.0 * scale)));
+                graphics.draw(border);
+            }
+        }
+        graphics.setStroke(oldStroke);
     }
 
     /**
@@ -1896,7 +1949,7 @@ public final class BoardView extends AbstractBoardView
                       font_minefield,
                       graphics2D);
             } else if (numberOfMinefields == 1) {
-                Minefield minefield = game.getMinefields(coords).get(0);
+                Minefield minefield = game.getMinefields(coords).getFirst();
 
                 switch (minefield.getType()) {
                     case Minefield.TYPE_CONVENTIONAL:
@@ -1946,9 +1999,130 @@ public final class BoardView extends AbstractBoardView
                                   graphics2D);
                         }
                         break;
+                    case Minefield.TYPE_TRIPWIRE:
+                    	drawCenteredString(Messages.getString("BoardView1.Tripwire"),
+                                hexLocation.x,
+                                hexLocation.y + (int) (31 * scale),
+                                font_minefield,
+                                graphics2D);
+                    	break;
+                    case Minefield.TYPE_PITFALL:
+                    	drawCenteredString(Messages.getString("BoardView1.Pitfall"),
+                                hexLocation.x,
+                                hexLocation.y + (int) (31 * scale),
+                                font_minefield,
+                                graphics2D);
+                    	break;
                 }
             }
         }
+    }
+
+    /**
+     * Draws an indicator on every hex holding a demolition charge set by the local player, so the player can keep track
+     * of armed charges until they are touched off (TO:AUE p.152). Charges are only visible to their owner.
+     *
+     * @param graphics2D the graphics context to draw on
+     */
+    private void drawDemolitionCharges(Graphics2D graphics2D) {
+        if (localPlayer == null) {
+            return;
+        }
+        Rectangle view = graphics2D.getClipBounds();
+        // only update visible hexes
+        int drawX = (view.x / (int) (HEX_WC * scale)) - 1;
+        int drawY = (view.y / (int) (HEX_H * scale)) - 1;
+
+        int drawWidth = (view.width / (int) (HEX_WC * scale)) + 3;
+        int drawHeight = (view.height / (int) (HEX_H * scale)) + 3;
+
+        int maxX = drawX + drawWidth;
+        int maxY = drawY + drawHeight;
+
+        Board board = game.getBoard(boardId);
+        for (IBuilding building : board.getBuildingsVector()) {
+            for (DemolitionCharge charge : building.getDemolitionCharges()) {
+                if (charge.playerId != localPlayer.getId()) {
+                    continue;
+                }
+                Coords coords = charge.pos;
+                // If the coords aren't visible, skip
+                if ((coords.getX() < drawX)
+                      || (coords.getX() > maxX)
+                      || (coords.getY() < drawY)
+                      || (coords.getY() > maxY)
+                      || !board.contains(coords)) {
+                    continue;
+                }
+
+                Point hexLocation = getHexLocation(coords);
+                drawDemolitionChargeLabel(graphics2D, hexLocation,
+                      Messages.getString("BoardView1.demoChargeSet", charge.damage));
+            }
+        }
+    }
+
+    private static final Color DEMO_CHARGE_OUTLINE_COLOR = new Color(0, 0, 0, 200);
+
+    /**
+     * Draws the armed-charge marker: a crosshair centered in the hex to clearly mark the rigged hex, with the damage
+     * label on a dark backing pill below it so it stays readable over any terrain and is clearly distinct from unit
+     * status tags.
+     *
+     * @param graphics2D  the graphics context to draw on
+     * @param hexLocation the pixel location of the hex
+     * @param label       the label text
+     */
+    private void drawDemolitionChargeLabel(Graphics2D graphics2D, Point hexLocation, String label) {
+        // The marker color is a client setting so players can adjust it for color vision deficiencies
+        // and for visibility against the terrain colors of the current map
+        Color demolitionChargeColor = GUIP.getDemolitionChargeColor();
+        int centerX = hexLocation.x + (hex_size.width / 2);
+        int centerY = hexLocation.y + (hex_size.height / 2);
+        int radius = Math.max(3, (int) (7 * scale));
+        int tickLength = Math.max(2, (int) (4 * scale));
+
+        Stroke oldStroke = graphics2D.getStroke();
+        // Outline pass (thicker, dark) below the colored pass keeps the crosshair visible on any terrain
+        graphics2D.setStroke(new BasicStroke(Math.max(2.5f, 3f * scale)));
+        graphics2D.setColor(DEMO_CHARGE_OUTLINE_COLOR);
+        drawCrosshair(graphics2D, centerX, centerY, radius, tickLength);
+        graphics2D.setStroke(new BasicStroke(Math.max(1f, 1.5f * scale)));
+        graphics2D.setColor(demolitionChargeColor);
+        drawCrosshair(graphics2D, centerX, centerY, radius, tickLength);
+        graphics2D.setStroke(oldStroke);
+
+        // Damage label on a dark backing pill below the crosshair
+        FontMetrics metrics = boardPanel.getFontMetrics(font_minefield);
+        int stringWidth = metrics.stringWidth(label);
+        int labelX = centerX - (stringWidth / 2);
+        int labelY = centerY + radius + tickLength + metrics.getAscent() + 2;
+
+        graphics2D.setColor(new Color(0, 0, 0, 160));
+        graphics2D.fillRoundRect(labelX - 4, labelY - metrics.getAscent() - 1,
+              stringWidth + 8, metrics.getAscent() + metrics.getDescent() + 2, 8, 8);
+
+        graphics2D.setFont(font_minefield);
+        graphics2D.setColor(demolitionChargeColor);
+        graphics2D.drawString(label, labelX, labelY);
+    }
+
+    /**
+     * Draws a crosshair: a circle with four tick lines extending outward at the cardinal points and a center dot.
+     *
+     * @param graphics2D the graphics context to draw on
+     * @param centerX    the x pixel coordinate of the crosshair center
+     * @param centerY    the y pixel coordinate of the crosshair center
+     * @param radius     the circle radius in pixels
+     * @param tickLength the length of the tick lines in pixels
+     */
+    private void drawCrosshair(Graphics2D graphics2D, int centerX, int centerY, int radius, int tickLength) {
+        graphics2D.drawOval(centerX - radius, centerY - radius, radius * 2, radius * 2);
+        graphics2D.drawLine(centerX, centerY - radius - tickLength, centerX, centerY - radius + tickLength);
+        graphics2D.drawLine(centerX, centerY + radius - tickLength, centerX, centerY + radius + tickLength);
+        graphics2D.drawLine(centerX - radius - tickLength, centerY, centerX - radius + tickLength, centerY);
+        graphics2D.drawLine(centerX + radius - tickLength, centerY, centerX + radius + tickLength, centerY);
+        graphics2D.fillOval(centerX - 1, centerY - 1, 3, 3);
     }
 
     private void drawCenteredString(String string, int x, int y, Font font, Graphics2D graphics2D) {
@@ -1957,6 +2131,273 @@ public final class BoardView extends AbstractBoardView
         x += ((hex_size.width - stringWidth) / 2);
         graphics2D.setFont(font);
         graphics2D.drawString(string, x, y);
+    }
+
+    /**
+     * Draws a single combined turn label for all the bot artillery heat-map markers stacked on one hex, so the text is
+     * visible in screenshots and not just in the hover text. Several tubes can target the same hex with different flight
+     * times, so the distinct values are merged into one label rather than drawn over each other: firing markers count
+     * down the turns until impact ({@code T-2}, joined as {@code T-1/2} when they differ, {@code SPLASH} when the only
+     * one is this turn), and otherwise a predicted-position hex shows the prediction's turn ({@code T<turn>}). No-op when
+     * no
+     * heat-map markers are given.
+     *
+     * @param heatMapMarkers The heat-map markers drawn on this hex
+     * @param graphics2D     The hex graphics context
+     * @param scale          The current board scale
+     */
+    private void drawHeatMapTurnLabel(Collection<SpecialHexDisplay> heatMapMarkers, Graphics2D graphics2D,
+          float scale) {
+        SortedSet<Integer> firingCountdowns = new TreeSet<>();
+        SortedSet<Integer> predictedTurns = new TreeSet<>();
+        for (SpecialHexDisplay marker : heatMapMarkers) {
+            String info = marker.getInfo();
+            if ((info == null) || !info.startsWith(SpecialHexDisplay.HEAT_MAP_PREFIX)) {
+                continue;
+            }
+            // Control token is "<turn-or-countdown>:<heat>:<kind>".
+            String[] fields = heatMapToken(info).split(":");
+            if (fields.length == 0) {
+                continue;
+            }
+            try {
+                int value = Integer.parseInt(fields[0]);
+                if ((fields.length >= 3) && SpecialHexDisplay.HEAT_MAP_KIND_FIRING.equals(fields[2])) {
+                    firingCountdowns.add(value);
+                } else {
+                    predictedTurns.add(value);
+                }
+            } catch (NumberFormatException ignored) {
+                // skip a marker whose turn value is not numeric
+            }
+        }
+
+        String label;
+        if (!firingCountdowns.isEmpty()) {
+            // A firing marker's countdown wins over a predicted label; merge distinct countdowns with '/'.
+            if ((firingCountdowns.size() == 1) && (firingCountdowns.first() == 0)) {
+                label = Messages.getString("BoardView.artillery.splash");
+            } else {
+                label = Messages.getString("BoardView.artillery.firingCountdown", joinValues(firingCountdowns));
+            }
+        } else if (!predictedTurns.isEmpty()) {
+            label = Messages.getString("BoardView.artillery.predictedTurns", joinValues(predictedTurns));
+        } else {
+            return;
+        }
+
+        Color previousColor = graphics2D.getColor();
+        graphics2D.setColor(Color.WHITE);
+        drawCenteredString(label, 0, (int) (45 * scale), font_note, graphics2D);
+        graphics2D.setColor(previousColor);
+    }
+
+    /**
+     * @param values The values to render
+     *
+     * @return The values joined with a slash, e.g. {@code 1/2}
+     */
+    private String joinValues(Collection<Integer> values) {
+        StringBuilder joined = new StringBuilder();
+        for (Integer value : values) {
+            if (joined.length() > 0) {
+                joined.append('/');
+            }
+            joined.append(value);
+        }
+        return joined.toString();
+    }
+
+    /**
+     * The cold-to-hot diverging color ramp for predicted-position heat-map markers: navy blue (coldest, a single
+     * enemy converging on the hex) through light blue, light gray, and light orange to crimson red (hottest, many
+     * enemies converging).
+     */
+    private static final Color[] HEAT_MAP_COLOR_RAMP = {
+          new Color(0, 0, 128),      // navy blue - coldest
+          new Color(102, 178, 255),  // light blue
+          new Color(220, 220, 220),  // light gray (neutral middle)
+          new Color(255, 178, 102),  // light orange
+          new Color(220, 20, 60)     // crimson red - hottest
+    };
+
+    /** The enemy count at which a predicted-position heat-map hex is drawn fully hot (crimson). */
+    private static final int HEAT_MAP_MAX_HEAT_UNITS = 5;
+
+    /** Opacity of the predicted-position heat-map color fill, so the underlying terrain still shows through. */
+    private static final float HEAT_MAP_FILL_ALPHA = 0.55f;
+
+    /**
+     * Extracts the colon-separated heat-map control token (the {@code <turn>:<heat>:<kind>} part up to the first
+     * space) from a heat-map marker's info text. See {@link SpecialHexDisplay#HEAT_MAP_PREFIX}.
+     *
+     * @param info The marker's info text
+     *
+     * @return The control token (without the prefix), or an empty string if there is none
+     */
+    private String heatMapToken(String info) {
+        int prefixLength = SpecialHexDisplay.HEAT_MAP_PREFIX.length();
+        int space = info.indexOf(' ', prefixLength);
+        return (space > prefixLength) ? info.substring(prefixLength, space) : info.substring(prefixLength);
+    }
+
+    /**
+     * @param specialHexDisplay A special hex display being drawn
+     *
+     * @return {@code true} if this is any bot artillery heat-map marker (predicted-position or firing)
+     */
+    private boolean isHeatMapMarker(SpecialHexDisplay specialHexDisplay) {
+        String info = specialHexDisplay.getInfo();
+        return (info != null) && info.startsWith(SpecialHexDisplay.HEAT_MAP_PREFIX);
+    }
+
+    /**
+     * @param specialHexDisplay A special hex display being drawn
+     *
+     * @return {@code true} if this is a predicted-position heat-map marker (painted as a cold-to-hot color fill),
+     *       {@code false} for a firing marker or any non-heat-map display
+     */
+    private boolean isPredictedHeatMapMarker(SpecialHexDisplay specialHexDisplay) {
+        String info = specialHexDisplay.getInfo();
+        if ((info == null) || !info.startsWith(SpecialHexDisplay.HEAT_MAP_PREFIX)) {
+            return false;
+        }
+        String[] fields = heatMapToken(info).split(":");
+        return (fields.length >= 3) && SpecialHexDisplay.HEAT_MAP_KIND_PREDICTED.equals(fields[2]);
+    }
+
+    /**
+     * @param info A heat-map marker's info text
+     *
+     * @return The number of enemies predicted to converge on the hex (the marker's heat), or 1 if it cannot be parsed
+     */
+    private int heatMapHeatUnits(String info) {
+        String[] fields = heatMapToken(info).split(":");
+        if (fields.length >= 2) {
+            try {
+                return Integer.parseInt(fields[1]);
+            } catch (NumberFormatException ignored) {
+                return 1;
+            }
+        }
+        return 1;
+    }
+
+    /**
+     * Maps a predicted hex's heat (number of enemies converging on it) to a color on the cold-to-hot diverging ramp:
+     * one enemy is navy blue (coldest) and {@link #HEAT_MAP_MAX_HEAT_UNITS} or more is crimson red (hottest), with the
+     * intermediate counts interpolated through the ramp.
+     *
+     * @param heatUnits The number of enemies converging on the hex
+     *
+     * @return The color to paint the hex
+     */
+    private Color heatMapDivergingColor(int heatUnits) {
+        float normalized = (float) (heatUnits - 1) / (HEAT_MAP_MAX_HEAT_UNITS - 1);
+        normalized = Math.max(0.0f, Math.min(1.0f, normalized));
+        float scaledPosition = normalized * (HEAT_MAP_COLOR_RAMP.length - 1);
+        int lowerStop = (int) Math.floor(scaledPosition);
+        int upperStop = Math.min(lowerStop + 1, HEAT_MAP_COLOR_RAMP.length - 1);
+        float fraction = scaledPosition - lowerStop;
+        Color from = HEAT_MAP_COLOR_RAMP[lowerStop];
+        Color to = HEAT_MAP_COLOR_RAMP[upperStop];
+        int red = Math.round(from.getRed() + (fraction * (to.getRed() - from.getRed())));
+        int green = Math.round(from.getGreen() + (fraction * (to.getGreen() - from.getGreen())));
+        int blue = Math.round(from.getBlue() + (fraction * (to.getBlue() - from.getBlue())));
+        return new Color(red, green, blue);
+    }
+
+    /**
+     * Paints a predicted-position heat-map marker as a cold-to-hot translucent fill over the whole hex (navy = one
+     * enemy converging, crimson = many), so the predicted enemy concentration reads at a glance and cools as units
+     * are destroyed. No-op for any other special hex display.
+     *
+     * @param specialHexDisplay The special hex display being drawn
+     * @param graphics2D        The hex graphics context
+     * @param scale             The current board scale
+     */
+    private void drawHeatMapPredictedHex(SpecialHexDisplay specialHexDisplay, Graphics2D graphics2D, float scale) {
+        Color heatColor = heatMapDivergingColor(heatMapHeatUnits(specialHexDisplay.getInfo()));
+        Color previousColor = graphics2D.getColor();
+        Composite previousComposite = graphics2D.getComposite();
+        graphics2D.setComposite(AlphaComposite.getInstance(AlphaComposite.SRC_OVER, HEAT_MAP_FILL_ALPHA));
+        graphics2D.setColor(heatColor);
+        AffineTransform hexScale = new AffineTransform();
+        hexScale.scale(scale, scale);
+        graphics2D.fill(hexScale.createTransformedShape(HEX_POLY));
+        graphics2D.setComposite(previousComposite);
+        graphics2D.setColor(previousColor);
+    }
+
+    /** Color of the artillery drift line drawn from a targeted hex to where the round actually landed. */
+    private static final Color ARTILLERY_DRIFT_LINE_COLOR = new Color(255, 191, 0);
+
+    /**
+     * Draws a thin dashed line from each visible artillery miss marker's targeted hex to the hex the round actually
+     * drifted to, with an arrowhead at the landing hex, so the drift reads at a glance (in addition to the combat
+     * report). Only drawn for drift markers currently shown to the local player.
+     *
+     * @param graphics2D The board graphics context, in board pixel space at the current scale
+     */
+    private void drawArtilleryDriftLines(Graphics2D graphics2D) {
+        if (!GUIP.getShowArtilleryDriftArrows()) {
+            return;
+        }
+        Board board = game.getBoard(boardId);
+        if (board == null) {
+            return;
+        }
+        Map<Coords, Collection<SpecialHexDisplay>> specialHexDisplays = board.getSpecialHexDisplayTable();
+        if ((specialHexDisplays == null) || specialHexDisplays.isEmpty()) {
+            return;
+        }
+        Stroke previousStroke = graphics2D.getStroke();
+        Color previousColor = graphics2D.getColor();
+        float dashLength = Math.max(4.0f, hex_size.width / 14.0f);
+        graphics2D.setColor(ARTILLERY_DRIFT_LINE_COLOR);
+        graphics2D.setStroke(new BasicStroke(Math.max(1.0f, hex_size.width / 60.0f), BasicStroke.CAP_ROUND,
+              BasicStroke.JOIN_ROUND, 1.0f, new float[] { dashLength, dashLength }, 0.0f));
+        for (Map.Entry<Coords, Collection<SpecialHexDisplay>> entry : specialHexDisplays.entrySet()) {
+            for (SpecialHexDisplay specialHexDisplay : entry.getValue()) {
+                Coords landingHex = specialHexDisplay.getDriftHex();
+                if ((landingHex == null)
+                      || !specialHexDisplay.drawNow(game.getPhase(), game.getRoundCount(), getLocalPlayer(), GUIP)) {
+                    continue;
+                }
+                drawDriftLine(graphics2D, entry.getKey(), landingHex);
+            }
+        }
+        graphics2D.setStroke(previousStroke);
+        graphics2D.setColor(previousColor);
+    }
+
+    /**
+     * Draws a single drift line, with an arrowhead at the landing hex, between the centers of two hexes.
+     *
+     * @param graphics2D  The board graphics context
+     * @param targetedHex The hex that was targeted (line origin)
+     * @param landingHex  The hex the round drifted to (arrowhead end)
+     */
+    private void drawDriftLine(Graphics2D graphics2D, Coords targetedHex, Coords landingHex) {
+        Point targetedPoint = getHexLocation(targetedHex);
+        Point landingPoint = getHexLocation(landingHex);
+        if ((targetedPoint == null) || (landingPoint == null)) {
+            return;
+        }
+        int fromX = targetedPoint.x + (hex_size.width / 2);
+        int fromY = targetedPoint.y + (hex_size.height / 2);
+        int toX = landingPoint.x + (hex_size.width / 2);
+        int toY = landingPoint.y + (hex_size.height / 2);
+        graphics2D.drawLine(fromX, fromY, toX, toY);
+        double angle = Math.atan2((double) toY - fromY, (double) toX - fromX);
+        int headLength = Math.max(6, hex_size.width / 6);
+        double spread = Math.toRadians(28);
+        int leftX = (int) Math.round(toX - (headLength * Math.cos(angle - spread)));
+        int leftY = (int) Math.round(toY - (headLength * Math.sin(angle - spread)));
+        int rightX = (int) Math.round(toX - (headLength * Math.cos(angle + spread)));
+        int rightY = (int) Math.round(toY - (headLength * Math.sin(angle + spread)));
+        graphics2D.drawLine(toX, toY, leftX, leftY);
+        graphics2D.drawLine(toX, toY, rightX, rightY);
     }
 
     @Override
@@ -1984,6 +2425,9 @@ public final class BoardView extends AbstractBoardView
         if (!ignoreUnits) {
             // Minefield signs all over the place!
             drawMinefields(boardGraph);
+
+            // Demolition charges set by the local player
+            drawDemolitionCharges(boardGraph);
 
             // Artillery targets
             drawArtilleryHexes(boardGraph);
@@ -2078,23 +2522,23 @@ public final class BoardView extends AbstractBoardView
                     // For s == 0 the x coordinate MUST be an even number to get correct occlusion; drawX may be
                     // any int though
                     Coords coords = new Coords(x + drawX / 2 * 2, y + drawY);
-                    if (board.getHex(coords) != null) {
+                    Hex hex = board.getHex(coords);
+                    if (hex != null) {
                         drawHex(coords, graphics2D, saveBoardImage);
                         drawOrthograph(coords, graphics2D);
+                        // Under-bridge / no-bridge wrecks: drawn before the iso entity sprite (so a unit on the
+                        // wreck paints on top) and before the second drawOrthograph (so a bridge deck paints over).
+                        if (!saveBoardImage && GUIP.getShowWrecks()) {
+                            drawIsometricWreckSpritesForHex(coords, graphics2D, isometricWreckSprites, false);
+                        }
                         drawHexSpritesForHex(coords, graphics2D, behindTerrainHexSprites);
                         drawDeployment(graphics2D, coords);
                         drawOrthograph(coords, graphics2D);
-                    }
-                }
-            }
-
-            for (int x = 0; x < drawWidth; x++) {
-                Coords coords = new Coords(x + drawX, y + drawY);
-                if (board.getHex(coords) != null) {
-                    if (!saveBoardImage) {
-                        if (GUIP.getShowWrecks()) {
-                            drawIsometricWreckSpritesForHex(coords, graphics2D, isometricWreckSprites);
+                        // On-bridge wrecks: drawn after the bridge orthograph so they sit on the deck.
+                        if (!saveBoardImage && GUIP.getShowWrecks()) {
+                            drawIsometricWreckSpritesForHex(coords, graphics2D, isometricWreckSprites, true);
                         }
+                        drawHexText(coords, hex, board, graphics2D);
                     }
                 }
             }
@@ -2132,15 +2576,6 @@ public final class BoardView extends AbstractBoardView
         }
 
         int level = hex.getLevel();
-        int depth = hex.depth(false);
-
-        Terrain basement = hex.getTerrain(Terrains.BLDG_BASEMENT_TYPE);
-        if (basement != null) {
-            depth = 0;
-        }
-
-        int height = Math.max(hex.terrainLevel(Terrains.BLDG_ELEV), hex.terrainLevel(Terrains.BRIDGE_ELEV));
-        height = Math.max(height, hex.terrainLevel(Terrains.INDUSTRIAL));
 
         // get the base tile image
         Image baseImage = tileManager.baseFor(hex);
@@ -2308,7 +2743,7 @@ public final class BoardView extends AbstractBoardView
         if (!supersUnderShadow) {
             if (supers != null) {
                 for (Image image : supers) {
-                    if (null != image) {
+                    if (image != null) {
                         if (animatedImages.contains(image.hashCode())) {
                             dontCache = true;
                         }
@@ -2322,7 +2757,7 @@ public final class BoardView extends AbstractBoardView
         // Check for buildings and woods buried under their own shadows.
         if ((supers != null) && supersUnderShadow && (hex.containsTerrain(Terrains.BUILDING) || hex.containsTerrain(
               Terrains.WOODS))) {
-            Image lastSuper = supers.get(supers.size() - 1);
+            Image lastSuper = supers.getLast();
             scaledImage = getScaledImage(lastSuper, true);
             graphics2D.drawImage(scaledImage, 0, 0, boardPanel);
         }
@@ -2496,11 +2931,28 @@ public final class BoardView extends AbstractBoardView
         final Collection<SpecialHexDisplay> shdList = game.getBoard(boardId).getSpecialHexDisplay(coords);
         try {
             if (shdList != null) {
+                // Several heat-map markers can stack on one hex (multiple tubes firing it, or a prediction plus a
+                // shot). Draw each marker's icon/fill, but collect them so a single combined turn label is drawn (their
+                // distinct values merged), rather than each marker drawing its label over the others.
+                List<SpecialHexDisplay> heatMapMarkers = new ArrayList<>();
                 for (SpecialHexDisplay shd : shdList) {
                     if (shd.drawNow(game.getPhase(), game.getRoundCount(), getLocalPlayer(), GUIP)) {
-                        scaledImage = getScaledImage(shd.getDefaultImage(), true);
-                        graphics2D.drawImage(scaledImage, 0, 0, boardPanel);
+                        // A predicted-position heat-map marker paints the hex with a cold-to-hot color (navy = one
+                        // enemy converging, crimson = many) instead of an icon; the firing marker and every other
+                        // display draw their icon.
+                        if (isPredictedHeatMapMarker(shd)) {
+                            drawHeatMapPredictedHex(shd, graphics2D, scale);
+                        } else {
+                            scaledImage = getScaledImage(shd.getDefaultImage(), true);
+                            graphics2D.drawImage(scaledImage, 0, 0, boardPanel);
+                        }
+                        if (isHeatMapMarker(shd)) {
+                            heatMapMarkers.add(shd);
+                        }
                     }
+                }
+                if (!heatMapMarkers.isEmpty()) {
+                    drawHeatMapTurnLabel(heatMapMarkers, graphics2D, scale);
                 }
             }
         } catch (Exception e) {
@@ -2509,56 +2961,8 @@ public final class BoardView extends AbstractBoardView
             return;
         }
 
-        // write hex coordinate unless deactivated or scale factor too small
-        if (GUIP.getCoordsEnabled() && (scale >= 0.5)) {
-            drawCenteredString(coords.getBoardNum(), 0, (int) (12 * scale), font_hexNumber, graphics2D);
-        }
-
-        if (displayInvalidHexInfo && !hex.isValid(null)) {
-            Point hexCenter = new Point((int) (HEX_W / 2.0f * scale), (int) (HEX_H / 2.0f * scale));
-            invalidString.at(hexCenter).fontSize(14.0f * scale).outline(Color.WHITE, scale / 2).draw(graphics2D);
-        }
-
-        // write terrain level / water depth / building height
-        if (scale > 0.5f) {
-            int yPosition = HEX_H - 2;
-            if (level != 0) {
-                drawCenteredString(Messages.getString("BoardView1.LEVEL") + level,
-                      0,
-                      (int) (yPosition * scale),
-                      font_elev,
-                      graphics2D);
-                yPosition -= 10;
-            }
-
-            if (depth != 0) {
-                drawCenteredString(Messages.getString("BoardView1.DEPTH") + depth,
-                      0,
-                      (int) (yPosition * scale),
-                      font_elev,
-                      graphics2D);
-                yPosition -= 10;
-            }
-
-            if (height > 0) {
-                graphics2D.setColor(GUIP.getBuildingTextColor());
-                drawCenteredString(Messages.getString("BoardView1.HEIGHT") + height,
-                      0,
-                      (int) (yPosition * scale),
-                      font_elev,
-                      graphics2D);
-                yPosition -= 10;
-            }
-
-            if (hex.terrainLevel(Terrains.FOLIAGE_ELEV) == 1) {
-                graphics2D.setColor(GUIP.getLowFoliageColor());
-                drawCenteredString(Messages.getString("BoardView1.LowFoliage"),
-                      0,
-                      (int) (yPosition * scale),
-                      font_elev,
-                      graphics2D);
-            }
-        }
+        // Hex text (coordinates, level/depth/height) is drawn separately in drawHexText()
+        // so that it renders on top of bridge orthographs
 
         // Used to make the following draw calls shorter
         int s21 = (int) (21 * scale);
@@ -2726,6 +3130,84 @@ public final class BoardView extends AbstractBoardView
 
                 // draw orthogonal
                 boardGraph.drawImage(scaledImage, orthogonalX, orthogonalY, boardPanel);
+            }
+        }
+    }
+
+    /**
+     * Draws hex text overlays (coordinates, level, depth, height, foliage, invalid hex info) directly to the board
+     * graphics. This is called after drawOrthograph so that text renders on top of bridge images.
+     */
+    private void drawHexText(Coords coords, Hex hex, Board board, Graphics2D boardGraph) {
+        final Point hexLocation = getHexLocation(coords);
+        int hexX = hexLocation.x;
+        int hexY = hexLocation.y;
+
+        // Set the text color according to Preferences or Light Gray in space
+        boardGraph.setColor(GUIP.getBoardTextColor());
+        if (board.isSpace()) {
+            boardGraph.setColor(GUIP.getBoardSpaceTextColor());
+        }
+
+        // write hex coordinate unless deactivated or scale factor too small
+        if (GUIP.getCoordsEnabled() && (scale >= 0.5)) {
+            drawCenteredString(coords.getBoardNum(), hexX, hexY + (int) (12 * scale), font_hexNumber, boardGraph);
+        }
+
+        if (displayInvalidHexInfo && !hex.isValid(null)) {
+            Point hexCenter = new Point(hexX + (int) (HEX_W / 2.0f * scale), hexY + (int) (HEX_H / 2.0f * scale));
+            invalidString.at(hexCenter).fontSize(14.0f * scale).outline(Color.WHITE, scale / 2).draw(boardGraph);
+        }
+
+        // write terrain level / water depth / building height
+        if (scale > 0.5f) {
+            int level = hex.getLevel();
+            int depth = hex.depth(false);
+
+            Terrain basement = hex.getTerrain(Terrains.BLDG_BASEMENT_TYPE);
+            if (basement != null) {
+                depth = 0;
+            }
+
+            int height = Math.max(hex.terrainLevel(Terrains.BLDG_ELEV), hex.terrainLevel(Terrains.BRIDGE_ELEV));
+            height = Math.max(height, hex.terrainLevel(Terrains.INDUSTRIAL));
+
+            int yPosition = HEX_H - 2;
+            if (level != 0) {
+                drawCenteredString(Messages.getString("BoardView1.LEVEL") + level,
+                        hexX,
+                        hexY + (int) (yPosition * scale),
+                        font_elev,
+                        boardGraph);
+                yPosition -= 10;
+            }
+
+            if (depth != 0) {
+                drawCenteredString(Messages.getString("BoardView1.DEPTH") + depth,
+                        hexX,
+                        hexY + (int) (yPosition * scale),
+                        font_elev,
+                        boardGraph);
+                yPosition -= 10;
+            }
+
+            if (height > 0) {
+                boardGraph.setColor(GUIP.getBuildingTextColor());
+                drawCenteredString(Messages.getString("BoardView1.HEIGHT") + height,
+                        hexX,
+                        hexY + (int) (yPosition * scale),
+                        font_elev,
+                        boardGraph);
+                yPosition -= 10;
+            }
+
+            if (hex.terrainLevel(Terrains.FOLIAGE_ELEV) == 1) {
+                boardGraph.setColor(GUIP.getLowFoliageColor());
+                drawCenteredString(Messages.getString("BoardView1.LowFoliage"),
+                        hexX,
+                        hexY + (int) (yPosition * scale),
+                        font_elev,
+                        boardGraph);
             }
         }
     }
@@ -3332,6 +3814,19 @@ public final class BoardView extends AbstractBoardView
             addC3Link(entity);
         }
 
+        // The removal above also dropped the lines that this entity's hierarchic subordinates draw TO it (each
+        // slave owns its own line to its master), and addC3Link(entity) only redraws the entity's own line to its
+        // master. Re-add the subordinates' lines, otherwise selecting a master in the firing phase erases its
+        // network on the board until the next full redraw.
+        for (Entity subordinate : game.getEntitiesVector()) {
+            if ((subordinate.getC3MasterId() == entity.getId())
+                  && !subordinate.equals(entity)
+                  && subordinate.hasC3()
+                  && isOnThisBord(subordinate)) {
+                addC3Link(subordinate);
+            }
+        }
+
         vtolAttackSprites.removeIf(s -> s.getEntity().getId() == entity.getId());
 
         // Remove Flyover Sprites
@@ -3686,7 +4181,7 @@ public final class BoardView extends AbstractBoardView
         for (ListIterator<MoveStep> i = movePath.getSteps();
               i.hasNext(); ) {
             final MoveStep step = i.next();
-            if ((null != previousStep) && ((step.getType() == MoveStepType.UP)
+            if ((previousStep != null) && ((step.getType() == MoveStepType.UP)
                   || (step.getType() == MoveStepType.DOWN)
                   || (step.getType() == MoveStepType.ACC)
                   || (step.getType() == MoveStepType.DEC)
@@ -3694,7 +4189,7 @@ public final class BoardView extends AbstractBoardView
                   || (step.getType() == MoveStepType.DECELERATION))) {
                 // Mark the previous elevation change sprite hidden so that we can draw a new one in its place
                 // without having overlap.
-                pathSprites.get(pathSprites.size() - 1).setHidden(true);
+                pathSprites.getLast().setHidden(true);
             }
 
             if (previousStep != null
@@ -3706,7 +4201,7 @@ public final class BoardView extends AbstractBoardView
                   || (step.getType() == MoveStepType.CONVERT_MODE
                   && previousStep.getType() == MoveStepType.CONVERT_MODE)
                   || step.getType() == MoveStepType.BOOTLEGGER)) {
-                pathSprites.get(pathSprites.size() - 1).setHidden(true);
+                pathSprites.getLast().setHidden(true);
             }
 
             pathSprites.add(new StepSprite(this, step, movePath.isEndStep(step)));
@@ -3923,6 +4418,14 @@ public final class BoardView extends AbstractBoardView
                 return;
             }
 
+            // A unit whose C3 gear is switched off is not on the network, so neither end draws a link. The
+            // non-hierarchic branches above get this from onSameC3NetworkAs(); the hierarchic branch does not
+            // consult it, so the same check is applied here. Network wiring is left intact, so the links come
+            // back when the gear is switched on again.
+            if (EquipmentActivation.isC3SwitchedOff(entity) || EquipmentActivation.isC3SwitchedOff(eMaster)) {
+                return;
+            }
+
             // ECM cuts off the network
             boolean blocked;
 
@@ -4034,8 +4537,8 @@ public final class BoardView extends AbstractBoardView
             }
         }
 
-        for (Enumeration<AttackAction> i = game.getCharges();
-              i.hasMoreElements(); ) {
+        for (Enumeration<AttackAction> i = game.getDisplacementAttacks();
+             i.hasMoreElements(); ) {
             AttackAction attackAction = i.nextElement();
             if (attackAction instanceof PhysicalAttackAction physicalAttackAction) {
                 addAttack(physicalAttackAction);
@@ -4207,12 +4710,12 @@ public final class BoardView extends AbstractBoardView
                     movingSomething = true;
                     Entity entity = game.getEntity(move.entity.getId());
                     if (!move.path.isEmpty()) {
-                        UnitLocation loc = move.path.get(0);
+                        UnitLocation loc = move.path.getFirst();
 
                         if (entity != null) {
                             redrawMovingEntity(move.entity, loc.coords(), loc.facing(), loc.elevation());
                         }
-                        move.path.remove(0);
+                        move.path.removeFirst();
                     } else {
                         if (entity != null) {
                             redrawEntity(entity);
@@ -4474,9 +4977,8 @@ public final class BoardView extends AbstractBoardView
     }
 
     /**
-     * Highlights multiple entities on the board view.
-     * All entities in the provided list will be highlighted.
-     * All other entities will be unhighlighted.
+     * Highlights multiple entities on the board view. All entities in the provided list will be highlighted. All other
+     * entities will be unhighlighted.
      *
      * @param entities List of entities to highlight (can be empty to clear all highlights)
      */
@@ -4487,13 +4989,24 @@ public final class BoardView extends AbstractBoardView
     }
 
     /**
-     * Sets the hexes to highlight with white borders (for Nova CEWS network dialog).
-     * Draws white hexagon borders around the specified hex coordinates.
+     * Sets the hexes to highlight with white borders (for Nova CEWS network dialog). Draws white hexagon borders around
+     * the specified hex coordinates.
      *
      * @param hexes List of hex coordinates to highlight (can be empty to clear all highlights)
      */
     public void setHighlightedEntityHexes(List<Coords> hexes) {
         highlightedEntityHexes = new ArrayList<>(hexes);
+        repaint();
+    }
+
+    /**
+     * Sets the demolition charge hexes to highlight (selected in the Detonate Charges dialog). These are drawn with a
+     * bold yellow/black hazard outline when the matching client setting is on, otherwise with the plain highlight.
+     *
+     * @param hexes List of hex coordinates to highlight (can be empty to clear all highlights)
+     */
+    public void setDemolitionChargeHighlightHexes(List<Coords> hexes) {
+        demolitionChargeHighlightHexes = new ArrayList<>(hexes);
         repaint();
     }
 
@@ -4608,10 +5121,21 @@ public final class BoardView extends AbstractBoardView
 
     @Override
     public void boardChangedHex(BoardEvent boardEvent) {
-        hexImageCache.remove(boardEvent.getCoords());
-        // Also repaint the surrounding hexes because of shadows, border etc.
-        for (int direction : allDirections) {
-            hexImageCache.remove(boardEvent.getCoords().translated(direction));
+        Coords coords = boardEvent.getCoords();
+        Hex hex = game.getBoard(boardId).getHex(coords);
+        // An elevator changes its terrain overlay level, which the isometric view can draw beyond the immediate
+        // neighbors. A per-hex cache clear leaves the isometric view stale (it only recovers on a full reload), so
+        // for elevator hexes clear the whole hex image cache - the same thing a board reload does.
+        boolean hasIndustrialElevator = (hex != null) && hex.containsTerrain(Terrains.INDUSTRIAL_ELEVATOR);
+        boolean hasSolarisElevator = (hex != null) && hex.containsTerrain(Terrains.SOLARIS_ELEVATOR);
+        if (hasIndustrialElevator || hasSolarisElevator) {
+            clearHexImageCache();
+        } else {
+            hexImageCache.remove(coords);
+            // Also repaint the surrounding hexes because of shadows, border etc.
+            for (int direction : allDirections) {
+                hexImageCache.remove(coords.translated(direction));
+            }
         }
         clearShadowMap();
         boardPanel.repaint();
@@ -4654,11 +5178,11 @@ public final class BoardView extends AbstractBoardView
      */
     private class RedrawWorker implements Runnable {
 
-        private long lastTime = System.currentTimeMillis();
+        private long lastTime = java.lang.System.currentTimeMillis();
 
         @Override
         public void run() {
-            long currentTime = System.currentTimeMillis();
+            long currentTime = java.lang.System.currentTimeMillis();
 
             if (boardPanel.isShowing()) {
                 boolean redraw = false;
@@ -4901,6 +5425,7 @@ public final class BoardView extends AbstractBoardView
      *
      * @param position - the <code>Coords</code> containing targets.
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     private Entity chooseEntity(Coords position) {
         // Assume that we have *no* choice.
         Entity choice = null;
@@ -4911,7 +5436,7 @@ public final class BoardView extends AbstractBoardView
         // Do we have a single choice?
         if (entities.size() == 1) {
             // Return that choice.
-            choice = entities.get(0);
+            choice = entities.getFirst();
         } else if (entities.size() > 1) {
             // If we have multiple choices, display a selection dialog.
             choice = EntityChoiceDialog.showSingleChoiceDialog(clientgui.getFrame(),
@@ -4952,7 +5477,7 @@ public final class BoardView extends AbstractBoardView
             File file;
 
             if (!bvSkinSpec.backgrounds.isEmpty()) {
-                file = new MegaMekFile(Configuration.widgetsDir(), bvSkinSpec.backgrounds.get(0)).getFile();
+                file = new MegaMekFile(Configuration.widgetsDir(), bvSkinSpec.backgrounds.getFirst()).getFile();
                 if (!file.exists()) {
                     LOGGER.error("BoardView1 Error: Background 0 icon doesn't exist: {}", file.getAbsolutePath());
                 } else {
@@ -5080,6 +5605,15 @@ public final class BoardView extends AbstractBoardView
         }
 
         zoomIndex--;
+        zoom();
+    }
+
+    /**
+     * Reset the zoom level to the BASE_ZOOM_INDEX
+     */
+    @Override
+    public void zoomReset() {
+        zoomIndex = BASE_ZOOM_INDEX;
         zoom();
     }
 
