@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2004 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -33,14 +33,14 @@
  */
 package megamek.client.ui.dialogs.customMek;
 
-import java.awt.Container;
-import java.awt.GridBagConstraints;
-import java.awt.GridBagLayout;
-import java.awt.Insets;
+import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.InputEvent;
 import java.awt.event.ItemEvent;
 import java.awt.event.ItemListener;
+import java.awt.event.KeyEvent;
+import java.io.Serial;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Enumeration;
@@ -48,9 +48,11 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Objects;
 import javax.swing.*;
+import javax.swing.border.EmptyBorder;
 import javax.swing.text.DefaultFormatterFactory;
 import javax.swing.text.NumberFormatter;
 
+import com.formdev.flatlaf.extras.components.FlatTabbedPane;
 import megamek.client.Client;
 import megamek.client.ui.GBC;
 import megamek.client.ui.Messages;
@@ -66,6 +68,7 @@ import megamek.common.Player;
 import megamek.common.TechConstants;
 import megamek.common.battleArmor.BattleArmor;
 import megamek.common.board.Board;
+import megamek.common.compute.ArtilleryRange;
 import megamek.common.enums.Gender;
 import megamek.common.enums.ProstheticEnhancementType;
 import megamek.common.equipment.EquipmentMode;
@@ -91,8 +94,6 @@ import megamek.common.verifier.TestEntity;
 import megamek.common.weapons.bayWeapons.ArtilleryBayWeapon;
 import megamek.common.weapons.bayWeapons.capital.CapitalMissileBayWeapon;
 import megamek.server.ServerBoardHelper;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
 
 /**
  * A dialog that a player can use to customize his mek before battle. Currently, changing pilots, setting up C3
@@ -103,9 +104,9 @@ import org.apache.logging.log4j.Logger;
  * @since March 18, 2002, 2:56 PM
  */
 public class CustomMekDialog extends AbstractButtonDialog
-      implements ActionListener, DialogOptionListener, ItemListener {
-
-    private static final Logger LOGGER = LogManager.getLogger();
+        implements ActionListener,
+                   DialogOptionListener,
+                   ItemListener {
 
     public static final int DONE = 0;
     public static final int NEXT = 1;
@@ -115,23 +116,22 @@ public class CustomMekDialog extends AbstractButtonDialog
     private QuirksPanel panQuirks;
     private JPanel panPartReps;
 
-    private JPanel panOptions;
-    // private JScrollPane scrOptions;
+    private PilotOptionsPanel panOptions;
 
-    private JTabbedPane tabAll;
+    private final FlatTabbedPane tabAll = new FlatTabbedPane();
 
     private final JTextField fldInit = new JTextField(3);
     private final JTextField fldCommandInit = new JTextField(3);
     private final JCheckBox chCommander = new JCheckBox();
 
     private final JLabel labDeploymentRound = new JLabel(Messages.getString("CustomMekDialog.labDeployment"),
-          SwingConstants.RIGHT);
+                                                         SwingConstants.RIGHT);
     private final JLabel labDeploymentZone = new JLabel(Messages.getString("CustomMekDialog.labDeploymentZone"),
-          SwingConstants.RIGHT);
+                                                        SwingConstants.RIGHT);
     private final JLabel labDeploymentOffset = new JLabel(Messages.getString("CustomMekDialog.labDeploymentOffset"),
-          SwingConstants.RIGHT);
+                                                          SwingConstants.RIGHT);
     private final JLabel labDeploymentWidth = new JLabel(Messages.getString("CustomMekDialog.labDeploymentWidth"),
-          SwingConstants.RIGHT);
+                                                         SwingConstants.RIGHT);
     private final JComboBox<String> choDeploymentRound = new JComboBox<>();
     private final JComboBox<String> choDeploymentZone = new JComboBox<>();
 
@@ -149,45 +149,48 @@ public class CustomMekDialog extends AbstractButtonDialog
     private JSpinner spinStartingAnySEy;
 
     private final JLabel labDeployShutdown = new JLabel(Messages.getString("CustomMekDialog.labDeployShutdown"),
-          SwingConstants.RIGHT);
+                                                        SwingConstants.RIGHT);
     private final JCheckBox chDeployShutdown = new JCheckBox();
     private final JLabel labDeployProne = new JLabel(Messages.getString("CustomMekDialog.labDeployProne"),
-          SwingConstants.RIGHT);
+                                                     SwingConstants.RIGHT);
     private final JCheckBox chDeployProne = new JCheckBox();
     private final JLabel labDeployHullDown = new JLabel(Messages.getString("CustomMekDialog.labDeployHullDown"),
-          SwingConstants.RIGHT);
+                                                        SwingConstants.RIGHT);
     private final JCheckBox chDeployHullDown = new JCheckBox();
+    private final JLabel labDeployDugIn = new JLabel(Messages.getString("CustomMekDialog.labDeployDugIn"),
+                                                     SwingConstants.RIGHT);
+    private final JCheckBox chDeployDugIn = new JCheckBox();
     private final JLabel labHidden = new JLabel(Messages.getString("CustomMekDialog.labHidden"), SwingConstants.RIGHT);
     private final JCheckBox chHidden = new JCheckBox();
 
     private final JLabel labDeployStealth = new JLabel(Messages.getString("CustomMekDialog.labDeployStealth"),
-          SwingConstants.RIGHT);
+                                                       SwingConstants.RIGHT);
     private final JCheckBox chDeployStealth = new JCheckBox();
 
     private final JLabel labOffBoard = new JLabel(Messages.getString("CustomMekDialog.labOffBoard"),
-          SwingConstants.RIGHT);
+                                                  SwingConstants.RIGHT);
     private final JCheckBox chOffBoard = new JCheckBox();
     private final JLabel labOffBoardDirection = new JLabel(Messages.getString("CustomMekDialog.labOffBoardDirection"),
-          SwingConstants.RIGHT);
+                                                           SwingConstants.RIGHT);
     private final JComboBox<String> choOffBoardDirection = new JComboBox<>();
     private final JLabel labOffBoardDistance = new JLabel(Messages.getString("CustomMekDialog.labOffBoardDistance"),
-          SwingConstants.RIGHT);
+                                                          SwingConstants.RIGHT);
     private final JTextField fldOffBoardDistance = new JTextField(4);
     private final JButton butOffBoardDistance = new JButton("0");
     private final JLabel labStartingMode = new JLabel(Messages.getString("CustomMekDialog.labStartingMode"),
-          SwingConstants.RIGHT);
+                                                      SwingConstants.RIGHT);
     private final JComboBox<String> choStartingMode = new JComboBox<>();
     private final JLabel labCurrentFuel = new JLabel(Messages.getString("CustomMekDialog.labCurrentFuel"),
-          SwingConstants.RIGHT);
+                                                     SwingConstants.RIGHT);
     private final JTextField fldCurrentFuel = new JTextField(7);
     private final JLabel labStartVelocity = new JLabel(Messages.getString("CustomMekDialog.labStartVelocity"),
-          SwingConstants.RIGHT);
+                                                       SwingConstants.RIGHT);
     private final JTextField fldStartVelocity = new JTextField(3);
     private final JLabel labStartAltitude = new JLabel(Messages.getString("CustomMekDialog.labStartAltitude"),
-          SwingConstants.RIGHT);
+                                                       SwingConstants.RIGHT);
     private final JTextField fldStartAltitude = new JTextField(3);
     private final JLabel labStartHeight = new JLabel(Messages.getString("CustomMekDialog.labStartHeight"),
-          SwingConstants.RIGHT);
+                                                     SwingConstants.RIGHT);
     private final JTextField fldStartHeight = new JTextField(3);
     private final JCheckBox chDeployAirborne = new JCheckBox();
     private final JPanel panButtons = new JPanel();
@@ -195,8 +198,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     private final JButton butCancel = new JButton(Messages.getString("Cancel"));
     private final JButton butNext = new JButton(Messages.getString("Next"));
     private final JButton butPrev = new JButton(Messages.getString("Previous"));
-    private EquipChoicePanel m_equip;
-    private final JPanel panEquip = new JPanel();
+    private EquipChoicePanel equipChoicePanel;
     private final List<Entity> entities;
     private boolean okay;
     private int status = CustomMekDialog.DONE;
@@ -208,7 +210,6 @@ public class CustomMekDialog extends AbstractButtonDialog
     private PilotOptions options;
     private PartialRepairs partReps;
     private final HashMap<Integer, WeaponQuirks> h_wpnQuirks = new HashMap<>();
-    private ArrayList<DialogOptionComponentYPanel> optionComps = new ArrayList<>();
     private ArrayList<DialogOptionComponentYPanel> partRepsComps = new ArrayList<>();
 
     private final boolean editable;
@@ -235,15 +236,21 @@ public class CustomMekDialog extends AbstractButtonDialog
     /**
      * Creates new CustomMekDialog
      */
-    public CustomMekDialog(ClientGUI clientgui, Client client, List<Entity> entities, boolean editable) {
+    public CustomMekDialog(ClientGUI clientgui,
+                           Client client,
+                           List<Entity> entities,
+                           boolean editable) {
         this(clientgui, client, entities, editable, true);
     }
 
     /**
      * Creates new CustomMekDialog
      */
-    public CustomMekDialog(ClientGUI clientgui, Client client, List<Entity> entities, boolean editable,
-          boolean editableDeployment) {
+    public CustomMekDialog(ClientGUI clientgui,
+                           Client client,
+                           List<Entity> entities,
+                           boolean editable,
+                           boolean editableDeployment) {
 
         super(clientgui.getFrame(), "CustomizeMekDialog", "CustomMekDialog.title");
         this.entities = entities;
@@ -258,11 +265,15 @@ public class CustomMekDialog extends AbstractButtonDialog
             throw new IllegalStateException("Must pass at least one Entity!");
         }
 
+        bindArrowKeys();
         initialize();
     }
 
-    public CustomMekDialog(JFrame frame, Client client, List<Entity> entities, boolean editable,
-          boolean editableDeployment) {
+    public CustomMekDialog(JFrame frame,
+                           Client client,
+                           List<Entity> entities,
+                           boolean editable,
+                           boolean editableDeployment) {
         super(frame, "CustomizeMekDialog", "CustomMekDialog.title");
         this.entities = entities;
         this.clientGUI = null;
@@ -276,7 +287,41 @@ public class CustomMekDialog extends AbstractButtonDialog
             throw new IllegalStateException("Must pass at least one Entity!");
         }
 
+        bindArrowKeys();
         initialize();
+    }
+
+    /**
+     * Binds Alt+Left Arrow and Alt+Right Arrow keys to the Next and Previous buttons to allow keyboard navigation
+     */
+    private void bindArrowKeys() {
+        JRootPane rootPane = getRootPane();
+
+        // Actions
+        Action nextAction = new AbstractAction() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                butNext.doClick();
+            }
+        };
+
+        Action prevAction = new AbstractAction() {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                butPrev.doClick();
+            }
+        };
+
+        // InputMap & ActionMap
+        InputMap inputMap = rootPane.getInputMap(JComponent.WHEN_IN_FOCUSED_WINDOW);
+        ActionMap actionMap = rootPane.getActionMap();
+
+        // Bind keys
+        inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_RIGHT, InputEvent.ALT_DOWN_MASK), "next");
+        actionMap.put("next", nextAction);
+
+        inputMap.put(KeyStroke.getKeyStroke(KeyEvent.VK_LEFT, InputEvent.ALT_DOWN_MASK), "previous");
+        actionMap.put("previous", prevAction);
     }
 
     public String getSelectedTab() {
@@ -304,9 +349,9 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     private void setOptions() {
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         IOption option;
-        for (final DialogOptionComponentYPanel newVar : optionComps) {
+        for (final DialogOptionComponentYPanel newVar : panOptions.getOptionComponents()) {
             option = newVar.getOption();
             if ((newVar.getValue() == Messages.getString("CustomMekDialog.None"))) {
                 entity.getCrew().getOptions().getOption(option.getName()).setValue("None");
@@ -317,84 +362,12 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     public void refreshOptions() {
-        panOptions.removeAll();
-        optionComps = new ArrayList<>();
-
-        GridBagLayout gridBagLayout = new GridBagLayout();
-        GridBagConstraints c = new GridBagConstraints();
-        panOptions.setLayout(gridBagLayout);
-
-        c.gridwidth = GridBagConstraints.REMAINDER;
-        c.fill = GridBagConstraints.HORIZONTAL;
-        c.insets = new Insets(0, 0, 0, 0);
-        c.ipadx = 0;
-        c.ipady = 0;
-
-        for (Enumeration<IOptionGroup> i = options.getGroups(); i.hasMoreElements(); ) {
-            IOptionGroup group = i.nextElement();
-
-            if (group.getKey().equalsIgnoreCase(PilotOptions.LVL3_ADVANTAGES) &&
-                  !gameOptions().booleanOption(OptionsConstants.RPG_PILOT_ADVANTAGES)) {
-                continue;
-            }
-
-            if (group.getKey().equalsIgnoreCase(PilotOptions.EDGE_ADVANTAGES) &&
-                  !gameOptions().booleanOption(OptionsConstants.EDGE)) {
-                continue;
-            }
-
-            if (group.getKey().equalsIgnoreCase(PilotOptions.MD_ADVANTAGES) &&
-                  !gameOptions().booleanOption(OptionsConstants.RPG_MANEI_DOMINI)) {
-                continue;
-            }
-
-            addGroup(group, gridBagLayout, c);
-
-            Entity entity = entities.get(0);
-            for (Enumeration<IOption> j = group.getOptions(); j.hasMoreElements(); ) {
-                IOption option = j.nextElement();
-
-                if (entity.isBuildingEntityOrGunEmplacement()) {
-                    continue;
-                }
-
-                // a bunch of stuff should get disabled for conv infantry
-                if (entity.isConventionalInfantry() &&
-                      (option.getName().equals(OptionsConstants.MD_VDNI) ||
-                            option.getName().equals(OptionsConstants.MD_BVDNI))) {
-                    continue;
-                }
-
-                // a bunch of stuff should get disabled for all but conventional infantry
-                // Prosthetic enhancements (Enhanced/Improved Enhanced) are infantry-only (IO p.84)
-                // Sensory implants (audio, visual, laser, tele) are infantry-only
-                // Gas Effuser (Pheromone/Toxin) is infantry-only (IO pg 79)
-                String optionName = option.getName();
-                boolean isInfantryOnlyOption = switch (optionName) {
-                    case OptionsConstants.MD_PL_ENHANCED,
-                         OptionsConstants.MD_PL_I_ENHANCED,
-                         OptionsConstants.MD_PL_MASC,
-                         OptionsConstants.MD_CYBER_IMP_AUDIO,
-                         OptionsConstants.MD_CYBER_IMP_VISUAL,
-                         OptionsConstants.MD_CYBER_IMP_LASER,
-                         OptionsConstants.MD_CYBER_IMP_TELE,
-                         OptionsConstants.MD_GAS_EFFUSER_PHEROMONE,
-                         OptionsConstants.MD_GAS_EFFUSER_TOXIN -> true;
-                    default -> false;
-                };
-                if (!entity.isConventionalInfantry() && isInfantryOnlyOption) {
-                    continue;
-                }
-
-                addOption(option, gridBagLayout, c, editable);
-            }
-        }
-
+        panOptions.refreshOptions(options);
         validate();
     }
 
     private void setPartReps() {
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         IOption option;
         for (final DialogOptionComponentYPanel newVar : partRepsComps) {
             option = newVar.getOption();
@@ -411,7 +384,7 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     public void refreshPartReps() {
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         panPartReps.removeAll();
         partRepsComps = new ArrayList<>();
         for (Enumeration<IOptionGroup> i = partReps.getGroups(); i.hasMoreElements(); ) {
@@ -435,16 +408,13 @@ public class CustomMekDialog extends AbstractButtonDialog
         panQuirks.refreshQuirks();
     }
 
-    private void addGroup(IOptionGroup group, GridBagLayout gridBagLayout, GridBagConstraints gridBagConstraints) {
-        JLabel groupLabel = new JLabel(group.getDisplayableName());
-        gridBagLayout.setConstraints(groupLabel, gridBagConstraints);
-        panOptions.add(groupLabel);
-    }
-
-    private void addOption(IOption option, GridBagLayout gridBagLayout, GridBagConstraints gridBagConstraints,
-          boolean editable) {
-        Entity entity = entities.get(0);
-        DialogOptionComponentYPanel optionComp = new DialogOptionComponentYPanel(this, option, editable);
+    /**
+     * Finishes one pilot option row built by {@link PilotOptionsPanel}: populates choice values and attaches the inline
+     * prosthetic controls. Passed to the panel as its {@link PilotOptionsPanel.OptionRowConfigurator}.
+     */
+    private void configureOptionRow(IOption option,
+                                    DialogOptionComponentYPanel optionComp) {
+        Entity entity = entities.getFirst();
 
         if ((OptionsConstants.GUNNERY_WEAPON_SPECIALIST).equals(option.getName())) {
             optionComp.addValue(Messages.getString("CustomMekDialog.None"));
@@ -506,30 +476,27 @@ public class CustomMekDialog extends AbstractButtonDialog
         if (OptionsConstants.MD_PL_EXTRA_LIMBS.equals(option.getName()) && entity.isConventionalInfantry()) {
             addInlineExtraneousControls(optionComp, entity);
         }
-
-        gridBagLayout.setConstraints(optionComp, gridBagConstraints);
-        panOptions.add(optionComp);
-        optionComps.add(optionComp);
     }
 
-    private void addPartRep(IOption option, boolean editable) {
+    private void addPartRep(IOption option,
+                            boolean editable) {
         DialogOptionComponentYPanel optionComp = new DialogOptionComponentYPanel(this, option, editable);
         panPartReps.add(optionComp, GBC.eol());
         partRepsComps.add(optionComp);
     }
 
     /**
-     * Adds inline prosthetic enhancement controls (dropdown + spinner) to the option component panel.
-     * For Standard Enhanced: adds slot 1 controls only.
-     * For Improved Enhanced: adds slot 1 and slot 2 controls.
+     * Adds inline prosthetic enhancement controls (dropdown + spinner) to the option component panel. For Standard
+     * Enhanced: adds slot 1 controls only. For Improved Enhanced: adds slot 1 and slot 2 controls.
      *
-     * @param optionComp The DialogOptionComponentYPanel to add controls to
-     * @param entity The entity being configured
+     * @param optionComp         The DialogOptionComponentYPanel to add controls to
+     * @param entity             The entity being configured
      * @param isStandardEnhanced True for MD_PL_ENHANCED (slot 1 only), false for MD_PL_I_ENHANCED (both slots)
      */
-    private void addInlineProstheticControls(DialogOptionComponentYPanel optionComp, Entity entity,
-          boolean isStandardEnhanced) {
-        Infantry infantry = (entity instanceof Infantry) ? (Infantry) entity : null;
+    private void addInlineProstheticControls(DialogOptionComponentYPanel optionComp,
+                                             Entity entity,
+                                             boolean isStandardEnhanced) {
+        ConvInfantry infantry = (entity instanceof ConvInfantry) ? (ConvInfantry) entity : null;
         String typeTooltip = Messages.getString("CustomMekDialog.ProstheticTypeTooltip");
         String countTooltip = Messages.getString("CustomMekDialog.ProstheticCountTooltip");
 
@@ -675,8 +642,9 @@ public class CustomMekDialog extends AbstractButtonDialog
      * @param optionComp The DialogOptionComponentYPanel to add controls to
      * @param entity     The entity being configured
      */
-    private void addInlineExtraneousControls(DialogOptionComponentYPanel optionComp, Entity entity) {
-        Infantry infantry = (entity instanceof Infantry) ? (Infantry) entity : null;
+    private void addInlineExtraneousControls(DialogOptionComponentYPanel optionComp,
+                                             Entity entity) {
+        ConvInfantry infantry = (entity instanceof ConvInfantry) ? (ConvInfantry) entity : null;
         String pair1Tooltip = Messages.getString("CustomMekDialog.ExtraneousPair1Tooltip");
         String pair2Tooltip = Messages.getString("CustomMekDialog.ExtraneousPair2Tooltip");
 
@@ -735,7 +703,7 @@ public class CustomMekDialog extends AbstractButtonDialog
         // Glider or powered flight wings limit extraneous limbs to one pair (IO p.85)
         // Disable pair 2 if any wing type is already enabled
         boolean hasWings = entity.hasAbility(OptionsConstants.MD_PL_GLIDER)
-              || entity.hasAbility(OptionsConstants.MD_PL_FLIGHT);
+                           || entity.hasAbility(OptionsConstants.MD_PL_FLIGHT);
         if (hasWings && editable) {
             choExtraneousPair2.setEnabled(false);
             lblExtraneousPair2.setEnabled(false);
@@ -748,15 +716,15 @@ public class CustomMekDialog extends AbstractButtonDialog
         // Add listener to prevent pair 2 selection when any wing type is enabled
         choExtraneousPair2.addItemListener(event -> {
             if (event.getStateChange() == ItemEvent.SELECTED
-                  && choExtraneousPair2.getSelectedIndex() > 0
-                  && (isOptionSelected(OptionsConstants.MD_PL_GLIDER)
-                  || isOptionSelected(OptionsConstants.MD_PL_FLIGHT))) {
+                && choExtraneousPair2.getSelectedIndex() > 0
+                && (isOptionSelected(OptionsConstants.MD_PL_GLIDER)
+                    || isOptionSelected(OptionsConstants.MD_PL_FLIGHT))) {
                 // Revert to None
                 choExtraneousPair2.setSelectedIndex(0);
                 JOptionPane.showMessageDialog(this,
-                      Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbs"),
-                      Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbsTitle"),
-                      JOptionPane.WARNING_MESSAGE);
+                                              Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbs"),
+                                              Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbsTitle"),
+                                              JOptionPane.WARNING_MESSAGE);
             }
         });
     }
@@ -765,9 +733,10 @@ public class CustomMekDialog extends AbstractButtonDialog
      * Updates the visibility of inline prosthetic enhancement controls when checkbox state changes.
      *
      * @param optionName The option that was toggled (MD_PL_ENHANCED, MD_PL_I_ENHANCED, or MD_PL_EXTRA_LIMBS)
-     * @param isChecked Whether the checkbox is now checked
+     * @param isChecked  Whether the checkbox is now checked
      */
-    private void updateInlineProstheticVisibility(String optionName, boolean isChecked) {
+    private void updateInlineProstheticVisibility(String optionName,
+                                                  boolean isChecked) {
         if (OptionsConstants.MD_PL_ENHANCED.equals(optionName)) {
             // Standard Enhanced uses its own slot 1 controls
             if (choProstheticTypeStd != null) {
@@ -802,11 +771,11 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     /**
-     * Applies prosthetic enhancement settings from the UI to the entity.
-     * Reads from the controls of whichever prosthetic option (Standard or Improved) is currently selected.
+     * Applies prosthetic enhancement settings from the UI to the entity. Reads from the controls of whichever
+     * prosthetic option (Standard or Improved) is currently selected.
      */
     private void applyProstheticEnhancement(Entity entity) {
-        if (!(entity instanceof Infantry infantry)) {
+        if (!(entity instanceof ConvInfantry infantry)) {
             return;
         }
 
@@ -838,8 +807,10 @@ public class CustomMekDialog extends AbstractButtonDialog
     /**
      * Applies a single prosthetic enhancement slot from UI to entity.
      */
-    private void applyProstheticSlot(Infantry infantry, JComboBox<String> typeDropdown,
-          JSpinner countSpinner, boolean isSlot1) {
+    private void applyProstheticSlot(ConvInfantry infantry,
+                                     JComboBox<String> typeDropdown,
+                                     JSpinner countSpinner,
+                                     boolean isSlot1) {
         int selectedIndex = typeDropdown.getSelectedIndex();
         if (selectedIndex <= 0) {
             // "None" selected - clear this slot
@@ -880,7 +851,7 @@ public class CustomMekDialog extends AbstractButtonDialog
      * needed.
      */
     private void applyExtraneousLimbs(Entity entity) {
-        if (!(entity instanceof Infantry infantry)) {
+        if (!(entity instanceof ConvInfantry infantry)) {
             return;
         }
 
@@ -903,7 +874,9 @@ public class CustomMekDialog extends AbstractButtonDialog
     /**
      * Applies a single extraneous limb pair from UI to entity.
      */
-    private void applyExtraneousPair(Infantry infantry, JComboBox<String> typeDropdown, boolean isPair1) {
+    private void applyExtraneousPair(ConvInfantry infantry,
+                                     JComboBox<String> typeDropdown,
+                                     boolean isPair1) {
         int selectedIndex = typeDropdown.getSelectedIndex();
         if (selectedIndex <= 0) {
             // "None" selected - clear this pair
@@ -936,19 +909,21 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     @Override
-    public void optionClicked(DialogOptionComponentYPanel comp, IOption option, boolean state) {
+    public void optionClicked(DialogOptionComponentYPanel comp,
+                              IOption option,
+                              boolean state) {
         // Enforce max 2 sensory implants rule for infantry
         // Defensive check for isConventionalInfantry in case options are set through other means
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
         if (state && entity.isConventionalInfantry() && isSensoryImplant(option.getName())) {
             int count = countSelectedSensoryImplants(comp);
             if (count >= 2) {
                 // Revert the selection
                 comp.setSelected(false);
                 JOptionPane.showMessageDialog(this,
-                      Messages.getString("CustomMekDialog.MaxSensoryImplants"),
-                      Messages.getString("CustomMekDialog.MaxSensoryImplantsTitle"),
-                      JOptionPane.WARNING_MESSAGE);
+                                              Messages.getString("CustomMekDialog.MaxSensoryImplants"),
+                                              Messages.getString("CustomMekDialog.MaxSensoryImplantsTitle"),
+                                              JOptionPane.WARNING_MESSAGE);
             }
         }
 
@@ -972,47 +947,47 @@ public class CustomMekDialog extends AbstractButtonDialog
 
         // When wings are deselected, re-enable extraneous pair 2 if no other wing type is active
         if (!state && (option.getName().equals(OptionsConstants.MD_PL_GLIDER)
-              || option.getName().equals(OptionsConstants.MD_PL_FLIGHT))) {
+                       || option.getName().equals(OptionsConstants.MD_PL_FLIGHT))) {
             boolean anyWingsActive = isOptionSelected(OptionsConstants.MD_PL_GLIDER)
-                  || isOptionSelected(OptionsConstants.MD_PL_FLIGHT);
+                                     || isOptionSelected(OptionsConstants.MD_PL_FLIGHT);
             updateExtraneousPair2ForWings(anyWingsActive);
         }
 
         // Update prosthetic enhancement inline control visibility when Enhanced/Improved Enhanced/Extraneous is toggled
         if (option.getName().equals(OptionsConstants.MD_PL_ENHANCED)
-              || option.getName().equals(OptionsConstants.MD_PL_I_ENHANCED)
-              || option.getName().equals(OptionsConstants.MD_PL_EXTRA_LIMBS)) {
+            || option.getName().equals(OptionsConstants.MD_PL_I_ENHANCED)
+            || option.getName().equals(OptionsConstants.MD_PL_EXTRA_LIMBS)) {
             updateInlineProstheticVisibility(option.getName(), state);
         }
 
         // Gas Effuser (Pheromone/Toxin) is only for Conventional Infantry (IO pg 79)
         if (state && !entity.isConventionalInfantry()
-              && (option.getName().equals(OptionsConstants.MD_GAS_EFFUSER_PHEROMONE)
-              || option.getName().equals(OptionsConstants.MD_GAS_EFFUSER_TOXIN))) {
+            && (option.getName().equals(OptionsConstants.MD_GAS_EFFUSER_PHEROMONE)
+                || option.getName().equals(OptionsConstants.MD_GAS_EFFUSER_TOXIN))) {
             comp.setSelected(false);
             JOptionPane.showMessageDialog(this,
-                  Messages.getString("CustomMekDialog.GasEffuserInfantryOnly"),
-                  Messages.getString("CustomMekDialog.GasEffuserInfantryOnlyTitle"),
-                  JOptionPane.WARNING_MESSAGE);
+                                          Messages.getString("CustomMekDialog.GasEffuserInfantryOnly"),
+                                          Messages.getString("CustomMekDialog.GasEffuserInfantryOnlyTitle"),
+                                          JOptionPane.WARNING_MESSAGE);
         }
 
         // Can only have one Gas Effuser type at a time (IO pg 79)
         if (state && option.getName().equals(OptionsConstants.MD_GAS_EFFUSER_PHEROMONE)
-              && hasOtherGasEffuserSelected(comp, OptionsConstants.MD_GAS_EFFUSER_TOXIN)) {
+            && hasOtherGasEffuserSelected(comp, OptionsConstants.MD_GAS_EFFUSER_TOXIN)) {
             comp.setSelected(false);
             JOptionPane.showMessageDialog(this,
-                  Messages.getString("CustomMekDialog.GasEffuserOnlyOne"),
-                  Messages.getString("CustomMekDialog.GasEffuserOnlyOneTitle"),
-                  JOptionPane.WARNING_MESSAGE);
+                                          Messages.getString("CustomMekDialog.GasEffuserOnlyOne"),
+                                          Messages.getString("CustomMekDialog.GasEffuserOnlyOneTitle"),
+                                          JOptionPane.WARNING_MESSAGE);
         }
 
         if (state && option.getName().equals(OptionsConstants.MD_GAS_EFFUSER_TOXIN)
-              && hasOtherGasEffuserSelected(comp, OptionsConstants.MD_GAS_EFFUSER_PHEROMONE)) {
+            && hasOtherGasEffuserSelected(comp, OptionsConstants.MD_GAS_EFFUSER_PHEROMONE)) {
             comp.setSelected(false);
             JOptionPane.showMessageDialog(this,
-                  Messages.getString("CustomMekDialog.GasEffuserOnlyOne"),
-                  Messages.getString("CustomMekDialog.GasEffuserOnlyOneTitle"),
-                  JOptionPane.WARNING_MESSAGE);
+                                          Messages.getString("CustomMekDialog.GasEffuserOnlyOne"),
+                                          Messages.getString("CustomMekDialog.GasEffuserOnlyOneTitle"),
+                                          JOptionPane.WARNING_MESSAGE);
         }
 
         // DNI types are mutually exclusive - can only have one of VDNI, BVDNI, or Proto DNI
@@ -1022,32 +997,32 @@ public class CustomMekDialog extends AbstractButtonDialog
 
         // Glider wings limit extraneous limbs to one pair (IO p.85)
         if (state && option.getName().equals(OptionsConstants.MD_PL_GLIDER)
-              && entity.isConventionalInfantry()) {
+            && entity.isConventionalInfantry()) {
             updateExtraneousPair2ForGliderWings(true);
         } else if (!state && option.getName().equals(OptionsConstants.MD_PL_GLIDER)
-              && entity.isConventionalInfantry()) {
+                   && entity.isConventionalInfantry()) {
             updateExtraneousPair2ForGliderWings(false);
         }
 
         // Proto DNI is BattleMek only (IO pg 83)
         if (state && option.getName().equals(OptionsConstants.MD_PROTO_DNI)
-              && !isValidForProtoDni(entity)) {
+            && !isValidForProtoDni(entity)) {
             comp.setSelected(false);
             JOptionPane.showMessageDialog(this,
-                  Messages.getString("CustomMekDialog.ProtoDniBattleMekOnly"),
-                  Messages.getString("CustomMekDialog.ProtoDniBattleMekOnlyTitle"),
-                  JOptionPane.WARNING_MESSAGE);
+                                          Messages.getString("CustomMekDialog.ProtoDniBattleMekOnly"),
+                                          Messages.getString("CustomMekDialog.ProtoDniBattleMekOnlyTitle"),
+                                          JOptionPane.WARNING_MESSAGE);
         }
 
         // VDNI/BVDNI valid for BM, IM, BA, CV, SV, AF, CF (IO pg 71)
         if (state && (option.getName().equals(OptionsConstants.MD_VDNI)
-              || option.getName().equals(OptionsConstants.MD_BVDNI))
-              && !isValidForVdni(entity)) {
+                      || option.getName().equals(OptionsConstants.MD_BVDNI))
+            && !isValidForVdni(entity)) {
             comp.setSelected(false);
             JOptionPane.showMessageDialog(this,
-                  Messages.getString("CustomMekDialog.VdniInvalidUnitType"),
-                  Messages.getString("CustomMekDialog.VdniInvalidUnitTypeTitle"),
-                  JOptionPane.WARNING_MESSAGE);
+                                          Messages.getString("CustomMekDialog.VdniInvalidUnitType"),
+                                          Messages.getString("CustomMekDialog.VdniInvalidUnitTypeTitle"),
+                                          JOptionPane.WARNING_MESSAGE);
         }
 
         // EI Implant pilot option automatically adds/removes EI Interface equipment (IO p.69)
@@ -1060,8 +1035,8 @@ public class CustomMekDialog extends AbstractButtonDialog
                 }
             }
             // Also update the Equipment tab checkbox directly
-            if (m_equip != null) {
-                m_equip.setEICockpitSelected(state);
+            if (equipChoicePanel != null) {
+                equipChoicePanel.setEICockpitSelected(state);
             }
         }
 
@@ -1069,21 +1044,21 @@ public class CustomMekDialog extends AbstractButtonDialog
         // This ensures Equipment tab sees correct implant state when checking hasDNIImplant()
         // The equipment is not auto-added - user must confirm via the checkbox (IO p.83)
         if (option.getName().equals(OptionsConstants.MD_VDNI)
-              || option.getName().equals(OptionsConstants.MD_BVDNI)
-              || option.getName().equals(OptionsConstants.MD_PROTO_DNI)) {
+            || option.getName().equals(OptionsConstants.MD_BVDNI)
+            || option.getName().equals(OptionsConstants.MD_PROTO_DNI)) {
             // Update entity crew options directly (like EI does via setEIInterface)
             for (Entity e : entities) {
                 e.getCrew().getOptions().getOption(option.getName()).setValue(state);
             }
             // Also update Equipment tab checkbox if it exists
-            if (m_equip != null) {
+            if (equipChoicePanel != null) {
                 boolean anyDniSelected = isOptionSelected(OptionsConstants.MD_VDNI)
-                      || isOptionSelected(OptionsConstants.MD_BVDNI)
-                      || isOptionSelected(OptionsConstants.MD_PROTO_DNI);
+                                         || isOptionSelected(OptionsConstants.MD_BVDNI)
+                                         || isOptionSelected(OptionsConstants.MD_PROTO_DNI);
                 if (state) {
                     anyDniSelected = true;
                 }
-                m_equip.setDNICockpitModSelected(anyDniSelected);
+                equipChoicePanel.setDNICockpitModSelected(anyDniSelected);
             }
         }
     }
@@ -1093,9 +1068,9 @@ public class CustomMekDialog extends AbstractButtonDialog
      */
     private boolean isSensoryImplant(String optionName) {
         return optionName.equals(OptionsConstants.MD_CYBER_IMP_AUDIO)
-              || optionName.equals(OptionsConstants.MD_CYBER_IMP_VISUAL)
-              || optionName.equals(OptionsConstants.MD_CYBER_IMP_LASER)
-              || optionName.equals(OptionsConstants.MD_CYBER_IMP_TELE);
+               || optionName.equals(OptionsConstants.MD_CYBER_IMP_VISUAL)
+               || optionName.equals(OptionsConstants.MD_CYBER_IMP_LASER)
+               || optionName.equals(OptionsConstants.MD_CYBER_IMP_TELE);
     }
 
     /**
@@ -1103,12 +1078,12 @@ public class CustomMekDialog extends AbstractButtonDialog
      */
     private int countSelectedSensoryImplants(DialogOptionComponentYPanel excludeComp) {
         int count = 0;
-        for (DialogOptionComponentYPanel optComp : optionComps) {
+        for (DialogOptionComponentYPanel optComp : panOptions.getOptionComponents()) {
             if (optComp == excludeComp) {
                 continue;
             }
             if (isSensoryImplant(optComp.getOption().getName())
-                  && Boolean.TRUE.equals(optComp.getValue())) {
+                && Boolean.TRUE.equals(optComp.getValue())) {
                 count++;
             }
         }
@@ -1118,13 +1093,14 @@ public class CustomMekDialog extends AbstractButtonDialog
     /**
      * Checks if another gas effuser of the specified type is already selected.
      */
-    private boolean hasOtherGasEffuserSelected(DialogOptionComponentYPanel excludeComp, String otherEffuserName) {
-        for (DialogOptionComponentYPanel optComp : optionComps) {
+    private boolean hasOtherGasEffuserSelected(DialogOptionComponentYPanel excludeComp,
+                                               String otherEffuserName) {
+        for (DialogOptionComponentYPanel optComp : panOptions.getOptionComponents()) {
             if (optComp == excludeComp) {
                 continue;
             }
             if (optComp.getOption().getName().equals(otherEffuserName)
-                  && Boolean.TRUE.equals(optComp.getValue())) {
+                && Boolean.TRUE.equals(optComp.getValue())) {
                 return true;
             }
         }
@@ -1135,7 +1111,7 @@ public class CustomMekDialog extends AbstractButtonDialog
      * Deselects the option with the given name.
      */
     private void deselectOption(String optionName) {
-        for (DialogOptionComponentYPanel optComp : optionComps) {
+        for (DialogOptionComponentYPanel optComp : panOptions.getOptionComponents()) {
             if (optComp.getOption().getName().equals(optionName)) {
                 optComp.setSelected(false);
                 break;
@@ -1147,7 +1123,7 @@ public class CustomMekDialog extends AbstractButtonDialog
      * Checks if a boolean option is currently selected.
      */
     private boolean isOptionSelected(String optionName) {
-        for (DialogOptionComponentYPanel optComp : optionComps) {
+        for (DialogOptionComponentYPanel optComp : panOptions.getOptionComponents()) {
             if (optComp.getOption().getName().equals(optionName)) {
                 Object value = optComp.getValue();
                 return (value instanceof Boolean) && (Boolean) value;
@@ -1172,9 +1148,9 @@ public class CustomMekDialog extends AbstractButtonDialog
             if (choExtraneousPair2.getSelectedIndex() > 0) {
                 choExtraneousPair2.setSelectedIndex(0);
                 JOptionPane.showMessageDialog(this,
-                      Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbs"),
-                      Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbsTitle"),
-                      JOptionPane.INFORMATION_MESSAGE);
+                                              Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbs"),
+                                              Messages.getString("CustomMekDialog.GliderWingsLimitExtraneousLimbsTitle"),
+                                              JOptionPane.INFORMATION_MESSAGE);
             }
             choExtraneousPair2.setEnabled(false);
             if (lblExtraneousPair2 != null) {
@@ -1195,23 +1171,62 @@ public class CustomMekDialog extends AbstractButtonDialog
      */
     private boolean isDniOption(String optionName) {
         return optionName.equals(OptionsConstants.MD_VDNI)
-              || optionName.equals(OptionsConstants.MD_BVDNI)
-              || optionName.equals(OptionsConstants.MD_PROTO_DNI);
+               || optionName.equals(OptionsConstants.MD_BVDNI)
+               || optionName.equals(OptionsConstants.MD_PROTO_DNI);
     }
 
     /**
      * Deselects other DNI options when one is selected (they are mutually exclusive).
      */
     private void deselectOtherDniOptions(DialogOptionComponentYPanel selectedComp) {
-        for (DialogOptionComponentYPanel optComp : optionComps) {
+        for (DialogOptionComponentYPanel optComp : panOptions.getOptionComponents()) {
             if (optComp == selectedComp) {
                 continue;
             }
             if (isDniOption(optComp.getOption().getName())
-                  && Boolean.TRUE.equals(optComp.getValue())) {
+                && Boolean.TRUE.equals(optComp.getValue())) {
                 optComp.setSelected(false);
             }
         }
+    }
+
+    /**
+     * Returns true when this unit, or anything it tows, carries a weapon that can be fired from off board.
+     * <p>
+     * A train acts as one unit for firing (TM, Trailers), so a tractor with no artillery of its own still belongs off
+     * board when it is pulling a gun trailer. Without this a Prime Mover towing a Gun Trailer could never put that gun
+     * off board, because the tractor alone would not qualify.
+     * </p>
+     */
+    private boolean trainCarriesArtillery(Entity entity) {
+        if (carriesOffBoardWeapon(entity)) {
+            return true;
+        }
+
+        for (int towedId : entity.getAllTowedUnits()) {
+            Entity trailer = (entity.getGame() == null) ? null : entity.getGame().getEntity(towedId);
+
+            if ((trailer != null) && carriesOffBoardWeapon(trailer)) {
+                return true;
+            }
+        }
+
+        return false;
+    }
+
+    /**
+     * Returns true when the unit mounts artillery or a capital missile bay, the weapons that can fire off board.
+     */
+    private boolean carriesOffBoardWeapon(Entity entity) {
+        for (WeaponMounted weapon : entity.getWeaponList()) {
+            WeaponType weaponType = weapon.getType();
+
+            if (weaponType.hasFlag(WeaponType.F_ARTILLERY) || (weaponType instanceof CapitalMissileBayWeapon)) {
+                return true;
+            }
+        }
+
+        return false;
     }
 
     /**
@@ -1226,11 +1241,11 @@ public class CustomMekDialog extends AbstractButtonDialog
      */
     private boolean isValidForVdni(Entity entity) {
         return entity.isMek()
-              || entity.isBattleArmor()
-              || entity.isCombatVehicle()
-              || entity.isSupportVehicle()
-              || entity.isAerospaceFighter()
-              || entity.isConventionalFighter();
+               || entity.isBattleArmor()
+               || entity.isCombatVehicle()
+               || entity.isSupportVehicle()
+               || entity.isAerospaceFighter()
+               || entity.isConventionalFighter();
     }
 
     /**
@@ -1252,7 +1267,9 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     @Override
-    public void optionSwitched(DialogOptionComponentYPanel clickedComp, IOption option, int i) {
+    public void optionSwitched(DialogOptionComponentYPanel clickedComp,
+                               IOption option,
+                               int i) {
         // nothing implemented yet
     }
 
@@ -1264,11 +1281,33 @@ public class CustomMekDialog extends AbstractButtonDialog
         return status;
     }
 
+    /**
+     * The commander flag and, when the option is on, its initiative bonus beside it, as one control for a single
+     * pilot's Advanced section. A tick box on its own is a few pixels wide and its label was being cut off; paired
+     * with the number it decides, both read at a glance.
+     *
+     * @param commandInitiative whether the Commander Initiative option is on, so the bonus field is shown
+     *
+     * @return the panel holding the flag and, optionally, the bonus field
+     */
+    private JPanel commanderControls(boolean commandInitiative) {
+        JPanel controls = new JPanel(new FlowLayout(FlowLayout.LEFT, 0, 0));
+        controls.add(chCommander);
+        if (commandInitiative) {
+            JLabel commandInitLabel = new JLabel(Messages.getString("CustomMekDialog.labCommandInit"));
+            commandInitLabel.setBorder(BorderFactory.createEmptyBorder(0, UIUtil.scaleForGUI(10), 0,
+                  UIUtil.scaleForGUI(4)));
+            controls.add(commandInitLabel);
+            controls.add(fldCommandInit);
+        }
+        return controls;
+    }
+
     private void refreshDeployment() {
         if (this.clientGUI == null) {
             return;
         }
-        Entity entity = entities.get(0);
+        Entity entity = entities.getFirst();
 
         if (entity instanceof QuadVee) {
             choStartingMode.removeItemListener(this);
@@ -1302,16 +1341,21 @@ public class CustomMekDialog extends AbstractButtonDialog
         txtDeploymentWidth.setEnabled(false);
 
         choDeploymentRound.removeAllItems();
+        int walkOnOffset = 0;
+        if (Game.rulesManager.getRulesGame().isWalkOnDeployment()) {
+            choDeploymentRound.addItem(Messages.getString("CustomMekDialog.PreGame"));
+            walkOnOffset = 1;
+        }
         choDeploymentRound.addItem(Messages.getString("CustomMekDialog.StartOfGame"));
 
-        if (entity.getDeployRound() < 1) {
-            choDeploymentRound.setSelectedIndex(0);
+        if (entity.getDeployRound() < 1 && entity.getDeployRound() >= 0) {
+            choDeploymentRound.setSelectedIndex(0 + walkOnOffset);
         }
 
         for (int i = 1; i <= 40; i++) {
             choDeploymentRound.addItem(Messages.getString("CustomMekDialog.AfterRound") + i);
             if (entity.getDeployRound() == i) {
-                choDeploymentRound.setSelectedIndex(i);
+                choDeploymentRound.setSelectedIndex(i + walkOnOffset);
             }
         }
 
@@ -1335,7 +1379,7 @@ public class CustomMekDialog extends AbstractButtonDialog
 
         if (client.getGame().getPhase().isLounge()) {
             for (int zoneID : ServerBoardHelper.getPossibleGameBoard(clientGUI.getClient().getMapSettings(), true)
-                  .getCustomDeploymentZones()) {
+                                               .getCustomDeploymentZones()) {
                 choDeploymentZone.addItem("Zone " + zoneID);
             }
         }
@@ -1367,8 +1411,8 @@ public class CustomMekDialog extends AbstractButtonDialog
         spinStartingAnySEy.setValue(y);
 
         boolean enableDeploymentZoneControls = choDeploymentZone.isEnabled() &&
-              (choDeploymentZone.getSelectedIndex() > 0) &&
-              (choDeploymentZone.getSelectedIndex() < Board.NUM_ZONES);
+                                               (choDeploymentZone.getSelectedIndex() > 0) &&
+                                               (choDeploymentZone.getSelectedIndex() < Board.NUM_ZONES);
         txtDeploymentOffset.setEnabled(enableDeploymentZoneControls);
         txtDeploymentWidth.setEnabled(enableDeploymentZoneControls);
 
@@ -1378,6 +1422,14 @@ public class CustomMekDialog extends AbstractButtonDialog
         txtDeploymentOffset.setEnabled(editableDeployment);
         txtDeploymentWidth.setEnabled(editableDeployment);
         choDeploymentRound.setEnabled(editableDeployment);
+
+        if (Game.rulesManager.getRulesGame().restrictDeploymentWidth(null, choDeploymentZone.getSelectedIndex() - 1)) {
+            txtDeploymentWidth.setEnabled(false);
+        } else {
+            if (editableDeployment) {
+                txtDeploymentWidth.setEnabled(true);
+            }
+        }
 
         chHidden.removeActionListener(this);
         boolean enableHidden = !(entity instanceof Dropship) && !entity.isAirborne() && !entity.isAirborneVTOLorWIGE();
@@ -1400,48 +1452,42 @@ public class CustomMekDialog extends AbstractButtonDialog
             // effective range, even if many of the unit's weapons would be out of range
             int maxDistance = 0;
             for (Entity entity : entities) {
-                for (WeaponMounted wep : entity.getWeaponList()) {
-                    WeaponType w = wep.getType();
-                    int nDistance = 0;
-                    if (w.hasFlag(WeaponType.F_ARTILLERY)) {
-                        if (w instanceof ArtilleryBayWeapon) {
-                            // Artillery bays can mix and match, so limit the bay
-                            // to the shortest range of the weapons in it
-                            nDistance = getBayShortestRange(wep);
-                        } else {
-                            // Max TO range in map sheets - 1 for the actual play area
-                            nDistance = (w.getLongRange() - 1);
-                        }
-                    } else if (w.isCapital() || w.isSubCapital()) {
-                        // Capital weapons use their maximum space hex range as the map sheet range
-                        if (w.getMaxRange(wep) == WeaponType.RANGE_EXT) {
-                            nDistance = 50;
-                        }
-                        if (w.getMaxRange(wep) == WeaponType.RANGE_LONG) {
-                            nDistance = 40;
-                        }
-                        if (w.getMaxRange(wep) == WeaponType.RANGE_MED) {
-                            nDistance = 24;
-                        }
-                        if (w.getMaxRange(wep) == WeaponType.RANGE_SHORT) {
-                            nDistance = 12;
-                        }
+                for (WeaponMounted weaponMount : entity.getWeaponList()) {
+                    WeaponType weaponType = weaponMount.getType();
+                    int distanceInHexes = 0;
+                    if (weaponType.hasFlag(WeaponType.F_ARTILLERY)) {
+                        // Artillery bays can mix and match, so limit the bay
+                        // to the shortest range of the weapons in it
+                        int ratedRangeInMapSheets = (weaponType instanceof ArtilleryBayWeapon)
+                                                    ? getBayShortestRange(weaponMount)
+                                                    : weaponType.getLongRange();
+                        distanceInHexes = offBoardArtilleryDistance(entity, weaponType, ratedRangeInMapSheets);
+                    } else if (weaponType.isCapital() || weaponType.isSubCapital()) {
+                        // Capital weapons use their maximum space hex range as the map sheet range. The range
+                        // bracket is read once: working it out walks the mount's linked ammo.
+                        int rangeInMapSheets = switch (weaponType.getMaxRange(weaponMount)) {
+                            case WeaponType.RANGE_EXT -> 50;
+                            case WeaponType.RANGE_LONG -> 40;
+                            case WeaponType.RANGE_MED -> 24;
+                            case WeaponType.RANGE_SHORT -> 12;
+                            default -> 0;
+                        };
+                        // Now, convert to hexes
+                        distanceInHexes = rangeInMapSheets * Board.DEFAULT_BOARD_HEIGHT;
                     }
-                    // Now, convert to map sheets
-                    nDistance = nDistance * Board.DEFAULT_BOARD_HEIGHT;
                     // And set our maximum slider hex distance based on the calculations
-                    if (nDistance > maxDistance) {
-                        maxDistance = nDistance;
+                    if (distanceInHexes > maxDistance) {
+                        maxDistance = distanceInHexes;
                     }
                 }
 
             }
             SliderDialog sl = new SliderDialog(clientGUI.getFrame(),
-                  Messages.getString("CustomMekDialog.offboardDistanceTitle"),
-                  Messages.getString("CustomMekDialog.offboardDistanceQuestion"),
-                  Math.min(Math.max(entities.get(0).getOffBoardDistance(), 17), maxDistance),
-                  17,
-                  maxDistance);
+                                               Messages.getString("CustomMekDialog.offboardDistanceTitle"),
+                                               Messages.getString("CustomMekDialog.offboardDistanceQuestion"),
+                                               Math.clamp(entities.getFirst().getOffBoardDistance(), 17, maxDistance),
+                                               17,
+                                               maxDistance);
             if (!sl.showDialog()) {
                 return;
             }
@@ -1471,16 +1517,38 @@ public class CustomMekDialog extends AbstractButtonDialog
         }
     }
 
-    private static int getBayShortestRange(WeaponMounted wep) {
+    /**
+     * @param weaponMount the artillery bay to measure
+     * @return the rated range in map sheets of the shortest-ranged weapon in the bay, since that is as far as the whole
+     * bay can reach
+     */
+    private static int getBayShortestRange(WeaponMounted weaponMount) {
         int bayShortestRange = 150; // Cruise missile/120
-        for (WeaponMounted bayWeapons : wep.getBayWeapons()) {
-            // Max TO range in map sheets - 1 for the actual play area
-            int currentDistance = (bayWeapons.getType().getLongRange() - 1);
-            if (currentDistance < bayShortestRange) {
-                bayShortestRange = currentDistance;
-            }
+        for (WeaponMounted bayWeapon : weaponMount.getBayWeapons()) {
+            bayShortestRange = Math.min(bayShortestRange, bayWeapon.getType().getLongRange());
         }
         return bayShortestRange;
+    }
+
+    /**
+     * Calculates how far off board a unit may deploy and still reach the play area with an artillery weapon. One map
+     * sheet of the weapon's range is reserved for the play area itself. A crew with the Oblique Artilleryman ability
+     * reaches ten percent farther (CamOps p.78, 5th printing), and ten percent of a map sheet is a fraction of one, so
+     * the calculation is made in hexes.
+     *
+     * @param entity                the unit being deployed off board
+     * @param weaponType            the type of the artillery weapon being measured
+     * @param ratedRangeInMapSheets the artillery weapon's rated range, in map sheets
+     * @return the greatest distance off board the unit may deploy, in hexes
+     */
+    private static int offBoardArtilleryDistance(Entity entity,
+                                                 WeaponType weaponType,
+                                                 int ratedRangeInMapSheets) {
+        int rangeInHexes = ArtilleryRange.extendedRangeInHexes(ratedRangeInMapSheets,
+                                                               ArtilleryRange.isExtendedByObliqueArtilleryman(entity,
+                                                                                                              weaponType));
+        // The play area itself takes up one map sheet of the weapon's reach
+        return Math.max(rangeInHexes - Board.DEFAULT_BOARD_HEIGHT, 0);
     }
 
     @Override
@@ -1497,18 +1565,18 @@ public class CustomMekDialog extends AbstractButtonDialog
         boolean isGlider = true;
         for (Entity e : entities) {
             isAero &= ((e instanceof Aero) && !((e instanceof SmallCraft) || (e instanceof Jumpship))) ||
-                  ((e instanceof LandAirMek) &&
-                        (choStartingMode.getSelectedIndex() == 2 ||
-                              ((LandAirMek) e).getLAMType() == LandAirMek.LAM_BIMODAL &&
-                                    choStartingMode.getSelectedIndex() == 1));
+                      ((e instanceof LandAirMek) &&
+                       (choStartingMode.getSelectedIndex() == 2 ||
+                        ((LandAirMek) e).getLAMType() == LandAirMek.LAM_BIMODAL &&
+                        choStartingMode.getSelectedIndex() == 1));
             isShip &= (e instanceof SmallCraft) || (e instanceof Jumpship);
             isVTOL &= (e.getMovementMode() == EntityMovementMode.VTOL);
             isWiGE &= (e instanceof Tank) && (e.getMovementMode() == EntityMovementMode.WIGE);
             isQuadVee &= (e instanceof QuadVee);
             isLAM &= (e instanceof LandAirMek);
             isAirMek &= (e instanceof LandAirMek) &&
-                  (((LandAirMek) e).getLAMType() == LandAirMek.LAM_STANDARD) &&
-                  (choStartingMode.getSelectedIndex() == 1);
+                        (((LandAirMek) e).getLAMType() == LandAirMek.LAM_STANDARD) &&
+                        (choStartingMode.getSelectedIndex() == 1);
             isGlider &= (e instanceof ProtoMek) && (e.getMovementMode() == EntityMovementMode.WIGE);
         }
 
@@ -1535,29 +1603,29 @@ public class CustomMekDialog extends AbstractButtonDialog
         }
 
         if (isAero || isShip) {
-            if ((velocity > (2 * entities.get(0).getWalkMP())) || (velocity < 0)) {
+            if ((velocity > (2 * entities.getFirst().getWalkMP())) || (velocity < 0)) {
                 msg = Messages.getString("CustomMekDialog.EnterCorrectVelocity");
                 title = Messages.getString("CustomMekDialog.NumberFormatError");
                 JOptionPane.showMessageDialog(clientGUI == null ? this : clientGUI.getFrame(),
-                      msg,
-                      title,
-                      JOptionPane.ERROR_MESSAGE);
+                                              msg,
+                                              title,
+                                              JOptionPane.ERROR_MESSAGE);
                 return;
             } else if ((altitude < 0) || (altitude > 10)) {
                 msg = Messages.getString("CustomMekDialog.EnterCorrectAltitude");
                 title = Messages.getString("CustomMekDialog.NumberFormatError");
                 JOptionPane.showMessageDialog(clientGUI == null ? this : clientGUI.getFrame(),
-                      msg,
-                      title,
-                      JOptionPane.ERROR_MESSAGE);
+                                              msg,
+                                              title,
+                                              JOptionPane.ERROR_MESSAGE);
                 return;
             } else if ((currentFuel < 0) || (currentFuel > fuel)) {
                 msg = (Messages.getString("CustomMekDialog.EnterCorrectFuel") + fuel + ".");
                 title = Messages.getString("CustomMekDialog.NumberFormatError");
                 JOptionPane.showMessageDialog(clientGUI == null ? this : clientGUI.getFrame(),
-                      msg,
-                      title,
-                      JOptionPane.ERROR_MESSAGE);
+                                              msg,
+                                              title,
+                                              JOptionPane.ERROR_MESSAGE);
                 return;
             }
         }
@@ -1566,22 +1634,21 @@ public class CustomMekDialog extends AbstractButtonDialog
             msg = Messages.getString("CustomMekDialog.EnterCorrectHeight");
             title = Messages.getString("CustomMekDialog.NumberFormatError");
             JOptionPane.showMessageDialog(clientGUI == null ? this : clientGUI.getFrame(),
-                  msg,
-                  title,
-                  JOptionPane.ERROR_MESSAGE);
+                                          msg,
+                                          title,
+                                          JOptionPane.ERROR_MESSAGE);
             return;
         }
         // Apply single-entity settings
         if (entities.size() == 1) {
-            Entity entity = entities.get(0);
+            Entity entity = entities.getFirst();
 
-            for (int i = 0; i < entities.get(0).getCrew().getSlotCount(); i++) {
+            for (int i = 0; i < entities.getFirst().getCrew().getSlotCount(); i++) {
                 String name = panCrewMember[i].getPilotName();
                 String nick = panCrewMember[i].getNickname();
-                String hits = panCrewMember[i].getHits();
                 Gender gender = panCrewMember[i].getGender();
                 if (gender == Gender.RANDOMIZE) {
-                    gender = entities.get(0).getCrew().getGender(i);
+                    gender = entities.getFirst().getCrew().getGender(i);
                 }
                 boolean missing = panCrewMember[i].getMissing();
                 int gunnery;
@@ -1615,28 +1682,52 @@ public class CustomMekDialog extends AbstractButtonDialog
 
                 // keep these reasonable, please
                 if ((gunnery < 0) ||
-                      (gunnery > 8) ||
-                      (piloting < 0) ||
-                      (piloting > 8) ||
-                      (gunneryL < 0) ||
-                      (gunneryL > 8) ||
-                      (gunneryM < 0) ||
-                      (gunneryM > 8) ||
-                      (gunneryB < 0) ||
-                      (gunneryB > 8) ||
-                      (gunneryAero < 0) ||
-                      (gunneryAero > 8) ||
-                      (pilotingAero < 0) ||
-                      (pilotingAero > 8) ||
-                      (gunneryAeroL < 0) ||
-                      (gunneryAeroL > 8) ||
-                      (gunneryAeroM < 0) ||
-                      (gunneryAeroM > 8) ||
-                      (gunneryAeroB < 0) ||
-                      (gunneryAeroB > 8) ||
-                      (artillery < 0) ||
-                      (artillery > 8)) {
+                    (gunnery > 8) ||
+                    (piloting < 0) ||
+                    (piloting > 8) ||
+                    (gunneryL < 0) ||
+                    (gunneryL > 8) ||
+                    (gunneryM < 0) ||
+                    (gunneryM > 8) ||
+                    (gunneryB < 0) ||
+                    (gunneryB > 8) ||
+                    (gunneryAero < 0) ||
+                    (gunneryAero > 8) ||
+                    (pilotingAero < 0) ||
+                    (pilotingAero > 8) ||
+                    (gunneryAeroL < 0) ||
+                    (gunneryAeroL > 8) ||
+                    (gunneryAeroM < 0) ||
+                    (gunneryAeroM > 8) ||
+                    (gunneryAeroB < 0) ||
+                    (gunneryAeroB > 8) ||
+                    (artillery < 0) ||
+                    (artillery > 8)) {
                     msg = Messages.getString("CustomMekDialog.EnterSkillsBetween0_8");
+                    title = Messages.getString("CustomMekDialog.NumberFormatError");
+                    JOptionPane.showMessageDialog(clientGUI == null ? this : clientGUI.getFrame(),
+                                                  msg,
+                                                  title,
+                                                  JOptionPane.ERROR_MESSAGE);
+                    return;
+                }
+
+                int smallArms;
+                try {
+                    smallArms = panCrewMember[i].getSmallArms();
+                } catch (NumberFormatException exception) {
+                    msg = Messages.getString("CustomMekDialog.EnterSmallArmsBetween0_8");
+                    title = Messages.getString("CustomMekDialog.NumberFormatError");
+                    JOptionPane.showMessageDialog(clientGUI == null ? this : clientGUI.getFrame(),
+                          msg,
+                          title,
+                          JOptionPane.ERROR_MESSAGE);
+                    return;
+                }
+                boolean isSmallArmsRecorded = smallArms != Crew.SMALL_ARMS_UNSET;
+                boolean isSmallArmsOutOfRange = (smallArms < 0) || (smallArms > Crew.MAX_SKILL);
+                if (isSmallArmsRecorded && isSmallArmsOutOfRange) {
+                    msg = Messages.getString("CustomMekDialog.EnterSmallArmsBetween0_8");
                     title = Messages.getString("CustomMekDialog.NumberFormatError");
                     JOptionPane.showMessageDialog(clientGUI == null ? this : clientGUI.getFrame(),
                           msg,
@@ -1692,9 +1783,17 @@ public class CustomMekDialog extends AbstractButtonDialog
                 entity.getCrew().setCrewFatigue(fatigue, i);
                 entity.getCrew().setName(name, i);
                 entity.getCrew().setNickname(nick, i);
-                entity.getCrew().setHits(MathUtility.parseInt(hits, 0), i);
+                // crew hits are damage, so they are edited in the damage editor rather than here
                 entity.getCrew().setGender(gender, i);
                 entity.getCrew().setClanPilot(panCrewMember[i].isClanPilot(), i);
+                // Personal equipment is written back only when its controls were shown. With the rule off, or
+                // for a crew that never leaves on foot, the controls are hidden and the crew keeps whatever a
+                // campaign or an earlier lobby wrote, rather than being silently cleared or handed a default.
+                if (panCrewMember[i].showsPersonalEquipment()) {
+                    entity.getCrew().setArmorKitName(panCrewMember[i].getArmorKitName(), i);
+                    entity.getCrew().setSidearmName(panCrewMember[i].getSidearmName(), i);
+                    entity.getCrew().setSmallArms(smallArms, i);
+                }
                 if (clientGUI != null) {
                     entity.getCrew().setPortrait(panCrewMember[i].getPortrait().clone(), i);
                 }
@@ -1709,7 +1808,7 @@ public class CustomMekDialog extends AbstractButtonDialog
                 // If the player wants to swap unit numbers, update both entities and send an update packet for the
                 // other entity.
                 Entity other = panCrewMember[i].getEntityUnitNumSwap();
-                if (null != other) {
+                if (other != null) {
                     short temp = entity.getUnitNumber();
                     entity.setUnitNumber(other.getUnitNumber());
                     other.setUnitNumber(temp);
@@ -1725,7 +1824,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             setOptions();
             setQuirks();
             setPartReps();
-            m_equip.applyChoices();
+            equipChoicePanel.applyChoices();
 
             // Apply prosthetic enhancement and extraneous limbs for conventional infantry
             if (entity.isConventionalInfantry()) {
@@ -1765,13 +1864,13 @@ public class CustomMekDialog extends AbstractButtonDialog
                     msg = Messages.getString("CustomMekDialog.OffboardDistance");
                     title = Messages.getString("CustomMekDialog.NumberFormatError");
                     JOptionPane.showMessageDialog(clientGUI == null ? this : clientGUI.getFrame(),
-                          msg,
-                          title,
-                          JOptionPane.ERROR_MESSAGE);
+                                                  msg,
+                                                  title,
+                                                  JOptionPane.ERROR_MESSAGE);
                     return;
                 }
                 entity.setOffBoard(offBoardDistance,
-                      OffBoardDirection.getDirection(choOffBoardDirection.getSelectedIndex()));
+                                   OffBoardDirection.getDirection(choOffBoardDirection.getSelectedIndex()));
             } else {
                 entity.setOffBoard(0, OffBoardDirection.NONE);
             }
@@ -1806,8 +1905,8 @@ public class CustomMekDialog extends AbstractButtonDialog
                 } else if (choStartingMode.getSelectedIndex() == 1) {
                     entity.setConversionMode(LandAirMek.CONV_MODE_FIGHTER);
                     entity.setConversionMode(((LandAirMek) entity).getLAMType() == LandAirMek.LAM_BIMODAL ?
-                          LandAirMek.CONV_MODE_FIGHTER :
-                          LandAirMek.CONV_MODE_AIR_MEK);
+                                             LandAirMek.CONV_MODE_FIGHTER :
+                                             LandAirMek.CONV_MODE_AIR_MEK);
                 } else {
                     entity.setConversionMode(LandAirMek.CONV_MODE_MEK);
                 }
@@ -1818,13 +1917,27 @@ public class CustomMekDialog extends AbstractButtonDialog
             int zoneID = choDeploymentZone.getSelectedIndex() - 1;
             if (zoneID >= Board.NUM_ZONES) {
                 zoneID = MathUtility.parseInt(Objects.requireNonNull(choDeploymentZone.getSelectedItem())
-                      .toString()
-                      .substring(5), 0);
+                                                     .toString()
+                                                     .substring(5), 0);
                 zoneID = Board.encodeCustomDeploymentZoneID(zoneID);
             }
 
             entity.setStartingPos(zoneID);
-            entity.setDeployRound(choDeploymentRound.getSelectedIndex());
+
+            // Handle if there is a pre-game item in the list for deployment when setting it.
+            if (choDeploymentRound.getSelectedItem().equals(Messages.getString("CustomMekDialog.PreGame"))) {
+                // They chose pre-game
+                entity.setDeployRound(Entity.DEPLOY_ROUND_PRE_GAME);
+            } else if (choDeploymentRound.getSelectedItem().equals(Messages.getString("CustomMekDialog.StartOfGame"))) {
+                // They chose start of game
+                entity.setDeployRound(0);
+            } else if (choDeploymentRound.getItemAt(0).equals(Messages.getString("CustomMekDialog.PreGame"))) {
+                // They chose a specific round and pre-game was an option
+                entity.setDeployRound(choDeploymentRound.getSelectedIndex() - 1);
+            } else {
+                // They chose a specific round and pre-game was not an option.
+                entity.setDeployRound(choDeploymentRound.getSelectedIndex());
+            }
             entity.setStartingOffset(MathUtility.parseInt(txtDeploymentOffset.getText(), 0));
             entity.setStartingWidth(MathUtility.parseInt(txtDeploymentWidth.getText(), 0));
 
@@ -1851,8 +1964,16 @@ public class CustomMekDialog extends AbstractButtonDialog
                 // Should the entity begin the game prone?
                 entity.setProne(chDeployProne.isSelected());
 
-                // Should the entity begin the game prone?
+                // Should the entity begin the game hull down?
                 entity.setHullDown(chDeployHullDown.isSelected());
+            }
+
+            // Should the infantry begin the game dug in? (TO:AR p.106; mechanized infantry cannot dig in.)
+            if ((entity instanceof Infantry deployingInfantry) && !deployingInfantry.isMechanized()
+                && gameOptions().booleanOption(OptionsConstants.ADVANCED_TAC_OPS_DIG_IN)) {
+                deployingInfantry.setDugIn(chDeployDugIn.isSelected()
+                                           ? Infantry.DUG_IN_COMPLETE
+                                           : Infantry.DUG_IN_NONE);
             }
         }
 
@@ -1887,22 +2008,27 @@ public class CustomMekDialog extends AbstractButtonDialog
 
         if (itemEvent.getSource().equals(choDeploymentZone)) {
             boolean enableDeploymentZoneControls = choDeploymentZone.isEnabled() &&
-                  (choDeploymentZone.getSelectedIndex() > 0) &&
-                  choDeploymentZone.getSelectedIndex() < Board.NUM_ZONES;
+                                                   (choDeploymentZone.getSelectedIndex() > 0) &&
+                                                   choDeploymentZone.getSelectedIndex() < Board.NUM_ZONES;
             txtDeploymentOffset.setEnabled(enableDeploymentZoneControls);
             txtDeploymentWidth.setEnabled(enableDeploymentZoneControls);
+            int deploymentZone = choDeploymentZone.getSelectedIndex() - 1;
+            if (enableDeploymentZoneControls && Game.rulesManager.getRulesGame()
+                                                                 .restrictDeploymentWidth(null, deploymentZone)) {
+                txtDeploymentWidth.setEnabled(false);
+            }
         }
     }
 
     private void updateStartingModeOptions() {
         final int index = choStartingMode.getSelectedIndex();
-        if (entities.get(0) instanceof QuadVee) {
+        if (entities.getFirst() instanceof QuadVee) {
             labDeployProne.setEnabled(index == 0);
             chDeployProne.setEnabled(index == 0);
-        } else if (entities.get(0) instanceof LandAirMek) {
+        } else if (entities.getFirst() instanceof LandAirMek) {
             int mode = index;
-            if (((LandAirMek) entities.get(0)).getLAMType() == LandAirMek.LAM_BIMODAL &&
-                  mode == LandAirMek.CONV_MODE_AIR_MEK) {
+            if (((LandAirMek) entities.getFirst()).getLAMType() == LandAirMek.LAM_BIMODAL &&
+                mode == LandAirMek.CONV_MODE_AIR_MEK) {
                 mode = LandAirMek.CONV_MODE_FIGHTER;
             }
             labDeployProne.setEnabled(mode < LandAirMek.CONV_MODE_FIGHTER);
@@ -1927,10 +2053,10 @@ public class CustomMekDialog extends AbstractButtonDialog
         Entity nextOne;
         Entity entity;
         if (forward) {
-            entity = entities.get(entities.size() - 1);
+            entity = entities.getLast();
             nextOne = game.getNextEntityFromList(entity);
         } else {
-            entity = entities.get(0);
+            entity = entities.getFirst();
             nextOne = game.getPreviousEntityFromList(entity);
         }
         while ((nextOne != null) && !entities.contains(nextOne)) {
@@ -1947,16 +2073,13 @@ public class CustomMekDialog extends AbstractButtonDialog
     }
 
     private void setupEquip() {
-        Entity entity = entities.get(0);
-        GridBagLayout gbl = new GridBagLayout();
-        panEquip.setLayout(gbl);
-        m_equip = new EquipChoicePanel(entity, clientGUI, client);
-        panEquip.add(m_equip, GBC.eol());
+        equipChoicePanel = new EquipChoicePanel(entities.getFirst(), clientGUI, client);
         // EI Interface is automatically added/removed based on pilot EI Implant option
         // No checkbox needed - the pilot option drives it (IO p.69)
     }
 
-    private void setStealth(Entity e, boolean stealthEnabled) {
+    private void setStealth(Entity e,
+                            boolean stealthEnabled) {
         int newStealth = (stealthEnabled) ? 1 : 0;
         EquipmentMode newMode = (stealthEnabled) ? EquipmentMode.getMode("On") : EquipmentMode.getMode("Off");
         for (MiscMounted m : e.getMiscEquipment(MiscType.F_STEALTH)) {
@@ -1975,7 +2098,6 @@ public class CustomMekDialog extends AbstractButtonDialog
      * Availability is determined by the equipment's introduction date.
      *
      * @param entity the entity to check
-     *
      * @return true if the entity can have an EI Interface toggled
      */
     private boolean canHaveEIInterface(Entity entity) {
@@ -2004,7 +2126,8 @@ public class CustomMekDialog extends AbstractButtonDialog
      * @param entity  the entity to modify
      * @param enabled true to add EI Interface, false to remove it
      */
-    private void setEIInterface(Entity entity, boolean enabled) {
+    private void setEIInterface(Entity entity,
+                                boolean enabled) {
         boolean hasEI = entity.hasEiCockpit();
 
         if (enabled && !hasEI) {
@@ -2015,9 +2138,9 @@ public class CustomMekDialog extends AbstractButtonDialog
                 EquipmentType eiType = EquipmentType.get("EIInterface");
                 if (eiType != null) {
                     Mounted<?> eiMounted = entity.addEquipment(eiType, Entity.LOC_NONE);
-                    // Set EI to "On" mode by default - pilot got the implant to use it
-                    // Mode 1 is "Initiate enhanced imaging" (On)
-                    eiMounted.setMode(1);
+                    // Set EI to running mode - the pilot got the implant in order to use it. This matches the
+                    // equipment's own default and is stated explicitly so the intent survives future mode changes.
+                    eiMounted.setMode(MiscType.MODE_EI_ON);
                 }
             } catch (LocationFullException e) {
                 // Should not happen for 0-slot equipment
@@ -2027,7 +2150,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             List<Mounted<?>> toRemove = new ArrayList<>();
             for (Mounted<?> mounted : entity.getEquipment()) {
                 if ((mounted.getType() instanceof MiscType) &&
-                      mounted.getType().hasFlag(MiscType.F_EI_INTERFACE)) {
+                    mounted.getType().hasFlag(MiscType.F_EI_INTERFACE)) {
                     toRemove.add(mounted);
                 }
             }
@@ -2038,7 +2161,7 @@ public class CustomMekDialog extends AbstractButtonDialog
 
     @Override
     protected Container createCenterPane() {
-        final Entity entity = entities.get(0);
+        final Entity entity = entities.getFirst();
         boolean multipleEntities = (entities.size() > 1) || (entity instanceof FighterSquadron);
         boolean quirksEnabled = gameOptions().booleanOption(OptionsConstants.ADVANCED_STRATOPS_QUIRKS);
         boolean partialRepairsEnabled = gameOptions().booleanOption(OptionsConstants.ADVANCED_STRATOPS_PARTIAL_REPAIRS);
@@ -2050,7 +2173,7 @@ public class CustomMekDialog extends AbstractButtonDialog
         final boolean isQuadVee = entities.stream().allMatch(e -> e instanceof QuadVee);
         final boolean isLAM = entities.stream().allMatch(e -> e instanceof LandAirMek);
         final boolean isGlider = entities.stream()
-              .allMatch(e -> (e instanceof ProtoMek) && e.getMovementMode().isWiGE());
+                                         .allMatch(e -> (e instanceof ProtoMek) && e.getMovementMode().isWiGE());
         final boolean hasStealth = entities.stream().allMatch(Entity::hasStealth);
 
         boolean eligibleForOffBoard = true;
@@ -2089,21 +2212,26 @@ public class CustomMekDialog extends AbstractButtonDialog
             //  lob offboard missiles and we could use it in space for extreme range bearings-only fights, plus
             //  Ortillery. Further, this should be revisited with a rules query when it comes to handling offboard
             //  gun emplacements, especially if they are allowed
+            // A hitched train deploys wherever its tractor does, so the setting belongs to the tractor and a trailer
+            // must not offer one of its own. Unhitched, a trailer is free to deploy off board on its own terms.
+            final boolean deploysWithItsTractor = e.getTractor() != Entity.NONE;
+
             final boolean entityEligibleForOffBoard = !space &&
-                  (e.getAltitude() == 0) &&
-                  !(e.isBuildingEntityOrGunEmplacement()) &&
-                  e.getWeaponList()
-                        .stream()
-                        .map(Mounted::getType)
-                        .anyMatch(weaponType -> weaponType.hasFlag(WeaponType.F_ARTILLERY) ||
-                              (weaponType instanceof CapitalMissileBayWeapon));
+                                                      (e.getAltitude() == 0) &&
+                                                      !(e.isBuildingEntityOrGunEmplacement()) &&
+                                                      !deploysWithItsTractor &&
+                                                      trainCarriesArtillery(e);
             eligibleForOffBoard &= entityEligibleForOffBoard;
         }
         // set up the panels
         JPanel mainPanel = new JPanel(new GridBagLayout());
-        tabAll = new JTabbedPane();
+        tabAll.setTabLayoutPolicy(JTabbedPane.SCROLL_TAB_LAYOUT);
+        tabAll.setTabPlacement(JTabbedPane.LEFT);
+        tabAll.setTabType(FlatTabbedPane.TabType.card);
+        tabAll.setTabAlignment(FlatTabbedPane.TabAlignment.leading);
+        tabAll.setMinimumTabWidth(new JLabel("X".repeat(15)).getPreferredSize().width);
 
-        JPanel panCrew = new JPanel(new GridBagLayout());
+        JPanel panCrew = new WidthTrackingPanel(new GridBagLayout());
         panCrewMember = new CustomPilotViewPanel[entity.getCrew().getSlotCount()];
         for (int i = 0; i < panCrewMember.length; i++) {
             panCrewMember[i] = new CustomPilotViewPanel(this, entity, i, editable);
@@ -2117,7 +2245,13 @@ public class CustomMekDialog extends AbstractButtonDialog
         mainPanel.add(tabAll, GBC.eol().fill(GridBagConstraints.BOTH).insets(5, 5, 5, 5));
         mainPanel.add(panButtons, GBC.eol().anchor(GridBagConstraints.CENTER));
 
-        JScrollPane scrEquip = new JScrollPane(panEquip);
+        // Wrap the equipment choice panel to make it top-left-aligned
+        JPanel equipmentWrapPanel = new JPanel(new FlowLayout(FlowLayout.LEFT));
+        equipmentWrapPanel.add(equipChoicePanel);
+        JScrollPane scrEquip = new JScrollPane(equipmentWrapPanel);
+        scrEquip.getVerticalScrollBar().setUnitIncrement(16);
+        scrEquip.setBorder(new EmptyBorder(10, 25, 0, 0));
+
         // Don't show the crew panel if there's multiple entities or no crew to show
         if (!multipleEntities && panCrewMember.length > 0) {
             if (panCrewMember.length > 1) {
@@ -2130,22 +2264,21 @@ public class CustomMekDialog extends AbstractButtonDialog
                 crewScrollPane.getVerticalScrollBar().setUnitIncrement(16);
                 tabAll.addTab(Messages.getString("CustomMekDialog.tabCrew"), crewScrollPane);
             } else {
-                panCrew.add(panCrewMember[0], GBC.eop());
+                panCrew.add(panCrewMember[0], GBC.eop().anchor(GridBagConstraints.NORTHWEST));
                 JScrollPane memberScrollPane = new JScrollPane(panCrew);
                 memberScrollPane.getVerticalScrollBar().setUnitIncrement(16);
                 tabAll.addTab(Messages.getString("CustomMekDialog.tabPilot"), memberScrollPane);
             }
-            tabAll.addTab(Messages.getString("CustomMekDialog.tabEquipment"), scrEquip);
         }
+        tabAll.addTab(Messages.getString("CustomMekDialog.tabEquipment"), scrEquip);
 
         if (this.clientGUI != null) {
             tabAll.addTab(Messages.getString(editableDeployment ?
-                  "CustomMekDialog.tabDeployment" :
-                  "CustomMekDialog.tabState"), new JScrollPane(panDeploy));
+                                             "CustomMekDialog.tabDeployment" :
+                                             "CustomMekDialog.tabState"), new JScrollPane(panDeploy));
             if (quirksEnabled && !multipleEntities) {
                 JScrollPane scrQuirks = new JScrollPane(panQuirks);
                 scrQuirks.getVerticalScrollBar().setUnitIncrement(16);
-                scrQuirks.setPreferredSize(scrEquip.getPreferredSize());
                 tabAll.addTab("Quirks", scrQuirks);
             }
             if (partialRepairsEnabled && !multipleEntities) {
@@ -2156,8 +2289,8 @@ public class CustomMekDialog extends AbstractButtonDialog
         // Refresh neural interface checkboxes when switching to Equipment tab
         // This picks up changes made in the Pilot tab (e.g., adding EI/DNI implant)
         tabAll.addChangeListener(e -> {
-            if (m_equip != null) {
-                m_equip.refreshNeuralInterfaceCheckboxes();
+            if (equipChoicePanel != null) {
+                equipChoicePanel.refreshNeuralInterfaceCheckboxes();
             }
         });
 
@@ -2168,31 +2301,52 @@ public class CustomMekDialog extends AbstractButtonDialog
         }
         // Also need to consider melee weapons
         for (Mounted<?> m : entity.getMisc()) {
-            if (m.getType().hasFlag(MiscType.F_CLUB)) {
+            if (m.getType().hasFlag(MiscType.F_CLUB) || m.getType().hasFlag(MiscType.F_SHIELD)) {
                 h_wpnQuirks.put(entity.getEquipmentNum(m), m.getQuirks());
             }
         }
 
         // **CREW TAB**//
-        if (gameOptions().booleanOption(OptionsConstants.RPG_INDIVIDUAL_INITIATIVE)) {
-            panCrew.add(new JLabel(Messages.getString("CustomMekDialog.labInit"), SwingConstants.RIGHT), GBC.std());
-            panCrew.add(fldInit, GBC.eop());
-        }
         fldInit.setText(Integer.toString(entity.getCrew().getInitBonus()));
-
-        if (gameOptions().booleanOption(OptionsConstants.RPG_COMMAND_INIT)) {
-            panCrew.add(new JLabel(Messages.getString("CustomMekDialog.labCommandInit"), SwingConstants.RIGHT),
-                  GBC.std());
-            panCrew.add(fldCommandInit, GBC.eop());
-        }
         fldCommandInit.setText(Integer.toString(entity.getCrew().getCommandBonus()));
-
         // Set up commanders for commander killed victory condition & SPA
-        panCrew.add(new JLabel(Messages.getString("CustomMekDialog.labCommander"), SwingConstants.RIGHT), GBC.std());
-        panCrew.add(chCommander, GBC.eol());
         chCommander.setSelected(entity.isCommander());
-        panOptions = new JPanel(new GridBagLayout());
-        panCrew.add(panOptions, GBC.eop());
+
+        boolean individualInitiative = gameOptions().booleanOption(OptionsConstants.RPG_INDIVIDUAL_INITIATIVE);
+        boolean commandInitiative = gameOptions().booleanOption(OptionsConstants.RPG_COMMAND_INIT);
+        if (!multipleEntities && (panCrewMember.length == 1)) {
+            // Single pilot: fold the crew-level controls into the pilot's Advanced section. The commander flag
+            // and its initiative field share one pair on the second row, beside Small Arms; the rest of the
+            // pilot's own rows follow, and the individual initiative bonus comes last.
+            panCrewMember[0].addAdvancedRow(Messages.getString("CustomMekDialog.labCommander"),
+                  commanderControls(commandInitiative));
+            panCrewMember[0].addCrewMemberRows(client.getGame());
+            if (individualInitiative) {
+                panCrewMember[0].addAdvancedRow(Messages.getString("CustomMekDialog.labInit"), fldInit);
+            }
+        } else {
+            // Multi-crew: the shared Crew tab gets its own Command section
+            JPanel commandSection = new JPanel(new GridBagLayout());
+            commandSection.setBorder(CustomPilotViewPanel.sectionBorder("CustomMekDialog.sectionCommand"));
+            if (individualInitiative) {
+                commandSection.add(new JLabel(Messages.getString("CustomMekDialog.labInit"),
+                                              SwingConstants.RIGHT), GBC.std());
+                commandSection.add(fldInit, GBC.eop());
+            }
+            if (commandInitiative) {
+                commandSection.add(new JLabel(Messages.getString("CustomMekDialog.labCommandInit"),
+                                              SwingConstants.RIGHT), GBC.std());
+                commandSection.add(fldCommandInit, GBC.eop());
+            }
+            commandSection.add(new JLabel(Messages.getString("CustomMekDialog.labCommander"),
+                                          SwingConstants.RIGHT), GBC.std());
+            commandSection.add(chCommander, GBC.eol());
+            panCrew.add(commandSection, GBC.eop().anchor(GridBagConstraints.NORTHWEST).insets(0, 0, 0, 10));
+        }
+
+        panOptions = new PilotOptionsPanel(entities.getFirst(), editable, gameOptions(), this,
+                                           this::configureOptionRow);
+        panCrew.add(panOptions, GBC.eop().fill(GridBagConstraints.HORIZONTAL).weightX(1.0));
 
         // **DEPLOYMENT TAB**//
 
@@ -2205,7 +2359,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             refreshDeployment();
             // Disable conversions for loaded units so we don't get fighter LAMs in mek bays
             // and vice versa
-            choStartingMode.setEnabled(entities.get(0).getTransportId() == Entity.NONE);
+            choStartingMode.setEnabled(entities.getFirst().getTransportId() == Entity.NONE);
         }
         if (isVTOL || isLAM || isGlider) {
             panDeploy.add(labStartHeight, GBC.std());
@@ -2213,7 +2367,7 @@ public class CustomMekDialog extends AbstractButtonDialog
         }
         if (isWiGE) {
             panDeploy.add(new JLabel(Messages.getString("CustomMekDialog.labDeployAirborne"), SwingConstants.RIGHT),
-                  GBC.std());
+                          GBC.std());
             panDeploy.add(chDeployAirborne, GBC.eol());
         }
         if (isAero || isLAM || isShip) {
@@ -2256,8 +2410,8 @@ public class CustomMekDialog extends AbstractButtonDialog
         txtDeploymentWidth.setColumns(4);
 
         if (gameOptions().booleanOption(OptionsConstants.RPG_BEGIN_SHUTDOWN) &&
-              !(entity instanceof Infantry) &&
-              !(entity.isBuildingEntityOrGunEmplacement())) {
+            !(entity instanceof Infantry) &&
+            !(entity.isBuildingEntityOrGunEmplacement())) {
             panDeploy.add(labDeployShutdown, GBC.std());
             panDeploy.add(chDeployShutdown, GBC.eol());
             chDeployShutdown.setSelected(entity.isManualShutdown());
@@ -2273,6 +2427,28 @@ public class CustomMekDialog extends AbstractButtonDialog
             panDeploy.add(chDeployProne, GBC.eol());
             chDeployProne.setSelected(entity.isProne() && !entity.isHullDown());
             chDeployProne.addItemListener(this);
+        }
+
+        // Vehicles may deploy already hull-down (TO:AR p.19) when the hull-down option is enabled. The option is
+        // offered only to hull-down-capable vehicles (not Large Vehicles, and not naval/hydrofoil/submarine units);
+        // the deploy hex must still be fortified, which is validated at deployment time.
+        boolean isHullDownCapableVehicle = (entity instanceof Tank deployingVehicle)
+                                           && deployingVehicle.isHullDownCapable()
+                                           && gameOptions().booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_TAC_OPS_HULL_DOWN);
+        if (isHullDownCapableVehicle) {
+            panDeploy.add(labDeployHullDown, GBC.std());
+            panDeploy.add(chDeployHullDown, GBC.eol());
+            chDeployHullDown.setSelected(entity.isHullDown());
+            chDeployHullDown.addItemListener(this);
+        }
+
+        // Infantry may deploy already dug in (TO:AR p.106). Mechanized infantry cannot dig in, so this is
+        // offered only to non-mechanized infantry and only when the dig-in option is enabled.
+        if ((entity instanceof Infantry deployingInfantry) && !deployingInfantry.isMechanized()
+            && gameOptions().booleanOption(OptionsConstants.ADVANCED_TAC_OPS_DIG_IN)) {
+            panDeploy.add(labDeployDugIn, GBC.std());
+            panDeploy.add(chDeployDugIn, GBC.eol());
+            chDeployDugIn.setSelected(deployingInfantry.getDugIn() == Infantry.DUG_IN_COMPLETE);
         }
 
         refreshDeployment();
@@ -2356,7 +2532,7 @@ public class CustomMekDialog extends AbstractButtonDialog
             fldCurrentFuel.setEnabled(false);
             fldStartHeight.setEnabled(false);
             chDeployAirborne.setEnabled(false);
-            m_equip.initialize();
+            equipChoicePanel.initialize();
         }
 
         setResizable(true);
@@ -2385,5 +2561,51 @@ public class CustomMekDialog extends AbstractButtonDialog
             return client.getGame().getOptions();
         }
         return clientGUI.getClient().getGame().getOptions();
+    }
+
+    /**
+     * A scroll pane view that reflows to the viewport width instead of forcing horizontal scrolling - the wide option
+     * groups then squeeze their columns rather than pushing the whole tab sideways. Height stays free so vertical
+     * scrolling works as usual.
+     */
+    private static class WidthTrackingPanel extends JPanel implements Scrollable {
+
+        @Serial
+        private static final long serialVersionUID = 3364552402022733440L;
+
+        private static final int SCROLL_UNIT_INCREMENT = 16;
+
+        WidthTrackingPanel(LayoutManager layoutManager) {
+            super(layoutManager);
+        }
+
+        @Override
+        public Dimension getPreferredScrollableViewportSize() {
+            return getPreferredSize();
+        }
+
+        @Override
+        public int getScrollableUnitIncrement(Rectangle visibleRect,
+                                              int orientation,
+                                              int direction) {
+            return SCROLL_UNIT_INCREMENT;
+        }
+
+        @Override
+        public int getScrollableBlockIncrement(Rectangle visibleRect,
+                                               int orientation,
+                                               int direction) {
+            return (orientation == SwingConstants.VERTICAL) ? visibleRect.height : visibleRect.width;
+        }
+
+        @Override
+        public boolean getScrollableTracksViewportWidth() {
+            return true;
+        }
+
+        @Override
+        public boolean getScrollableTracksViewportHeight() {
+            return false;
+        }
     }
 }
