@@ -58,15 +58,24 @@ import megamek.common.units.Mek;
 import megamek.common.units.Targetable;
 import megamek.common.units.Terrain;
 import megamek.common.units.Terrains;
+import megamek.logging.MMLogger;
 import megamek.server.SmokeCloud;
 
 /**
- * Keeps track of the cumulative effects of intervening terrain on LOS
+ * Keeps track of the cumulative effects of intervening terrain on LOS.
+ *
+ * <p><b>Diagnostic logging:</b> This class has extensive DEBUG-level logging for LOS calculations.
+ * To enable it, set the log level for {@code megamek.common.LosEffects} to DEBUG in the logging configuration. This
+ * will log: the LOS rule set in use, attacker/target positions and heights, per-hex terrain accumulation (woods, smoke,
+ * buildings), and the final blocking decision with all accumulated modifier totals. Useful for diagnosing LOS
+ * discrepancies in bug reports.</p>
  *
  * @author Ben
  * @since October 14, 2002, 11:19 PM
  */
 public class LosEffects {
+
+    private static final MMLogger logger = MMLogger.create(LosEffects.class);
 
     public static class AttackInfo {
         public boolean attUnderWater;
@@ -131,6 +140,13 @@ public class LosEffects {
     public static final int DAMAGABLE_COVER_DROPSHIP = 0x1;
     public static final int DAMAGABLE_COVER_BUILDING = 0x2;
 
+    /**
+     * Height in levels that an erupting geyser's plume rises above its hex. Per TacOps, an erupting geyser blocks line
+     * of sight as ultra-heavy woods, which rises three levels above the hex. Shared with the LOS Ruler/diagram so the
+     * UI cannot drift out of sync with the rule. The erupting terrain level itself is {@link Terrains#GEYSER_LVL_ACTIVE}.
+     */
+    public static final int GEYSER_PLUME_HEIGHT = 3;
+
     boolean blocked = false;
     boolean deadZone = false;
     boolean infProtected = false;
@@ -142,6 +158,7 @@ public class LosEffects {
     int heavyWoods = 0;
     int ultraWoods = 0;
     int lightSmoke = 0;
+    int bapReduceSmoke = 0;
     int heavySmoke = 0;
     int screen = 0;
     int softBuildings = 0;
@@ -149,6 +166,7 @@ public class LosEffects {
     int buildingLevelsOrHexes = 0;
     boolean blockedByHill = false;
     boolean blockedByWater = false;
+    boolean shotBlockedByWater = false;
     int targetCover = COVER_NONE; // that means partial cover
     int attackerCover = COVER_NONE; // ditto
     IBuilding thruBldg = null;
@@ -235,23 +253,27 @@ public class LosEffects {
         ultraWoods += other.ultraWoods;
         lightSmoke += other.lightSmoke;
         heavySmoke += other.heavySmoke;
+        bapReduceSmoke += other.bapReduceSmoke;
         buildingLevelsOrHexes += other.buildingLevelsOrHexes;
         screen += other.screen;
         softBuildings += other.softBuildings;
         hardBuildings += other.hardBuildings;
         blockedByHill |= other.blockedByHill;
         blockedByWater |= other.blockedByWater;
+        shotBlockedByWater |= other.shotBlockedByWater;
         targetCover |= other.targetCover;
         attackerCover |= other.attackerCover;
-        if ((null != thruBldg) && !thruBldg.equals(other.thruBldg)) {
+        if ((thruBldg != null) && !thruBldg.equals(other.thruBldg)) {
             thruBldg = null;
         }
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public int getPlantedFields() {
         return plantedFields;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public int getHeavyIndustrial() {
         return heavyIndustrial;
     }
@@ -280,6 +302,8 @@ public class LosEffects {
         return heavySmoke;
     }
 
+    public int getBAPReduceSmoke() { return bapReduceSmoke; }
+
     public int getScreen() {
         return screen;
     }
@@ -304,11 +328,14 @@ public class LosEffects {
         return blockedByWater;
     }
 
+    public boolean isShotBlockedByWater() { return shotBlockedByWater;}
+
     /**
      * Getter for property targetCover.
      *
      * @return Value of property targetCover.
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public boolean isTargetCover() {
         return targetCover >= COVER_LOW_LEFT;
     }
@@ -335,6 +362,7 @@ public class LosEffects {
         return attackerCover >= COVER_LOW_LEFT;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public int getAttackerCover() {
         return attackerCover;
     }
@@ -372,6 +400,15 @@ public class LosEffects {
     public boolean canSee() {
         // !blocked && (lightWoods + lightSmoke) + ((heavyWoods + heavySmoke) * 2) < 3;
         return hasLoS;
+    }
+
+    /**
+     * @return true if this LOS was blocked by the TacOps dead-zone rule. Set by the engine when a tall
+     *       intervening hill projects a geometric shadow that the lower unit sits inside (see the
+     *       private static dead-zone check called from {@link #calculateLos}).
+     */
+    public boolean isBlockedByDeadZone() {
+        return deadZone;
     }
 
     public static AttackInfo prepLosAttackInfo(Game game, @Nullable Entity ae, @Nullable Entity te, Coords c1,
@@ -777,6 +814,16 @@ public class LosEffects {
     }
 
     public static LosEffects calculateLos(Game game, AttackInfo ai) {
+        boolean useDiagramLos = game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_LOS1);
+        boolean useDeadZones = game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_DEAD_ZONES);
+        boolean usePartialCover = game.getOptions()
+              .booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_PARTIAL_COVER);
+        logger.debug("=== LOS CALC START === rules: {} | deadZones:{} partialCover:{} | "
+                    + "attacker@{} (absH:{}, h:{}, isMek:{}) -> target@{} (absH:{}, h:{}, isMek:{})",
+              useDiagramLos ? "TacOps Diagrammed LOS" : "Standard TW LOS",
+              useDeadZones, usePartialCover,
+              ai.attackPos, ai.attackAbsHeight, ai.attackHeight, ai.attackerIsMek,
+              ai.targetPos, ai.targetAbsHeight, ai.targetHeight, ai.targetIsMek);
         if (ai.attOffBoard) {
             LosEffects los = new LosEffects();
             los.blocked = true;
@@ -784,26 +831,26 @@ public class LosEffects {
             los.targetLoc = ai.targetPos;
             return los;
         }
-        if ((ai.attOnLand && ai.targetUnderWater) || (ai.attUnderWater && ai.targetOnLand)) {
+        if (Game.rulesManager.getRulesUnderwater().waterBlocksLOS() && ((ai.attOnLand && ai.targetUnderWater) || (ai.attUnderWater && ai.targetOnLand))) {
             LosEffects los = new LosEffects();
             los.blocked = true;
             los.hasLoS = false;
             los.blockedByWater = true;
+            los.shotBlockedByWater = true;
             los.targetLoc = ai.targetPos;
             return los;
         }
 
-        if (game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_DEAD_ZONES) && isDeadZone(game,
+            if (game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_DEAD_ZONES) && isDeadZone(game,
               ai)) {
-            LosEffects los = new LosEffects();
-            los.blocked = true;
-            los.blockedByHill = true;
-            los.deadZone = true;
-            los.hasLoS = false;
-            los.targetLoc = ai.targetPos;
-            return los;
-        }
-
+                LosEffects los = new LosEffects();
+                los.blocked = true;
+                los.blockedByHill = true;
+                los.deadZone = true;
+                los.hasLoS = false;
+                los.targetLoc = ai.targetPos;
+                return los;
+            }
         boolean diagramLos = game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_LOS1);
         boolean partialCover = game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_PARTIAL_COVER);
         double degree = ai.attackPos.degree(ai.targetPos);
@@ -814,6 +861,11 @@ public class LosEffects {
             finalLoS = LosEffects.losStraight(game, ai, diagramLos, partialCover);
         }
 
+        // TacOps: a unit standing in an erupting geyser cannot be seen into (or out of) its own
+        // hex, treated as ultra-heavy woods. losForCoords() ignores the attacker's and target's
+        // own hexes, so those endpoints are handled here.
+        addEruptingGeyserEndpointBlock(game, ai, finalLoS);
+
         finalLoS.hasLoS = !finalLoS.blocked &&
               (finalLoS.screen < 1) &&
               (finalLoS.plantedFields < 6) &&
@@ -822,8 +874,68 @@ public class LosEffects {
                     ((finalLoS.heavyWoods + finalLoS.heavySmoke) * 2) +
                     (finalLoS.ultraWoods * 3) < 3);
 
+        int combinedWoodsSmoke = (finalLoS.lightWoods + finalLoS.lightSmoke)
+              + ((finalLoS.heavyWoods + finalLoS.heavySmoke) * 2)
+              + (finalLoS.ultraWoods * 3);
+        logger.debug("=== LOS CALC RESULT === blocked:{} hasLoS:{} | "
+                    + "lightWoods:{} heavyWoods:{} ultraWoods:{} | "
+                    + "lightSmoke:{} heavySmoke:{} | "
+                    + "combinedWoodsSmoke:{} (blocks if >=3) | "
+                    + "screen:{} plantedFields:{} heavyIndustrial:{} | "
+                    + "buildingLevels:{} softBldg:{} hardBldg:{}",
+              finalLoS.blocked, finalLoS.hasLoS,
+              finalLoS.lightWoods, finalLoS.heavyWoods, finalLoS.ultraWoods,
+              finalLoS.lightSmoke, finalLoS.heavySmoke,
+              combinedWoodsSmoke,
+              finalLoS.screen, finalLoS.plantedFields, finalLoS.heavyIndustrial,
+              finalLoS.buildingLevelsOrHexes, finalLoS.softBuildings, finalLoS.hardBuildings);
+
         finalLoS.targetLoc = ai.targetPos;
         return finalLoS;
+    }
+
+    /**
+     * Applies the TacOps erupting-geyser line-of-sight block to the attacker's and target's own hexes.
+     *
+     * <p>An erupting geyser is treated as ultra-heavy woods for the purpose of determining line of sight into or
+     * through its hex. {@link #losForCoords} ignores the attacker's and target's own hexes, so a unit standing in an
+     * erupting geyser is handled here: if its absolute height is below the top of the plume, it is engulfed and line of
+     * sight is blocked.</p>
+     *
+     * @param game the current game
+     * @param ai   the attack info describing attacker and target positions and heights
+     * @param los  the line-of-sight effects to update
+     */
+    private static void addEruptingGeyserEndpointBlock(Game game, AttackInfo ai, LosEffects los) {
+        if (ai.underWaterCombat) {
+            return;
+        }
+        if (isEngulfedByEruptingGeyser(game, ai.boardId, ai.attackPos, ai.attackAbsHeight) ||
+              isEngulfedByEruptingGeyser(game, ai.boardId, ai.targetPos, ai.targetAbsHeight)) {
+            los.ultraWoods++;
+        }
+    }
+
+    /**
+     * Determines whether a unit at the given position and absolute height is engulfed by an erupting geyser, treating
+     * the geyser plume as ultra-heavy woods rising {@link #GEYSER_PLUME_HEIGHT} levels above the hex.
+     *
+     * @param game      the current game
+     * @param boardId   the board the position is on
+     * @param pos       the hex to check, or null if the unit has no position
+     * @param absHeight the absolute height of the unit in that hex
+     *
+     * @return true if an erupting geyser occupies the hex and its plume rises above the unit
+     */
+    private static boolean isEngulfedByEruptingGeyser(Game game, int boardId, @Nullable Coords pos, int absHeight) {
+        if ((pos == null) || !game.getBoard(boardId).contains(pos)) {
+            return false;
+        }
+        Hex hex = game.getBoard(boardId).getHex(pos);
+        if (hex.terrainLevel(Terrains.GEYSER) != Terrains.GEYSER_LVL_ACTIVE) {
+            return false;
+        }
+        return (hex.getLevel() + GEYSER_PLUME_HEIGHT) > absHeight;
     }
 
     /**
@@ -838,6 +950,18 @@ public class LosEffects {
     }
 
     public ToHitData losModifiers(Game game, int eiStatus, boolean underwaterWeapon) {
+        logger.debug("--- losModifiers() --- blocked:{} arcedShot:{} ei:{} underwater:{} | "
+                    + "lightWoods:{} heavyWoods:{} ultraWoods:{} | "
+                    + "lightSmoke:{} heavySmoke:{} | "
+                    + "woodsOnly:{} smokeOnly:{} combined:{} | "
+                    + "buildingLvls:{} screen:{} fields:{} heavyInd:{}",
+              blocked, arcedShot, eiStatus, underwaterWeapon,
+              lightWoods, heavyWoods, ultraWoods,
+              lightSmoke, heavySmoke,
+              lightWoods + (heavyWoods * 2),
+              lightSmoke + (heavySmoke * 2),
+              (lightWoods + lightSmoke) + ((heavyWoods + heavySmoke) * 2) + (ultraWoods * 3),
+              buildingLevelsOrHexes, screen, plantedFields, heavyIndustrial);
         ToHitData modifiers = new ToHitData();
 
         if (arcedShot) {
@@ -852,24 +976,45 @@ public class LosEffects {
          */
 
         if (blocked) {
+            logger.debug("losModifiers: BLOCKED by terrain (hill/elevation)");
             return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by terrain.");
         }
 
         if (infProtected) {
+            logger.debug("losModifiers: BLOCKED - infantry protected by building");
             return new ToHitData(TargetRoll.IMPOSSIBLE, "Infantry protected by building.");
         }
 
         if (buildingLevelsOrHexes > 2) {
+            logger.debug("losModifiers: BLOCKED by {} building levels/hexes (>2)", buildingLevelsOrHexes);
             return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by building hexes or levels.");
         }
 
         // LOS blocking is not affected by EI - EI only reduces to-hit modifiers (IO p.69)
-        if ((ultraWoods >= 1) || (lightWoods + (heavyWoods * 2) > 2)) {
-            return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by woods.");
+        // Ultra woods always blocks regardless of underwater weapon status
+        if (ultraWoods >= 1) {
+            logger.debug("losModifiers: BLOCKED by ultra woods ({})", ultraWoods);
+            return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by ultra woods.");
         }
 
-        if (!underwaterWeapon && (lightSmoke + (heavySmoke * 2) > 2)) {
-            return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by smoke.");
+        if (underwaterWeapon) {
+            // Underwater: smoke doesn't apply, only woods count
+            if (lightWoods + (heavyWoods * 2) > 2) {
+                logger.debug("losModifiers: BLOCKED by woods underwater (woodsTotal:{})",
+                      lightWoods + (heavyWoods * 2));
+                return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by woods.");
+            }
+        } else {
+            // Woods and smoke effects are combined for blocking threshold (TW LOS rules).
+            // This matches the hasLoS calculation in calculateLos().
+            int combinedWoodsSmokeTotal = (lightWoods + lightSmoke)
+                  + ((heavyWoods + heavySmoke) * 2);
+            if (combinedWoodsSmokeTotal >= 3) {
+                logger.debug("losModifiers: BLOCKED by woods+smoke (combined:{}, "
+                            + "lightWoods:{} heavyWoods:{} lightSmoke:{} heavySmoke:{})",
+                      combinedWoodsSmokeTotal, lightWoods, heavyWoods, lightSmoke, heavySmoke);
+                return new ToHitData(TargetRoll.IMPOSSIBLE, "LOS blocked by intervening woods/smoke.");
+            }
         }
 
         if (plantedFields > 5) {
@@ -970,7 +1115,7 @@ public class LosEffects {
               Compute.isInBuilding(game,
                     ai.attackAbsHeight - game.getHex(ai.attackPos, ai.boardId).getLevel(),
                     ai.attackPos, ai.boardId)) {
-            los.setThruBldg(game.getBoard(ai.boardId).getBuildingAt(in.get(0)));
+            los.setThruBldg(game.getBoard(ai.boardId).getBuildingAt(in.getFirst()));
             // elevation differences count as building hexes passed through
             los.buildingLevelsOrHexes += (Math.abs((ai.attackAbsHeight - ai.attackHeight) -
                   (ai.targetAbsHeight - ai.targetHeight)));
@@ -984,9 +1129,13 @@ public class LosEffects {
             los.blocked = true;
         }
 
+        if (!Game.rulesManager.getRulesUnderwater().waterBlocksLOS() && ((ai.attOnLand && ai.targetUnderWater) || (ai.attUnderWater && ai.targetOnLand))) {
+            los.shotBlockedByWater = true;
+        }
+
         // Infantry inside a building can only be
         // targeted by units in the same building.
-        if (ai.targetInfantry && targetInBuilding && (null == los.getThruBldg())) {
+        if (ai.targetInfantry && targetInBuilding && (los.getThruBldg() == null)){
             los.infProtected = true;
         }
 
@@ -1024,7 +1173,7 @@ public class LosEffects {
               Compute.isInBuilding(game,
                     ai.attackAbsHeight - game.getHex(ai.attackPos, ai.boardId).getLevel(),
                     ai.attackPos, ai.boardId)) {
-            los.setThruBldg(game.getBoard(ai.boardId).getBuildingAt(in.get(0)));
+            los.setThruBldg(game.getBoard(ai.boardId).getBuildingAt(in.getFirst()));
             // elevation differences count as building hexes passed through
             los.buildingLevelsOrHexes += (Math.abs((ai.attackAbsHeight - ai.attackHeight) -
                   (ai.targetAbsHeight - ai.targetHeight)));
@@ -1033,6 +1182,10 @@ public class LosEffects {
         // add non-divided line segments
         for (int i = 3; i < in.size() - 2; i += 3) {
             los.add(losForCoords(game, ai, in.get(i), los.getThruBldg(), diagramLoS, partialCover));
+        }
+
+        if (!Game.rulesManager.getRulesUnderwater().waterBlocksLOS() && ((ai.attOnLand && ai.targetUnderWater) || (ai.attUnderWater && ai.targetOnLand))) {
+            los.shotBlockedByWater = true;
         }
 
         if ((ai.minimumWaterDepth < 1) && ai.underWaterCombat) {
@@ -1059,9 +1212,9 @@ public class LosEffects {
             // Infantry inside a building can only be
             // targeted by units in the same building.
             if (ai.targetInfantry && targetInBuilding) {
-                if (null == leftLos.getThruBldg()) {
+                if (leftLos.getThruBldg() == null){
                     leftLos.infProtected = true;
-                } else if (null == rightLos.getThruBldg()) {
+                } else if (rightLos.getThruBldg() == null){
                     rightLos.infProtected = true;
                 }
             }
@@ -1286,11 +1439,11 @@ public class LosEffects {
         boolean coveredByDropship = false;
         Entity coveringDropship = null;
 
-        if ((null == los.getThruBldg()) && hex.containsTerrain(Terrains.BLDG_ELEV)) {
+        if ((los.getThruBldg() == null) &&hex.containsTerrain(Terrains.BLDG_ELEV)){
             bldgEl = hex.terrainLevel(Terrains.BLDG_ELEV);
         }
 
-        if ((null == los.getThruBldg()) &&
+        if ((los.getThruBldg() == null) &&
               hex.containsTerrain(Terrains.FUEL_TANK_ELEV) &&
               hex.terrainLevel(Terrains.FUEL_TANK_ELEV) > bldgEl) {
             bldgEl = hex.terrainLevel(Terrains.FUEL_TANK_ELEV);
@@ -1411,6 +1564,15 @@ public class LosEffects {
             int smokeLevel = hex.terrainLevel(Terrains.SMOKE);
             boolean hasFoliage = (woodsLevel != Terrain.LEVEL_NONE) || (jungleLevel != Terrain.LEVEL_NONE);
 
+            if (hasFoliage || smokeLevel != Terrain.LEVEL_NONE) {
+                logger.debug("  Hex {} (elev:{}) terrain: woods:{} jungle:{} foliageElev:{} smoke:{} | "
+                            + "losElev:{} maxUnitH:{} attAbsH:{} tgtAbsH:{} attAdj:{} tgtAdj:{}",
+                      coords, hexEl, woodsLevel, jungleLevel, foliageElev, smokeLevel,
+                      String.format("%.1f", losElevation), maxUnitHeight,
+                      ai.attackAbsHeight, ai.targetAbsHeight,
+                      attackerAdjacent, targetAdjacent);
+            }
+
             // Check 1 level high woods and jungle
             if (hasFoliage && foliageElev == 1) {
                 int terrainEl = hexEl + 1;
@@ -1424,11 +1586,16 @@ public class LosEffects {
                 if (affectsLos) {
                     if ((woodsLevel == 1) || (jungleLevel == 1)) {
                         los.lightWoods++;
+                        logger.debug("    -> {} counted as LIGHT WOODS (1-level foliage)", coords);
                     } else if ((woodsLevel == 2) || (jungleLevel == 2)) {
                         los.heavyWoods++;
+                        logger.debug("    -> {} counted as HEAVY WOODS (1-level foliage)", coords);
                     } else {
                         los.ultraWoods++;
+                        logger.debug("    -> {} counted as ULTRA WOODS (1-level foliage)", coords);
                     }
+                } else {
+                    logger.debug("    -> {} 1-level foliage does NOT affect LOS (below line)", coords);
                 }
             }
 
@@ -1442,6 +1609,8 @@ public class LosEffects {
                           ((terrainEl > ai.attackAbsHeight) && attackerAdjacent) ||
                           ((terrainEl > ai.targetAbsHeight) && targetAdjacent);
                 }
+
+                int smokeModifier = 0;
                 if (affectsLos) {
                     // smoke and woods stack for LOS so check them both
                     switch (hex.terrainLevel(Terrains.SMOKE)) {
@@ -1451,16 +1620,30 @@ public class LosEffects {
                         case SmokeCloud.SMOKE_CHAFF_LIGHT:
                         case SmokeCloud.SMOKE_GREEN:
                             los.lightSmoke++;
+                            smokeModifier = 1;
+                            logger.debug("    -> {} counted as LIGHT SMOKE (2-level check)", coords);
                             break;
                         case SmokeCloud.SMOKE_HEAVY:
                             los.heavySmoke++;
+                            smokeModifier = 2;
+                            logger.debug("    -> {} counted as HEAVY SMOKE (2-level check)", coords);
                             break;
+                    }
+                    Entity attacker = game.getEntity(ai.attackerId);
+                    if (attacker != null && attacker.hasBAP(true) && ai.attackPos.distance(coords) <= attacker.getBAPRange()) {
+                        los.bapReduceSmoke += smokeModifier;
                     }
                     // Check woods/jungle
                     if ((woodsLevel == 1) || (jungleLevel == 1)) {
                         los.lightWoods++;
+                        logger.debug("    -> {} counted as LIGHT WOODS (2-level foliage)", coords);
                     } else if ((woodsLevel == 2) || (jungleLevel == 2)) {
                         los.heavyWoods++;
+                        logger.debug("    -> {} counted as HEAVY WOODS (2-level foliage)", coords);
+                    }
+                } else {
+                    if (smokeLevel != Terrain.LEVEL_NONE || hasFoliage) {
+                        logger.debug("    -> {} 2-level smoke/foliage does NOT affect LOS (below line)", coords);
                     }
                 }
 
@@ -1477,6 +1660,23 @@ public class LosEffects {
                     if ((woodsLevel == 3) || (jungleLevel == 3)) {
                         los.ultraWoods++;
                     }
+                }
+            }
+
+            // TacOps: an erupting geyser blocks LOS through its hex, treated as ultra-heavy woods.
+            // The plume rises three levels above the hex level.
+            if (hex.terrainLevel(Terrains.GEYSER) == Terrains.GEYSER_LVL_ACTIVE) {
+                int geyserPlumeEl = hexEl + GEYSER_PLUME_HEIGHT;
+                if (diagramLoS) {
+                    affectsLos = geyserPlumeEl >= losElevation;
+                } else {
+                    affectsLos = (geyserPlumeEl > maxUnitHeight) ||
+                          ((geyserPlumeEl > ai.attackAbsHeight) && attackerAdjacent) ||
+                          ((geyserPlumeEl > ai.targetAbsHeight) && targetAdjacent);
+                }
+                if (affectsLos) {
+                    los.ultraWoods++;
+                    logger.debug("    -> {} counted as ULTRA WOODS (erupting geyser)", coords);
                 }
             }
         }
@@ -1704,9 +1904,9 @@ public class LosEffects {
             // Infantry inside a building can only be
             // targeted by units in the same building.
             if (ai.targetInfantry && targetInBuilding) {
-                if (null == left.getThruBldg()) {
+                if (left.getThruBldg() == null){
                     left.infProtected = true;
-                } else if (null == right.getThruBldg()) {
+                } else if (right.getThruBldg() == null){
                     right.infProtected = true;
                 }
             }
