@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2000-2005 Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2002-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2002-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -36,10 +36,10 @@ package megamek.common.compute;
 
 import static java.lang.Math.max;
 import static java.lang.Math.min;
-import static megamek.codeUtilities.MathUtility.clamp;
 
 import java.util.*;
 
+import megamek.MMConstants;
 import megamek.common.*;
 import megamek.common.actions.*;
 import megamek.common.annotations.Nullable;
@@ -48,6 +48,7 @@ import megamek.common.board.Board;
 import megamek.common.board.BoardHelper;
 import megamek.common.board.Coords;
 import megamek.common.board.CrossBoardAttackHelper;
+import megamek.common.compute.scatter.Scatter;
 import megamek.common.enums.AimingMode;
 import megamek.common.enums.BasementType;
 import megamek.common.enums.MoveStepType;
@@ -75,8 +76,10 @@ import megamek.common.weapons.autoCannons.RACWeapon;
 import megamek.common.weapons.autoCannons.UACWeapon;
 import megamek.common.weapons.battleArmor.innerSphere.ISBAPopUpMineLauncher;
 import megamek.common.weapons.bayWeapons.BayWeapon;
+import megamek.common.weapons.capitalWeapons.ScreenLauncherWeapon;
 import megamek.common.weapons.gaussRifles.HAGWeapon;
 import megamek.common.weapons.handlers.AreaEffectHelper;
+import megamek.common.weapons.handlers.BombastLaserWeaponHandler;
 import megamek.common.weapons.handlers.DamageFalloff;
 import megamek.common.weapons.infantry.InfantryWeapon;
 import megamek.common.weapons.mgs.MGWeapon;
@@ -329,7 +332,7 @@ public class Compute {
 
         // Compute sum in long to avoid overflow, then clamp to int range
         long sum = (long) highest + (long) second;
-        return (int) clamp(sum, Integer.MIN_VALUE, Integer.MAX_VALUE);
+        return Math.clamp(sum, Integer.MIN_VALUE, Integer.MAX_VALUE);
     }
 
     /**
@@ -437,13 +440,13 @@ public class Compute {
      * would not. The returned entity is the entity causing the violation.
      * <p>
      * The position and elevation for the stacking violation are derived from the Entity represented by the passed
-     * Entity ID.
-     * By default, ignores hidden units.
+     * Entity ID. By default, ignores hidden units.
      *
      * @param game       The Game instance
      * @param enteringId The gameId of the moving Entity
      * @param coords     The hex being entered
      * @param climbMode  The moving Entity's climb mode at the point it enters the destination hex
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, int enteringId, Coords coords, boolean climbMode) {
@@ -460,12 +463,13 @@ public class Compute {
      * <p>
      * The position and elevation for the stacking violation are derived from the passed Entity.
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
-     * @param dest      The hex being entered
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
+     * @param dest         The hex being entered
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -480,13 +484,14 @@ public class Compute {
      * <p>
      * The position is derived from the passed Entity, while the elevation is derived from the passed Entity parameter.
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
-     * @param elevation The elevation of the moving Entity
-     * @param dest      The hex being entered
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
+     * @param elevation    The elevation of the moving Entity
+     * @param dest         The hex being entered
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -495,16 +500,18 @@ public class Compute {
               elevation, dest, entering.getBoardId(), transport, climbMode, ignoreHidden);
     }
 
-    /** Used by Princess / bots for checking deployment positions.
+    /**
+     * Used by Princess / bots for checking deployment positions.
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
      * @param origPosition The coords of the hex the moving Entity is leaving
-     * @param elevation The elevation of the moving Entity
-     * @param dest      The hex being entered
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param elevation    The elevation of the moving Entity
+     * @param dest         The hex being entered
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -516,14 +523,15 @@ public class Compute {
     /**
      * Board-aware check used when compiling movepaths
      *
-     * @param game      The Game instance
-     * @param entering  The Entity entering the hex
-     * @param elevation The elevation of the moving Entity
-     * @param dest      The hex being entered
-     * @param destBoardId Allows setting a different board for checking destination hex
-     * @param transport Represents the unit transporting entering, which may affect stacking, can be null
-     * @param climbMode The moving Entity's climb mode at the point it enters the destination hex
+     * @param game         The Game instance
+     * @param entering     The Entity entering the hex
+     * @param elevation    The elevation of the moving Entity
+     * @param dest         The hex being entered
+     * @param destBoardId  Allows setting a different board for checking destination hex
+     * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
+     * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -543,10 +551,11 @@ public class Compute {
      * @param origPosition The coords of the hex the moving Entity is leaving
      * @param elevation    The elevation of the moving Entity
      * @param dest         The hex being entered
-     * @param destBoardId Allows setting a different board for checking destination hex
+     * @param destBoardId  Allows setting a different board for checking destination hex
      * @param transport    Represents the unit transporting entering, which may affect stacking, can be null
      * @param climbMode    The moving Entity's climb mode at the point it enters the destination hex
      * @param ignoreHidden true by default.
+     *
      * @return Entity instance that is causing the violation
      */
     public static Entity stackingViolation(Game game, Entity entering,
@@ -564,8 +573,9 @@ public class Compute {
 
         // LAM in fighter mode shouldn't be treated as a Mek for all this
         boolean isMek =
-              ((entering instanceof Mek) && !(entering instanceof LandAirMek lam && lam.getConversionMode() == LandAirMek.CONV_MODE_FIGHTER))
-              || (entering instanceof SmallCraft);
+              ((entering instanceof Mek) && !(entering instanceof LandAirMek lam
+                    && lam.getConversionMode() == LandAirMek.CONV_MODE_FIGHTER))
+                    || (entering instanceof SmallCraft);
         boolean isLargeSupport = (entering instanceof LargeSupportTank)
               || (entering instanceof Dropship)
               || ((entering instanceof Mek) && entering.isSuperHeavy());
@@ -834,7 +844,9 @@ public class Compute {
               || (entity.getMovementMode() == EntityMovementMode.WIGE)
               || (entity instanceof QuadVee && entity.getConversionMode() == QuadVee.CONV_MODE_VEHICLE))
               && (destHex.terrainLevel(Terrains.WATER) > 0)
-              && !isPavementStep) {
+              && !isPavementStep
+              && Game.rulesManager.getRulesMovement()
+              .isMoveIntoWaterDangerous(movementType, entity.getMovementMode())) {
             return true;
         }
 
@@ -888,7 +900,8 @@ public class Compute {
               && (movementType != EntityMovementType.MOVE_JUMP)))
               && (entity.getMovementMode() != EntityMovementMode.HOVER)
               && (entity.getMovementMode() != EntityMovementMode.WIGE)
-              && isTurning && !isInfantry) {
+              && isTurning && !isInfantry
+              && Game.rulesManager.getRulesMovement().skidEnabled()) {
             return true;
         }
 
@@ -897,7 +910,7 @@ public class Compute {
         if ((destElevation < destHex.terrainLevel(Terrains.BLDG_ELEV))
               && !(entity instanceof Infantry)) {
             IBuilding bldg = board.getBuildingAt(dest);
-            boolean insideHangar = (null != bldg)
+            boolean insideHangar = (bldg != null)
                   && bldg.isIn(src)
                   && (bldg.getBldgClass() == IBuilding.HANGAR)
                   && (destHex.terrainLevel(Terrains.BLDG_ELEV) > entity
@@ -1021,7 +1034,6 @@ public class Compute {
     public static Coords getValidDisplacement(Game game, int entityId,
           Coords src, int direction) {
         // check the surrounding hexes, nearest to the original direction first
-        int[] offsets = { 0, 1, 5, 2, 4, 3 };
         int range = 1;
         // check for a central drop-ship hex and if so, then displace to a two
         // hex radius
@@ -1031,21 +1043,8 @@ public class Compute {
                 range = 2;
             }
         }
-        for (int offset : offsets) {
-            Coords dest = src.translated((direction + offset) % 6, range);
-            if (Compute.isValidDisplacement(game, entityId, src, dest)) {
-                return dest;
-            }
-            // code here borrowed from Compute.coordsAtRange
-            for (int count = 1; count < range; count++) {
-                dest = dest.translated((direction + offset + 2) % 6);
-                if (Compute.isValidDisplacement(game, entityId, src, dest)) {
-                    return dest;
-                }
-            }
-        }
-        // have fun being instant-killed!
-        return null;
+        return Game.rulesManager.getRulesMovement().getAccidentalFallDisplacement(game, entityId, src, direction,
+              range);
     }
 
     /**
@@ -1120,43 +1119,7 @@ public class Compute {
      * returns the base hex if they're impassible.
      */
     public static Coords getMissedChargeDisplacement(Game game, int entityId, Coords src, int direction) {
-        Coords first = src.translated((direction + 1) % 6);
-        Coords second = src.translated((direction + 5) % 6);
-        Hex firstHex = game.getBoard().getHex(first);
-        Hex secondHex = game.getBoard().getHex(second);
-        Entity entity = game.getEntity(entityId);
-
-        if (entity == null) {
-            return null;
-        }
-
-        if ((firstHex == null) || (secondHex == null)) {
-            // leave it, will be handled
-        } else if (entity.elevationOccupied(firstHex) > entity.elevationOccupied(secondHex)) {
-            // leave it
-        } else if (entity.elevationOccupied(firstHex) < entity.elevationOccupied(secondHex)) {
-            // switch
-            Coords temp = first;
-            first = second;
-            second = temp;
-        } else if (Compute.d6() > 3) {
-            // switch randomly
-            Coords temp = first;
-            first = second;
-            second = temp;
-        }
-
-        if (Compute.isValidDisplacement(game, entityId, src,
-              src.direction(first))
-              && game.getBoard().contains(first)) {
-            return first;
-        } else if (Compute.isValidDisplacement(game, entityId, src,
-              src.direction(second))
-              && game.getBoard().contains(second)) {
-            return second;
-        } else {
-            return src;
-        }
+        return Game.rulesManager.getRulesPhysical().getMissedChargeDisplacement(game, entityId, src, direction);
     }
 
     /**
@@ -1277,6 +1240,9 @@ public class Compute {
 
     /**
      * Gets the ToHitData associated with firing at an immobile target. Returns null if target isn't.
+     * <p>
+     * Note: all Ranged attack calls *must* go through *.addImmobileMod() or we may get illegal -4 mods. Currently this
+     * is the case; all other attack types go through the above simplified method.
      *
      * @param target     The target being considered for firing
      * @param aimingAt   The location of the unit being aimed at
@@ -1287,11 +1253,6 @@ public class Compute {
     @Nullable
     public static ToHitData getImmobileMod(Targetable target, int aimingAt, AimingMode aimingMode) {
         // if we are bombing hexes, they are not considered immobile.
-        if ((target.getTargetType() == Targetable.TYPE_HEX_BOMB)
-              || (target.getTargetType() == Targetable.TYPE_HEX_AERO_BOMB)) {
-            return null;
-        }
-
         if (target.isImmobile() || target.isBracing()) {
             if ((target instanceof Mek) && (aimingAt == Mek.LOC_HEAD) && aimingMode.isImmobile()) {
                 return new ToHitData(3, "aiming at head");
@@ -1314,6 +1275,23 @@ public class Compute {
      */
     public static ToHitData getRangeMods(Game game, Entity attackingEntity, WeaponMounted weapon, AmmoMounted ammo,
           Targetable target) {
+        return getRangeMods(game, attackingEntity, weapon, ammo, target, null);
+    }
+
+    /**
+     * Determines the to-hit modifier due to range for an attack with the specified parameters. Includes minimum range,
+     * infantry 0-range mods, and target stealth mods. Accounts for friendly C3 units.
+     *
+     * <p>For a C3-equipped attacker, the C3 spotter search needs ECM information for every game entity, which is
+     * expensive to compute. Callers that evaluate many attacks in a row (bots, to-hit previews) should compute that
+     * list once via {@link ComputeECM#computeAllEntitiesECMInfo(List)} and pass it in.</p>
+     *
+     * @param allECMInfo Precomputed ECM information for all game entities, or {@code null} to compute it on demand
+     *
+     * @return the modifiers
+     */
+    public static ToHitData getRangeMods(Game game, Entity attackingEntity, WeaponMounted weapon, AmmoMounted ammo,
+          Targetable target, @Nullable List<ECMInfo> allECMInfo) {
         WeaponType weaponType = weapon.getType();
         int[] weaponRanges = weaponType.getRanges(weapon, ammo);
         boolean isAttackerInfantry = (attackingEntity instanceof Infantry);
@@ -1405,14 +1383,13 @@ public class Compute {
         }
 
         // allow naval units on surface to be attacked from above or below
-        if ((null != targetEntity) && (targBottom == 0) && (targetEntity.getUnitType() == UnitType.NAVAL)) {
+        if ((targetEntity != null) && (targBottom == 0) && (targetEntity.getUnitType() == UnitType.NAVAL)) {
             targetInPartialWater = true;
         }
 
         // allow naval units to target underwater units,
         // torpedo tubes are mounted underwater
-        if ((targetUnderwater || (weaponType.getAmmoType() == AmmoTypeEnum.LRM_TORPEDO) ||
-              (weaponType.getAmmoType() == AmmoTypeEnum.SRM_TORPEDO))
+        if ((targetUnderwater || (weaponType.getAmmoType() != null && weaponType.getAmmoType().isTorpedo()))
               && (attackingEntity.getUnitType() == UnitType.NAVAL)) {
             weaponUnderwater = true;
             weaponRanges = weaponType.getWRanges();
@@ -1444,7 +1421,8 @@ public class Compute {
 
             // HACK on ranges: for those without underwater range,
             // long == medium; iteration in rangeBracket() allows this
-            if (weaponRanges[RangeType.RANGE_SHORT] == 0) {
+            // Energy flag to allow core rules with short range 0, but allow longer ranges
+            if (weaponRanges[RangeType.RANGE_SHORT] == 0 && !(weaponType.hasFlag(WeaponType.F_ENERGY))) {
                 return new ToHitData(TargetRoll.IMPOSSIBLE,
                       "Weapon cannot fire underwater.");
             }
@@ -1464,8 +1442,7 @@ public class Compute {
             }
         } else if (targetUnderwater) {
             return new ToHitData(TargetRoll.IMPOSSIBLE, "Target underwater, but not weapon.");
-        } else if ((weaponType.getAmmoType() == AmmoTypeEnum.LRM_TORPEDO)
-              || (weaponType.getAmmoType() == AmmoTypeEnum.SRM_TORPEDO)) {
+        } else if (weaponType.getAmmoType() != null && weaponType.getAmmoType().isTorpedo()) {
             // Torpedoes only fire underwater.
             return new ToHitData(TargetRoll.IMPOSSIBLE, "Weapon can only fire underwater.");
         }
@@ -1560,8 +1537,9 @@ public class Compute {
         }
 
         // find any c3 spotters that could help
-        Entity c3spotter = ComputeC3Spotter.findC3Spotter(game, attackingEntity, target);
-        Entity c3spotterWithECM = ComputeC3Spotter.playtestFindC3Spotter(game, attackingEntity, target);
+        Entity c3spotter = ComputeC3Spotter.findC3Spotter(game, attackingEntity, target, allECMInfo);
+        // Check for C3 spotters under ECM
+        Entity c3spotterWithECM = ComputeC3Spotter.findC3SpotterUnderECM(game, attackingEntity, target, allECMInfo);
 
         if (isIndirect) {
             c3spotter = attackingEntity; // no c3 when using indirect fire
@@ -1572,12 +1550,12 @@ public class Compute {
         }
 
         int c3dist = Compute.effectiveDistance(game, c3spotter, target, false);
-        // PLAYTEST3 if there is a member that is ECM blocked
+
         int c3ecmDist = Compute.effectiveDistance(game, c3spotterWithECM, target, false);
 
         // C3 can't benefit from LOS range.
         int c3range = RangeType.rangeBracketC3(c3dist, distance, weaponRanges, useExtremeRange, false);
-        // PLAYTEST3 checking for ECM ranged member
+        // checking for ECM ranged member
         int c3ecmRange = RangeType.rangeBracketC3(c3ecmDist, distance, weaponRanges, useExtremeRange, false);
 
         /*
@@ -1591,23 +1569,13 @@ public class Compute {
         }
 
         // determine which range we're using
-        int usingRange = range;
         boolean usingC3 = false;
 
-        if (game.getOptions().booleanOption(OptionsConstants.PLAYTEST_3)) {
-            // PLAYTEST3 check ecm vs non ecm affected C3
-            if ((c3range > c3ecmRange) && (c3range > range)) {
-                usingRange = c3ecmRange;
-                usingC3 = true;
-            } else if (range > c3range) {
-                usingRange = c3range;
-                usingC3 = true;
-            }
+        int usingRange = Game.rulesManager.getRulesC3().getC3RangeToUse(range, c3range, c3ecmRange);
+        if (usingRange != RangeType.RANGE_OUT) {
+            usingC3 = true;
         } else {
-            usingRange = min(range, c3range);
-            if (usingRange == c3range && range > c3range) {
-                usingC3 = true;
-            }
+            usingRange = range;
         }
 
         // add range modifier, C3 can't be used with LOS Range
@@ -1665,40 +1633,9 @@ public class Compute {
             }
         } else {
             // report c3 adjustment
-            // PLAYTEST3 C3 ECM halving
-            if (game.getOptions().booleanOption(OptionsConstants.PLAYTEST_3)
-                  && usingRange == c3ecmRange
-                  && usingRange != c3range
-                  && c3spotterWithECM.getC3ecmAffected()) {
-                // Halve the bonus, so we need to know what the original range was too.
-                int rangeModifier = 0;
-                if (range == RangeType.RANGE_LONG) {
-                    rangeModifier = attackingEntity.getLongRangeModifier();
-                } else if (range == RangeType.RANGE_MEDIUM) {
-                    rangeModifier = attackingEntity.getMediumRangeModifier();
-                } else if (range == RangeType.RANGE_EXTREME) {
-                    rangeModifier = attackingEntity.getExtremeRangeModifier();
-                }
-                if ((c3ecmRange == RangeType.RANGE_SHORT) || (c3ecmRange == RangeType.RANGE_MINIMUM)) {
-                    rangeModifier = (rangeModifier + attackingEntity.getShortRangeModifier()) / 2;
-                    mods.addModifier(rangeModifier, "short range due to C3 spotter under ECM");
-                } else if (c3ecmRange == RangeType.RANGE_MEDIUM) {
-                    rangeModifier = (rangeModifier + attackingEntity.getMediumRangeModifier()) / 2;
-                    mods.addModifier(rangeModifier, "medium range due to C3 spotter under ECM");
-                } else if (c3ecmRange == RangeType.RANGE_LONG) {
-                    rangeModifier = (rangeModifier + attackingEntity.getLongRangeModifier()) / 2;
-                    mods.addModifier(rangeModifier, "long range due to C3 spotter under ECM");
-                }
-            } else {
-                // Normal C3 operation, no ECM
-                if ((c3range == RangeType.RANGE_SHORT) || (c3range == RangeType.RANGE_MINIMUM)) {
-                    mods.addModifier(attackingEntity.getShortRangeModifier(), "short range due to C3 spotter");
-                } else if (c3range == RangeType.RANGE_MEDIUM) {
-                    mods.addModifier(attackingEntity.getMediumRangeModifier(), "medium range due to C3 spotter");
-                } else if (c3range == RangeType.RANGE_LONG) {
-                    mods.addModifier(attackingEntity.getLongRangeModifier(), "long range due to C3 spotter");
-                }
-            }
+            int rangeModifier = 0;
+            Game.rulesManager.getRulesC3().getC3RangeModifier(mods, range, usingRange, c3ecmRange, c3range,
+                  c3spotterWithECM.getC3ecmAffected(), attackingEntity);
         }
 
         // Variable Range Targeting quirk modifier (BMM pg. 86)
@@ -1724,7 +1661,10 @@ public class Compute {
         if (isWeaponInfantry) {
             mods = Compute.getInfantryRangeMods(min(distance, c3dist),
                   (InfantryWeapon) weaponType,
-                  (attackingEntity instanceof Infantry) ? ((Infantry) attackingEntity).getSecondaryWeapon() : null,
+                  (attackingEntity instanceof ConvInfantry infantry) ? infantry.getSecondaryWeapon() :
+                        null,
+                  (attackingEntity instanceof ConvInfantry infantry) ? infantry.getDisposableWeapon() :
+                        null,
                   weaponUnderwater);
 
             int rangeModifier = mods.getValue();
@@ -1764,7 +1704,7 @@ public class Compute {
      * @return - all modifiers for range
      */
     public static ToHitData getInfantryRangeMods(int distance, InfantryWeapon primaryWeapon,
-          InfantryWeapon secondaryWeapon, boolean underwater) {
+          InfantryWeapon secondaryWeapon, @Nullable InfantryWeapon disposableWeapon, boolean underwater) {
         ToHitData mods = new ToHitData();
         int range = primaryWeapon.getInfantryRange();
         if (underwater) {
@@ -1883,14 +1823,26 @@ public class Compute {
                   || (secondaryWeapon != null && secondaryWeapon.hasFlag(WeaponType.F_INF_POINT_BLANK))) {
                 mods.addModifier(1, "point blank weapon");
             }
-            if (primaryWeapon.hasFlag(WeaponType.F_INF_ENCUMBER) || (primaryWeapon.getCrew() > 1)
-                  || (secondaryWeapon != null
-                  && (secondaryWeapon.hasFlag(WeaponType.F_INF_ENCUMBER)
-                  || secondaryWeapon.getCrew() > 1))) {
+            // A Disposable Weapon (TO:AuE p.116, Corrected Sixth Printing) encumbers the platoon like a secondary
+            // support weapon (per ruling), so its encumbrance counts even when the platoon fires its normal weapon.
+            boolean primaryEncumbers = primaryWeapon.hasFlag(WeaponType.F_INF_ENCUMBER) || (primaryWeapon.getCrew()
+                  > 1);
+            boolean secondaryEncumbers = (secondaryWeapon != null)
+                  && (secondaryWeapon.hasFlag(WeaponType.F_INF_ENCUMBER) || (secondaryWeapon.getCrew() > 1));
+            boolean disposableEncumbers = (disposableWeapon != null)
+                  && (disposableWeapon.hasFlag(WeaponType.F_INF_ENCUMBER) || (disposableWeapon.getCrew() > 1));
+            if (primaryEncumbers || secondaryEncumbers || disposableEncumbers) {
                 mods.addModifier(1, "point blank support weapon");
             }
 
-            if (primaryWeapon.hasFlag(WeaponType.F_INF_BURST)) {
+            // A platoon whose primary weapon is over the damage cap has its damage reduced to the cap and
+            // "automatically gain[s] the Heavy Burst Weapon special feature" (TM p. 152). That feature is both a
+            // -1 to-hit at range 0 and +1D6 damage against conventional infantry; the damage half is applied in
+            // InfantryWeaponHandler, so the to-hit half has to honour the same condition or the platoon gets only
+            // half of what the rule grants.
+            boolean heavyBurstFromDamageCap =
+                  primaryWeapon.getInfantryDamage() > MMConstants.INFANTRY_PRIMARY_WEAPON_DAMAGE_CAP;
+            if (primaryWeapon.hasFlag(WeaponType.F_INF_BURST) || heavyBurstFromDamageCap) {
                 mods.addModifier(-1, "point blank burst fire weapon");
             }
         }
@@ -2097,15 +2049,15 @@ public class Compute {
             distance += (2 * attacker.getAltitude());
         }
 
-        if (game.isOnSpaceMap(attacker) && !attacker.getPosition().equals(targetPos.get(0))) {
+        if (game.isOnSpaceMap(attacker) && !attacker.getPosition().equals(targetPos.getFirst())) {
             // Atmospheric hexes count as extra range
             Board attackerBoard = game.getBoard(attacker);
             Coords currentCoords = attacker.getPosition();
-            currentCoords = Coords.nextHex(currentCoords, targetPos.get(0));
+            currentCoords = Coords.nextHex(currentCoords, targetPos.getFirst());
             int safetyCounter = 0;
-            while (!currentCoords.equals(targetPos.get(0)) && (safetyCounter < 1000)) {
+            while (!currentCoords.equals(targetPos.getFirst()) && (safetyCounter < 1000)) {
                 safetyCounter++; // prevent infinite loops
-                currentCoords = Coords.nextHex(currentCoords, targetPos.get(0));
+                currentCoords = Coords.nextHex(currentCoords, targetPos.getFirst());
                 if (BoardHelper.isAtmosphericRow(game, attackerBoard, currentCoords)
                       || BoardHelper.isGroundRowHex(attackerBoard, currentCoords)) {
                     distance += BoardHelper.highAltAtmosphereRowRangeIncrease(game);
@@ -2244,10 +2196,14 @@ public class Compute {
         Entity spotter = null;
         int distance = -1;
 
-        // Compute friendly spotters
-        for (Entity friend : game.getPlayerEntities(attacker.getOwner(), true)) {
+        // Compute friendly spotters. Consider every friendly (same-team) unit, not just the attacker's own player's
+        // units: on a multi-bot team the TAG spotter is frequently a different player's unit (e.g. the artillery is one
+        // Princess and the TAG spotter another on the same team), so an own-player-only search misses it and a homing
+        // round a teammate could guide is never fired.
+        for (Entity friend : game.getEntitiesVector()) {
 
             if (friend == null
+                  || friend.isEnemyOf(attacker)
                   || !friend.isDeployed()
                   || friend.isOffBoard()
                   || (friend.getTransportId() != Entity.NONE)
@@ -2377,7 +2333,8 @@ public class Compute {
                 int l3ProneFiringArm = Entity.LOC_NONE;
 
                 if (attacker.isLocationBad(Mek.LOC_RIGHT_ARM) || attacker.isLocationBad(Mek.LOC_LEFT_ARM)) {
-                    if (game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_PRONE_FIRE)) {
+                    if (Game.rulesManager.getRulesTarget().proneFireWithOneArm(
+                          game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_PRONE_FIRE))) {
                         // Can fire with only one arm
                         if (attacker.isLocationBad(Mek.LOC_RIGHT_ARM) && attacker.isLocationBad(Mek.LOC_LEFT_ARM)) {
                             return new ToHitData(TargetRoll.IMPOSSIBLE,
@@ -2425,7 +2382,8 @@ public class Compute {
                     mods.addModifier(2, Messages.getString("WeaponAttackAction.AeProne"));
                 }
 
-                if (l3ProneFiringArm != Entity.LOC_NONE) {
+                if (l3ProneFiringArm != Entity.LOC_NONE && !Game.rulesManager.getRulesTarget()
+                                                                             .proneFireWithOneArm(false)) {
                     mods.addModifier(1, Messages.getString("WeaponAttackAction.AePronePropping"));
                 }
             }
@@ -2433,7 +2391,8 @@ public class Compute {
             int l3ProneFiringArm = Entity.LOC_NONE;
 
             if (attacker.isLocationBad(Mek.LOC_RIGHT_ARM) || attacker.isLocationBad(Mek.LOC_LEFT_ARM)) {
-                if (game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_PRONE_FIRE)) {
+                if (Game.rulesManager.getRulesTarget().proneFireWithOneArm(
+                      game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_PRONE_FIRE))) {
                     // Can fire with only one arm
                     if (attacker.isLocationBad(Mek.LOC_RIGHT_ARM) && attacker.isLocationBad(Mek.LOC_LEFT_ARM)) {
                         return new ToHitData(TargetRoll.IMPOSSIBLE,
@@ -2476,7 +2435,8 @@ public class Compute {
                 mods.addModifier(2, Messages.getString("WeaponAttackAction.AeProne"));
             }
 
-            if (l3ProneFiringArm != Entity.LOC_NONE) {
+            if (l3ProneFiringArm != Entity.LOC_NONE && !Game.rulesManager.getRulesTarget()
+                                                                         .proneFireWithOneArm(false)) {
                 mods.addModifier(1, Messages.getString("WeaponAttackAction.AePronePropping"));
             }
         }
@@ -2576,13 +2536,7 @@ public class Compute {
                     mods.addModifier(4, "shoulder actuator destroyed");
                 } else {
                     // no shoulder hits, add other arm hits
-                    int actuatorHits = 0;
-                    if (attacker.getBadCriticalSlots(CriticalSlot.TYPE_SYSTEM, Mek.ACTUATOR_UPPER_ARM, location) > 0) {
-                        actuatorHits++;
-                    }
-                    if (attacker.getBadCriticalSlots(CriticalSlot.TYPE_SYSTEM, Mek.ACTUATOR_LOWER_ARM, location) > 0) {
-                        actuatorHits++;
-                    }
+                    int actuatorHits = Game.rulesManager.getRulesTarget().getArmActuatorHitMod(attacker, location);
                     if (actuatorHits > 0) {
                         mods.addModifier(actuatorHits, actuatorHits + " destroyed arm actuators");
                     }
@@ -2746,15 +2700,15 @@ public class Compute {
                   "Can't target unit with active stealth armor as a secondary target");
         }
 
-        int mod = 2;
-        if (curInFrontArc || (attacker instanceof BattleArmor)) {
-            mod--;
+        // Secondary target default value
+        int mod = Game.rulesManager.getRulesTarget().getSecondaryTargetModifier();
+        // Check for secondary arc and change as needed
+        if (!curInFrontArc && !(attacker instanceof BattleArmor)) {
+            mod = Game.rulesManager.getRulesTarget().getSecondaryArcModifier();
         }
-
         if (attacker.hasAbility(OptionsConstants.GUNNERY_MULTI_TASKER)) {
             mod--;
         }
-
         return new ToHitData(mod, "secondary target modifier");
     }
 
@@ -2773,6 +2727,10 @@ public class Compute {
 
         if (entity == null) {
             return new ToHitData(TargetRoll.AUTOMATIC_FAIL, "Entity Does Not Exist");
+        }
+        // A vehicle clearing rubble with its bulldozer fires as if it had moved at Flank speed (TacOps).
+        if ((entity instanceof Tank clearingTank) && clearingTank.isClearingRubble()) {
+            return Compute.getAttackerMovementModifier(game, entityId, EntityMovementType.MOVE_RUN);
         }
         return Compute.getAttackerMovementModifier(game, entityId, entity.moved);
     }
@@ -2822,6 +2780,12 @@ public class Compute {
         } else if (movement == EntityMovementType.MOVE_SPRINT
               || movement == EntityMovementType.MOVE_VTOL_SPRINT) {
             return new ToHitData(TargetRoll.AUTOMATIC_FAIL, "attacker sprinted");
+        }
+
+        // While clearing woods with a saw, weapon attacks are penalized as running/flank speed
+        // (TM pp.241-243). Apply minimum +2 modifier if not already at or above that level.
+        if (entity.isClearingWoods() && (toHit.getValue() < (2 / dedicatedGunnerMod))) {
+            toHit = new ToHitData(2 / dedicatedGunnerMod, "clearing woods with saw");
         }
 
         return toHit;
@@ -2935,7 +2899,9 @@ public class Compute {
         if (game.getOptions().booleanOption(OptionsConstants.ADVANCED_GROUND_MOVEMENT_TAC_OPS_STANDING_STILL)
               && (entity.mpUsed == 0)
               && !entity.isImmobile()
-              && !((entity instanceof Infantry) || (entity instanceof VTOL) || (entity.isBuildingEntityOrGunEmplacement()))) {
+              && !((entity instanceof Infantry)
+              || (entity instanceof VTOL)
+              || (entity.isBuildingEntityOrGunEmplacement()))) {
             ToHitData toHit = new ToHitData();
             toHit.addModifier(-1, "target did not move");
             return toHit;
@@ -3206,7 +3172,10 @@ public class Compute {
                     break;
             }
         }
-        if (hex.terrainLevel(Terrains.GEYSER) == 2) {
+        if (hex.terrainLevel(Terrains.GEYSER) == Terrains.GEYSER_LVL_ACTIVE) {
+            // Per TacOps an erupting geyser also blocks LOS as ultra-heavy woods (see
+            // LosEffects), so a target engulfed by the plume is already unreachable; this
+            // modifier still applies to a target raised above the plume that remains visible.
             // Always add full geyser modifier
             toHit.addModifier(2, "target in erupting geyser");
             if (eiStatus > 0) {
@@ -3301,7 +3270,7 @@ public class Compute {
                 break;
         }
 
-        if (hex.terrainLevel(Terrains.GEYSER) == 2) {
+        if (hex.terrainLevel(Terrains.GEYSER) == Terrains.GEYSER_LVL_ACTIVE) {
             // Always add full geyser modifier
             toHit.addModifier(2, "erupting geyser");
             if (eiStatus > 0) {
@@ -3379,14 +3348,14 @@ public class Compute {
     }
 
     /**
-     * Returns the weapon attack out of a list that has the second highest expected damage
-     * Used for Playtest 3 AMS engaging multiple salvos
+     * Returns the weapon attack out of a list that has the second highest expected damage used for engaging multiple
+     * salvos
      */
     public static WeaponAttackAction getSecondHighestExpectedDamage(Game g,
           List<WeaponAttackAction> vAttacks, boolean assumeHit) {
         WeaponAttackAction waaHighest;
         WeaponAttackAction waaSecondHighest;
-        
+
         // Copy the list to a new list
         List<WeaponAttackAction> attacksClone = new ArrayList<>(vAttacks);
         // Find the highest damage
@@ -3489,7 +3458,7 @@ public class Compute {
 
         ToHitData hitData = weaponAttackAction.toHit(game, allECMInfo);
 
-        if (attacker.isConventionalInfantry() && attacker instanceof Infantry infantry) {
+        if (attacker instanceof ConvInfantry infantry) {
             infShootingStrength = infantry.getShootingStrength();
             infDamagePerTrooper = infantry.getDamagePerTrooper();
         }
@@ -3642,7 +3611,7 @@ public class Compute {
                         weaponTarget.getPosition(),
                         allECMInfo))
                   && (wt.getDamage() == WeaponType.DAMAGE_BY_CLUSTER_TABLE)
-                  && (wt.hasFlag(WeaponType.F_MISSILE)) && null != at) {
+                && (wt.hasFlag(WeaponType.F_MISSILE)) && at != null) {
                 // Check for linked artemis guidance system
                 if ((wt.getAmmoType() == AmmoTypeEnum.LRM)
                       || (wt.getAmmoType() == AmmoTypeEnum.LRM_IMP)
@@ -3650,9 +3619,7 @@ public class Compute {
                       || (wt.getAmmoType() == AmmoTypeEnum.SRM)
                       || (wt.getAmmoType() == AmmoTypeEnum.SRM_IMP)) {
                     lnk_guide = weapon.getLinkedBy();
-                    if ((lnk_guide != null) && (lnk_guide.getType() instanceof MiscType) && !lnk_guide.isDestroyed()
-                          && !lnk_guide.isMissing() && !lnk_guide.isBreached()
-                          && lnk_guide.getType().hasFlag(MiscType.F_ARTEMIS)) {
+                    if (EquipmentActivation.isGuidanceActive(lnk_guide, MiscType.F_ARTEMIS)) {
 
                         // Don't use artemis if this is indirect fire
                         // -> Hook for Artemis V Level 3 Clan tech here; use
@@ -3691,12 +3658,10 @@ public class Compute {
 
             if (wt.getAmmoType() == AmmoTypeEnum.MRM) {
                 lnk_guide = weapon.getLinkedBy();
-                if ((lnk_guide != null)
-                      && (lnk_guide.getType() instanceof MiscType)
-                      && !lnk_guide.isDestroyed() && !lnk_guide.isMissing()
-                      && !lnk_guide.isBreached()
-                      && lnk_guide.getType().hasFlag(MiscType.F_APOLLO)) {
-                    fHits *= .9f;
+                if (EquipmentActivation.isGuidanceActive(lnk_guide, MiscType.F_APOLLO)) {
+                    // 90% damage expected with Apollo, but instead divide by 3 if Saturation mode
+                    boolean saturation = weaponAttackAction.getTargetType() == Targetable.TYPE_SATURATION;
+                    fHits *= (saturation) ? .333f : .9f;
                 }
             }
 
@@ -3912,6 +3877,7 @@ public class Compute {
      * infernos, do no damage or have special properties and so the damage is an estimation of effectiveness
      */
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public static double getAmmoAdjDamage(Game game, WeaponAttackAction weaponAttackAction) {
         boolean noBin = true;
         boolean multiBin = false;
@@ -4058,14 +4024,11 @@ public class Compute {
                             // Other armor-penetrating ammo types should be
                             // tested here, such as Tandem-charge SRMs
 
-                            // PLAYTEST added
                             if (((ammoBinType.getAmmoType() == AmmoTypeEnum.AC)
                                   || (ammoBinType.getAmmoType() == AmmoTypeEnum.LAC)
                                   || (ammoBinType.getAmmoType() == AmmoTypeEnum.AC_IMP)
                                   || (ammoBinType.getAmmoType() == AmmoTypeEnum.PAC))
-                                  && (ammoBinType.getMunitionType().contains(AmmoType.Munitions.M_ARMOR_PIERCING)
-                                  || ammoBinType.getMunitionType()
-                                  .contains(AmmoType.Munitions.M_ARMOR_PIERCING_PLAYTEST))) {
+                                  && (ammoBinType.getMunitionType().contains(AmmoType.Munitions.M_ARMOR_PIERCING))) {
                                 if ((target instanceof Mek) || (target instanceof Tank)) {
                                     ammoMultiple = 1.0 + (weaponType.getRackSize() / 10.0);
                                 }
@@ -4203,54 +4166,54 @@ public class Compute {
      * @return the <code>int</code> ID of weapon mode
      */
     @Deprecated
-    public static int spinUpCannon(Game cgame, WeaponAttackAction atk) {
-        return spinUpCannon(cgame, atk, Compute.d6(2) - 1);
+    public static int spinUpCannon(Game game, WeaponAttackAction attackAction) {
+        return spinUpCannon(game, attackAction, Compute.d6(2) - 1);
     }
 
     /**
      * Determine if autocannon should fire more than one round. Includes standard ACs if the game option for
      * rapid-fire-mode is enabled.
      *
-     * @param atk             Attack action with weapon attack properties
+     * @param game            The current game
+     * @param attackAction    Attack action with weapon attack properties
      * @param spinupThreshold Maximum to-hit number to consider for rapid fire
      *
-     * @return the <code>int</code> ID of weapon mode, which is also the number of mode changes from single shot
+     * @return the {@code int} ID of weapon mode, which is also the number of mode changes from single shot
      */
-
-    public static int spinUpCannon(Game cgame, WeaponAttackAction atk, int spinupThreshold) {
-
-        int to_hit;
+    public static int spinUpCannon(Game game, WeaponAttackAction attackAction, int spinupThreshold) {
         // The number of mode changes needed to set a specific rate of fire
-        int final_spin = 0;
-        Entity shooter;
-        Mounted<?> weapon;
-        WeaponType weaponType;
-        boolean isUAC = false;
-        boolean isRAC = false;
+        int finalSpin = 0;
 
         // Basic protections against null values
-        if (null == atk || null == cgame || null == atk.toHit(cgame)) {
+        if ((attackAction == null) || (game == null)) {
             LOGGER.warn("null parameter passed to Compute.spinUpCannon");
-            return final_spin;
+            return finalSpin;
         }
 
-        // Get the to-hit number for this attack
-        to_hit = atk.toHit(cgame).getValue();
-
-        // If weapon can't hit target, exit with the default mode setting
-        if (to_hit > 12) {
-            return final_spin;
+        Entity shooter = attackAction.getEntity(game);
+        if (shooter == null) {
+            LOGGER.warn("attack action with no shooter passed to Compute.spinUpCannon");
+            return finalSpin;
         }
+        Mounted<?> weapon = shooter.getEquipment(attackAction.getWeaponId());
+        if (weapon == null) {
+            LOGGER.warn("attack action with an invalid weapon id passed to Compute.spinUpCannon");
+            return finalSpin;
+        }
+        WeaponType weaponType = (WeaponType) weapon.getType();
 
-        shooter = atk.getEntity(cgame);
-        weapon = shooter.getEquipment(atk.getWeaponId());
-        weaponType = (WeaponType) shooter.getEquipment(atk.getWeaponId()).getType();
+        // Check the weapon type BEFORE computing the to-hit number: this method is called for every weapon
+        // the bot evaluates while ranking candidate move paths, and the full to-hit calculation is by far
+        // the most expensive part. Anything other than an autocannon can exit without paying for it.
 
         // If optional rapid fire autocannons are enabled, check for conventional, LAC, and
-        // PAC types
+        // PAC types. Test the weapon class first so non-AC weapons skip the option lookup entirely.
         boolean isRapidFireAC =
-              cgame.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_RAPID_AC) &&
-                    weaponType instanceof ACWeapon;
+              weaponType instanceof ACWeapon &&
+                    game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_RAPID_AC);
+
+        boolean isRAC = false;
+        boolean isUAC = false;
 
         // Anything other than a standard AC or equivalent, UAC, or RAC does not apply
         if (!isRapidFireAC) {
@@ -4258,16 +4221,29 @@ public class Compute {
             isUAC = !isRAC && (weaponType instanceof UACWeapon);
 
             if (!isRAC && !isUAC) {
-                return final_spin;
+                return finalSpin;
             }
+        }
+
+        // Get the to-hit number for this attack, computing it only once
+        ToHitData toHitData = attackAction.toHit(game);
+        if (toHitData == null) {
+            LOGGER.warn("no to-hit data for attack action passed to Compute.spinUpCannon");
+            return finalSpin;
+        }
+        int toHitValue = toHitData.getValue();
+
+        // If weapon can't hit target, exit with the default mode setting
+        if (toHitValue > 12) {
+            return finalSpin;
         }
 
         // Set the weapon to single shot mode
         weapon.setMode(isRapidFireAC ? "" : Weapon.MODE_AC_SINGLE);
 
         // If the to-hit number is under or at the provided threshold, set multiple shots
-        if (to_hit <= spinupThreshold) {
-            final_spin = 1;
+        if (toHitValue <= spinupThreshold) {
+            finalSpin = 1;
             if (isUAC) {
                 weapon.setMode(Weapon.MODE_UAC_ULTRA);
             } else if (isRAC) {
@@ -4277,43 +4253,43 @@ public class Compute {
                 // If the to-hit number is significantly lower than the provided threshold,
                 // set for either five or six shots
 
-                if (to_hit <= (spinupThreshold - 3)) {
-                    final_spin = 5;
+                if (toHitValue <= (spinupThreshold - 3)) {
+                    finalSpin = 5;
                     weapon.setMode(Weapon.MODE_RAC_SIX_SHOT);
-                    return final_spin;
+                    return finalSpin;
                 }
 
-                if (to_hit <= (spinupThreshold - 2)) {
-                    final_spin = 4;
+                if (toHitValue <= (spinupThreshold - 2)) {
+                    finalSpin = 4;
                     weapon.setMode(Weapon.MODE_RAC_FIVE_SHOT);
-                    return final_spin;
+                    return finalSpin;
                 }
 
                 // If the to-hit number is slightly lower than the provided threshold, set for
                 // four shots.  Reduce to three shots for high to-hit numbers to reduce ammo
                 // use and chance of jamming.
-                if (to_hit <= (spinupThreshold - 1)) {
-                    final_spin = to_hit >= 6 ? 2 : 3;
-                    weapon.setMode(to_hit >= 6 ? Weapon.MODE_RAC_THREE_SHOT : Weapon.MODE_RAC_FOUR_SHOT);
-                    return final_spin;
+                if (toHitValue <= (spinupThreshold - 1)) {
+                    finalSpin = toHitValue >= 6 ? 2 : 3;
+                    weapon.setMode(toHitValue >= 6 ? Weapon.MODE_RAC_THREE_SHOT : Weapon.MODE_RAC_FOUR_SHOT);
+                    return finalSpin;
                 }
 
             } else {
                 // Rapid firing standard autocannon is risky, so save it for better to-hit numbers,
                 // infantry field guns, or when the 'kinder' optional rule is set
-                if (to_hit <= (spinupThreshold - 2) ||
+                if (toHitValue <= (spinupThreshold - 2) ||
                       shooter.isConventionalInfantry() ||
-                      cgame.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_KIND_RAPID_AC)) {
+                      game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_KIND_RAPID_AC)) {
                     weapon.setMode(Weapon.MODE_AC_RAPID);
                 } else {
-                    final_spin = 0;
+                    finalSpin = 0;
                     weapon.setMode("");
                 }
             }
         }
 
         // Return the number of mode changes needed to set the rate of fire
-        return final_spin;
+        return finalSpin;
     }
 
     /**
@@ -4364,18 +4340,28 @@ public class Compute {
             return hasAnyFiringSolution(game, te.getId());
         }
         boolean teIlluminated = false;
+        boolean teEntityIlluminated = false;
+        boolean teUsingSearchlight = false;
         if (target.getTargetType() == Targetable.TYPE_ENTITY) {
             Entity te = (Entity) target;
-            teIlluminated = te.isIlluminated();
+            teEntityIlluminated = te.isIlluminated();
+            teUsingSearchlight = te.isUsingSearchlight();
+            teIlluminated = teEntityIlluminated;
             if (te.isOffBoard()) {
                 return false;
             }
         }
 
         // Target may be in an illuminated hex
+        boolean hexIlluminated = false;
         if (!teIlluminated) {
-            teIlluminated = !IlluminationLevel.determineIlluminationLevel(game, target.getBoardId(),
+            hexIlluminated = !IlluminationLevel.determineIlluminationLevel(game, target.getBoardId(),
                   target.getPosition()).isNone();
+            teIlluminated = hexIlluminated;
+        }
+        if (teIlluminated) {
+            LOGGER.debug("  illumination source for {}: entityIlluminated={} usingSearchlight={} hexIlluminated={}",
+                  target.getDisplayName(), teEntityIlluminated, teUsingSearchlight, hexIlluminated);
         }
 
         // if either does not have a position then return false
@@ -4395,7 +4381,9 @@ public class Compute {
             Entity targetedEntity = (Entity) target;
 
             // Beyond altitude 8, on ground maps, aerospace can't spot ground units
-            if (attackingEntity.isAirborneAeroOnGroundMap() && (attackingEntity.getAltitude() > 8) && !target.isAirborne()) {
+            if (attackingEntity.isAirborneAeroOnGroundMap()
+                  && (attackingEntity.getAltitude() > 8)
+                  && !target.isAirborne()) {
                 visualRange = 0;
             }
 
@@ -4406,7 +4394,7 @@ public class Compute {
                 visualRange = visualRange / 2;
             } else if (targetedEntity.isChameleonShieldActive()) {
                 visualRange = visualRange / 2;
-            } else if (targetedEntity.isConventionalInfantry() && ((Infantry) targetedEntity).hasSneakCamo()) {
+            } else if (targetedEntity instanceof ConvInfantry infantry && infantry.hasSneakCamo()) {
                 visualRange = visualRange / 2;
             }
 
@@ -4441,7 +4429,14 @@ public class Compute {
         int distance = attackingPos.distance(targetPos);
         // Need to track difference in altitude, not just add altitude to the range
         distance += Math.abs(2 * target.getAltitude() - 2 * attackingEntity.getAltitude());
-        return distance <= visualRange;
+        boolean inRange = distance <= visualRange;
+        LOGGER.debug("inVisualRange: {} -> {} | distance={} visualRange={} illuminated={} light={} inRange={}",
+              attackingEntity.getDisplayName(),
+              target.getDisplayName(),
+              distance, visualRange, teIlluminated,
+              game.getPlanetaryConditions().getLight(),
+              inRange);
+        return inRange;
 
     }
 
@@ -4453,6 +4448,7 @@ public class Compute {
      * @param game     The current {@link Game}
      * @param targetId - the ID# of the target entity we're looking for
      */
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public static boolean isAnySensorContact(Game game, int targetId) {
         Entity targetEntity = game.getEntity(targetId);
 
@@ -4768,6 +4764,7 @@ public class Compute {
         return roll >= tn;
     }
 
+    @Deprecated(since = "0.51.0", forRemoval = true)
     public static boolean calcFutureTargetFiringSolution(Game game, Entity attacker,
           Targetable target, Coords futureTargetPosition) {
         if (target.getTargetType() == Targetable.TYPE_ENTITY) {
@@ -5087,7 +5084,17 @@ public class Compute {
         if (isAirToAir(game, ae, target) && game.getBoard(ae).isGround()) {
             distance = (int) Math.ceil(distance / 16.0);
         }
-        return (distance > minSensorRange) && (distance <= maxSensorRange);
+        boolean inRange = (distance > minSensorRange) && (distance <= maxSensorRange);
+        LOGGER.debug("inSensorRange: {} -> {} | sensor={} bracket={} rangePerBracket={} "
+                    + "minRange={} maxRange={} distance={} inclusive={} inRange={}",
+              ae.getDisplayName(),
+              target.getDisplayName(),
+              (ae.getActiveSensor() != null ? ae.getActiveSensor().getDisplayName() : "none"),
+              bracket, range,
+              minSensorRange, maxSensorRange, distance,
+              game.getOptions().booleanOption(OptionsConstants.ADVANCED_INCLUSIVE_SENSOR_RANGE),
+              inRange);
+        return inRange;
     }
 
     /**
@@ -5113,11 +5120,13 @@ public class Compute {
         if (los == null) {
             los = LosEffects.calculateLOS(game, ae, target);
         }
-        boolean isVisible = los.canSee() && Compute.inVisualRange(game, los, ae, target);
-        if (useSensors) {
-            isVisible = isVisible
-                  || Compute.inSensorRange(game, los, ae, target, allECMInfo);
-        }
+        boolean hasLos = los.canSee();
+        boolean visual = hasLos && Compute.inVisualRange(game, los, ae, target);
+        boolean viaSensors = useSensors && Compute.inSensorRange(game, los, ae, target, allECMInfo);
+        boolean isVisible = visual || viaSensors;
+        LOGGER.debug("canSee: {} -> {} | useSensors={} hasLOS={} visual={} viaSensors={} result={}",
+              ae.getDisplayName(), target.getDisplayName(),
+              useSensors, hasLos, visual, viaSensors, isVisible);
         return isVisible;
     }
 
@@ -5131,12 +5140,12 @@ public class Compute {
     public static int getSensorRangeBracket(Entity ae, Targetable target, List<ECMInfo> allECMInfo) {
 
         Sensor sensor = ae.getActiveSensor();
-        if (null == sensor) {
+        if (sensor == null) {
             return 0;
         }
         // only works for entities
         Entity te = null;
-        if (null != target) {
+        if (target != null) {
             if (target.getTargetType() != Targetable.TYPE_ENTITY) {
                 return 0;
             }
@@ -5155,10 +5164,10 @@ public class Compute {
         }
 
         int check = ae.getSensorCheck();
-        if ((null != ae.getCrew()) && ae.hasAbility(OptionsConstants.UNOFFICIAL_SENSOR_GEEK)) {
+        if ((ae.getCrew() != null) && ae.hasAbility(OptionsConstants.UNOFFICIAL_SENSOR_GEEK)) {
             check -= 2;
         }
-        if (null != te) {
+        if (te != null) {
             check += sensor.getModsForStealth(te);
             // Metal Content...
             if (ae.getGame().getOptions().booleanOption(OptionsConstants.ADVANCED_METAL_CONTENT)) {
@@ -5203,7 +5212,7 @@ public class Compute {
         }
 
         Sensor sensor = ae.getActiveSensor();
-        if (null == sensor) {
+        if (sensor == null) {
             return 0;
         }
 
@@ -5286,12 +5295,12 @@ public class Compute {
      */
     @Nullable
     public static SensorRangeHelper getSensorRanges(Game game, Entity e) {
-        if (null == e.getActiveSensor()) {
+        if (e.getActiveSensor() == null) {
             return null;
         }
 
         int check = e.getSensorCheck();
-        if ((null != e.getCrew()) && e.hasAbility(OptionsConstants.UNOFFICIAL_SENSOR_GEEK)) {
+        if ((e.getCrew() != null) && e.hasAbility(OptionsConstants.UNOFFICIAL_SENSOR_GEEK)) {
             check -= 2;
         }
 
@@ -5351,8 +5360,8 @@ public class Compute {
      *       units is not an aerospace unit, does not have a valid position, or the two units are not in the same hex.
      */
     public static int shouldMoveBackHex(Entity e1, Entity e2) {
-        if (null == e1.getPosition()
-              || null == e2.getPosition()
+        if (e1.getPosition() == null
+            || e2.getPosition() == null
               || e1.getBoardId() != e2.getBoardId()
               || !e1.getPosition().equals(e2.getPosition())
               || !e1.isAero()
@@ -5404,6 +5413,12 @@ public class Compute {
      * @param advancedAMS - the roll can now go below 2, indicating no damage
      */
     public static int missilesHit(int missiles, int nMod, boolean hotLoaded, boolean streak, boolean advancedAMS) {
+        // No missiles fired means no hits. This also guards against a battle armor squad whose
+        // shooting strength has been reduced to zero (e.g. all troopers disabled by Improved
+        // Magnetic Pulse missiles), which otherwise falls through to the hit-table lookup below.
+        if (missiles <= 0) {
+            return 0;
+        }
         int nRoll = Compute.d6(2);
 
         if (hotLoaded) {
@@ -5430,7 +5445,7 @@ public class Compute {
         }
         nRoll += nMod;
         if (!advancedAMS) {
-            nRoll = min(max(nRoll, 2), 12);
+            nRoll = Math.clamp(nRoll, 2, 12);
         } else {
             nRoll = min(nRoll, 12);
         }
@@ -5466,25 +5481,6 @@ public class Compute {
         }
 
         return 0;
-    }
-
-    /**
-     * Returns the consciousness roll number
-     *
-     * @param hit - the <code>int</code> number of the crew hit currently being rolled.
-     *
-     * @return The <code>int</code> number that must be rolled on 2d6 for the crew to stay conscious.
-     */
-    public static int getConsciousnessNumber(int hit) {
-        return switch (hit) {
-            case 0 -> 2;
-            case 1 -> 3;
-            case 2 -> 5;
-            case 3 -> 7;
-            case 4 -> 10;
-            case 5 -> 11;
-            default -> Integer.MAX_VALUE;
-        };
     }
 
     /**
@@ -5719,7 +5715,7 @@ public class Compute {
             }
             attackCoords = c;
         }
-        if (null == attackCoords) {
+        if (attackCoords == null) {
             attackCoords = attacker.getPosition();
         }
 
@@ -5788,9 +5784,9 @@ public class Compute {
             return data;
         }
 
-        if (attacker instanceof BattleArmor) {
+        if (attacker instanceof BattleArmor battleArmor) {
             // Battle Armor units can't do an AM Attack if they're burdened.
-            if (((BattleArmor) attacker).isBurdened()) {
+            if (battleArmor.isBurdened()) {
                 data.addModifier(TargetRoll.IMPOSSIBLE,
                       "Launcher not jettisoned.");
                 return data;
@@ -5813,7 +5809,7 @@ public class Compute {
             }
         } else {
             // Infantry can't have encumbering armor
-            if (attacker.isArmorEncumbering()) {
+            if (((ConvInfantry) attacker).isArmorEncumbering()) {
                 data.addModifier(TargetRoll.IMPOSSIBLE,
                       "can't engage in anti-mek attacks with encumbering armor.");
                 return data;
@@ -5858,23 +5854,35 @@ public class Compute {
         // Prosthetic enhancement anti-Mek bonus (Grappler or Climbing Claws) - IO p.84
         // Uses the best (most negative) modifier from either enhancement slot
         // Only applies if the unit has the MD_PL_ENHANCED or MD_PL_I_ENHANCED ability
-        if (attacker.hasProstheticEnhancement()
+        if (attacker instanceof ConvInfantry attackingInfantry && attackingInfantry.hasProstheticEnhancement()
               && (attacker.hasAbility(OptionsConstants.MD_PL_ENHANCED)
               || attacker.hasAbility(OptionsConstants.MD_PL_I_ENHANCED))) {
-            int antiMekMod = attacker.getBestProstheticAntiMekModifier();
+            int antiMekMod = attackingInfantry.getBestProstheticAntiMekModifier();
             if (antiMekMod != 0) {
-                String modName = attacker.getBestProstheticAntiMekName();
+                String modName = attackingInfantry.getBestProstheticAntiMekName();
                 data.addModifier(antiMekMod,
                       modName != null ? modName : Messages.getString("Compute.ProstheticEnhancement"));
             }
         }
 
+        // Mountain Troops anti-Mek bonus - TO:AUE p.153 "Mountain troops apply a -2 modifier to any Anti-Mek Skill
+        // Rolls"
+        if (attacker instanceof ConvInfantry attackingInfantry
+              && attackingInfantry.hasSpecialization(ConvInfantry.MOUNTAIN_TROOPS)) {
+            data.addModifier(-2, Messages.getString("Compute.MountainTroops"));
+        }
+
         // Enhanced Imaging bonus for anti-Mek attacks - IO p.69
-        // "All Piloting Skill rolls required for the EI-equipped unit receives a -1
+        // "All physical attack rolls required for the EI-equipped unit receives a -1
         // target number modifier. This includes checks made for physical attacks,
         // as well as anti-Mek attacks by EI-equipped battle armor."
         if (attacker.hasActiveEiCockpit()) {
             data.addModifier(-1, Messages.getString("Compute.EnhancedImaging"));
+        }
+
+        // Hitting the Deck imposes a +1 modifier on the unit's Anti-Mek Skill Rolls - TO:AR p.106
+        if (attacker.isHitTheDeck()) {
+            data.addModifier(+1, Messages.getString("Compute.HitTheDeck"));
         }
 
         // swarm/leg attacks take target movement mods into account
@@ -5921,9 +5929,13 @@ public class Compute {
         } else if (attacker.getElevation() > defender.getElevation()) {
             // Can't attack if flying
             reason = "Cannot do leg attack while flying.";
+        } else if (attacker.getMovementMode().isUMUInfantry()
+              && (game.getHexOf(defender) instanceof megamek.common.Hex defenderHex)
+              && !defenderHex.hasDepth1WaterOrDeeper()) {
+            // UMU equipped infantry can only make leg attacks if the target is in depth 1+ water
+            reason = "Cannot make leg attacks unless the target is in depth 1 or deeper water.";
         } else if (attacker instanceof BattleArmor inf) {
             // Handle BattleArmor attackers.
-
             toReturn = new ToHitData(inf.getCrew().getPiloting(),
                   "anti-mek skill",
                   ToHitData.HIT_KICK,
@@ -6025,6 +6037,10 @@ public class Compute {
         // target is already swarmed
         else if (defender.getSwarmAttackerId() != Entity.NONE) {
             reason = "Only one swarm allowed at a time.";
+        }
+        // UMU Infantry cannot make swarm attacks
+        else if (attacker.getMovementMode().isUMUInfantry()) {
+            reason = "UMU equipped infantry cannot make swarm attacks.";
         }
         // Handle BattleArmor attackers.
         else if (attacker instanceof BattleArmor inf) {
@@ -6152,7 +6168,7 @@ public class Compute {
         Entity entityWithClubs = game.getEntity(entityId);
         if (entityWithClubs != null) {
             for (Mounted<?> club : entityWithClubs.getClubs()) {
-                if (null != club) {
+                if (club != null) {
                     if (ClubAttackAction.toHit(game, entityId, target, club,
                           ToHitData.HIT_NORMAL, false).getValue() != TargetRoll.IMPOSSIBLE) {
                         return true;
@@ -6309,6 +6325,11 @@ public class Compute {
      *       the roof or in the air above the building, or if any input argument is <code>null</code>
      */
     public static boolean isInBuilding(@Nullable Game game, @Nullable Entity entity, @Nullable Coords coords) {
+        // A building entity occupies its hexes but is never "inside" a building; treating it as an occupant makes
+        // weapon fire absorb against it twice (once as the building, once as a unit in the building)
+        if (entity instanceof AbstractBuildingEntity) {
+            return false;
+        }
         return (game != null) && (entity != null) && (coords != null)
               && isInBuilding(game, entity.getElevation(), coords, entity.getBoardId());
     }
@@ -6331,7 +6352,7 @@ public class Compute {
         }
         final Hex hex = game.getBoard(boardId).getHex(coords);
 
-        if (!hex.containsTerrain(Terrains.BLDG_ELEV)) {
+        if (!hex.containsTerrain(Terrains.BLDG_ELEV) || hex == null) {
             return false;
         }
 
@@ -6369,16 +6390,7 @@ public class Compute {
      * @return the <code>Coords</code> scattered to and distance (moF)
      */
     public static Coords scatterAltitudeBombs(Coords coords, int facing, int moF) {
-        int dir = 0;
-        int scatterDirection = Compute.d6(1);
-        dir = switch (scatterDirection) {
-            case 1, 2 -> (facing - 1) % 6;
-            case 3, 4 -> facing;
-            case 5, 6 -> (facing + 1) % 6;
-            default -> dir;
-        };
-
-        return coords.translated(dir, moF);
+        return Scatter.frontArc(coords, facing, moF).landing();
     }
 
     /**
@@ -6394,16 +6406,17 @@ public class Compute {
     }
 
     /**
-     * scatter from a hex according, roll d6 to choose scatter direction
+     * Scatters from a hex in a random direction, rolling 1d6 to pick one of the six straight-line directions.
      *
-     * @param coords The <code>Coords</code> to scatter from
-     * @param margin the <code>int</code> margin of failure, scatter distance will be the margin of failure
+     * @param coords the <code>Coords</code> to scatter from
+     * @param margin the scatter distance in hexes; its magnitude is used, so a negative value (such as a negative
+     *               margin of failure) scatters the same distance as its positive counterpart. Callers may also pass a
+     *               fixed distance unrelated to a margin of failure.
      *
      * @return the <code>Coords</code> scattered to
      */
     public static Coords scatter(Coords coords, int margin) {
-        int scatterDirection = Compute.d6(1) - 1;
-        return coords.translated(scatterDirection, margin);
+        return Scatter.omnidirectional(coords, margin).landing();
     }
 
     /**
@@ -6457,7 +6470,9 @@ public class Compute {
                 continue;
             }
             entities = game.getEntities(tempcoords);
-            if (entities.hasNext()) {
+            // Every unit in the hex, not just the first. TO:AUE p.183 makes every unit at the same distance a
+            // candidate, chosen at random among them, so stopping at the first one silently narrowed the field.
+            while (entities.hasNext()) {
                 tempEntity = entities.next();
                 if (!tempEntity.getTargetedBySwarm(aeId, weaponId)) {
                     // we found a target
@@ -6472,6 +6487,7 @@ public class Compute {
         }
         return null;
     }
+
 
     public static @Nullable Coords getFinalPosition(Coords currentPosition, int... v) {
         if ((v == null) || (v.length != 6) || (currentPosition == null)) {
@@ -6622,12 +6638,12 @@ public class Compute {
             case WeaponType.WEAPON_DIRECT_FIRE -> Messages.getString("WeaponType.DirectFire");
             case WeaponType.WEAPON_CLUSTER_BALLISTIC -> Messages.getString("WeaponType.BallisticCluster");
             case WeaponType.WEAPON_PULSE -> Messages.getString("WeaponType.Pulse");
-            case WeaponType.WEAPON_CLUSTER_MISSILE,
-                 WeaponType.WEAPON_CLUSTER_MISSILE_1D6,
-                 WeaponType.WEAPON_CLUSTER_MISSILE_2D6,
-                 WeaponType.WEAPON_CLUSTER_MISSILE_3D6 -> Messages.getString("WeaponType.Missile");
+            case WeaponType.WEAPON_CLUSTER_MISSILE -> Messages.getString("WeaponType.Missile");
+            case WeaponType.WEAPON_CLUSTER_MISSILE_1D6 -> Messages.getString("WeaponType.Missile") + " (+ 1d6)";
+            case WeaponType.WEAPON_CLUSTER_MISSILE_2D6 -> Messages.getString("WeaponType.Missile") + " (+ 2d6)";
+            case WeaponType.WEAPON_CLUSTER_MISSILE_3D6 -> Messages.getString("WeaponType.Missile") + " (+ 3d6)";
             case WeaponType.WEAPON_BURST_HALF_D6 -> Messages.getString("WeaponType.BurstHalf");
-            default -> String.format("%s (%dD6)", Messages.getString("WeaponType.Burst"),
+            default -> String.format("%s (%dd6)", Messages.getString("WeaponType.Burst"),
                   burstMultiplier * (damageType - WeaponType.WEAPON_BURST_HALF_D6));
         };
     }
@@ -6664,7 +6680,7 @@ public class Compute {
      */
     public static int computeTotalDamage(WeaponMounted weapon) {
         int totalDmg = 0;
-        if (weapon.isBombMounted() || !weapon.isCrippled()) {
+        if (!weapon.isCrippled()) {
             WeaponType type = weapon.getType();
             if (type.getDamage() == WeaponType.DAMAGE_VARIABLE) {
                 // Estimate rather than compute exact bay / trooper damage sum.
@@ -6690,13 +6706,14 @@ public class Compute {
 
     /**
      * Method replicates the Non-Conventional Damage against Infantry damage table as well as shifting for direct blows.
-     * also adjust for non-infantry damaging mechanized infantry
+     * also adjust for non-infantry damaging mechanized infantry. No mods for Plasma weapons.
      *
      * @param damage                         The base amount of damage
      * @param mos                            The margin of success
      * @param damageType                     The damage class of the weapon, used to adjust damage against infantry
      * @param isNonInfantryAgainstMechanized Whether this is a non-infantry attack against mechanized infantry
-     * @param isAttackThruBuilding           Whether the attack is coming through a building hex
+     * @param isAttackThruBuilding           Whether the attack involves attacker and target both within the same
+     *                                       building
      * @param attackerId                     The entity id of the attacking unit
      * @param vReport                        The report messages vector
      * @param mgaSize                        For machine gun array attacks, the number of linked weapons. For other
@@ -6709,86 +6726,173 @@ public class Compute {
           boolean isAttackThruBuilding, int attackerId, Vector<Report> vReport,
           int mgaSize) {
 
-        int origDamageType = damageType;
-        damageType += mos;
-        double origDamage = damage;
+        // An attack the atmosphere has pushed onto the Area-Effect row kills Damage Value / .5 troopers, the same
+        // doubling MegaMek applies to a real area-effect attack (TW p.217, TO:AR p.54).
+        if (damageType == WeaponType.WEAPON_AREA_EFFECT_INFANTRY) {
+            int areaEffectDamage = (int) Math.ceil(damage * 2);
+            if (vReport != null) {
+                Report areaEffectReport = new Report(7724);
+                areaEffectReport.subject = attackerId;
+                areaEffectReport.indent(2);
+                areaEffectReport.add(areaEffectDamage);
+                vReport.add(areaEffectReport);
+            }
+            return areaEffectDamage;
+        }
+
+        // An attack the atmosphere has turned into infantry-on-infantry damage skips the table completely: its
+        // damage is applied point for point (TW p.216, TO:AR p.54).
+        if (damageType == WeaponType.WEAPON_INFANTRY_ORIGIN) {
+            int appliedDamage = (int) Math.ceil(damage);
+            if (vReport != null) {
+                Report infantryOriginReport = new Report(7719);
+                infantryOriginReport.subject = attackerId;
+                infantryOriginReport.indent(2);
+                infantryOriginReport.add(appliedDamage);
+                vReport.add(infantryOriginReport);
+            }
+            return appliedDamage;
+        }
+
+        // Report initial (original) damage
+        Report r = new Report();
+        r.subject = attackerId;
+        r.indent(2);
+        r.add((int) damage); // field 1
+        r.add(getDamageTypeString(damageType, mgaSize)); // field 2
+        r.messageId = 9970;
+        String mod = "1:1";
+
+        // Update for MOS. The Non-Conventional Damage against Infantry table ends at 7D6, so a large margin of
+        // success cannot shift the damage past its last row. Without the clamp the shifted class matches no case
+        // below and the weapon falls back to its base damage, which is far less than the burst it should roll.
+        damageType = Math.clamp(damageType + mos, WeaponType.WEAPON_DIRECT_FIRE, WeaponType.WEAPON_BURST_7D6);
+        double priorDamage = damage;
+
         switch (damageType) {
             case WeaponType.WEAPON_DIRECT_FIRE:
                 damage /= 10;
+                mod = "1/10";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_BALLISTIC:
                 damage /= 10;
                 damage++;
+                mod = "1/10 + 1";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_PULSE:
                 damage /= 10;
                 damage += 2;
+                mod = "1/10 + 2";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE:
                 damage /= 5;
+                mod = "1/5";
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE_1D6:
                 damage /= 5;
+                mod = "1/5 + 1d6";
                 damage += Compute.d6();
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE_2D6:
                 damage /= 5;
+                mod = "1/5 + 2d6";
                 damage += Compute.d6(2);
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_CLUSTER_MISSILE_3D6:
                 damage /= 5;
+                mod = "1/5 + 3d6";
                 damage += Compute.d6(3);
+                priorDamage = damage;
                 break;
             case WeaponType.WEAPON_BURST_HALF_D6:
                 damage = Compute.d6() / 2.0;
+                priorDamage = damage;
+                mod = "-> 1d6 / 2";
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_1D6:
                 damage = Compute.d6(mgaSize);
+                priorDamage = damage;
+                mod = "1d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_2D6:
                 damage = Compute.d6(2 * mgaSize);
+                priorDamage = damage;
+                mod = "2d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_3D6:
                 damage = Compute.d6(3 * mgaSize);
+                priorDamage = damage;
+                mod = "3d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_4D6:
                 damage = Compute.d6(4 * mgaSize);
+                priorDamage = damage;
+                mod = "4d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_5D6:
                 damage = Compute.d6(5 * mgaSize);
+                priorDamage = damage;
+                mod = "5d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_6D6:
                 damage = Compute.d6(6 * mgaSize);
+                priorDamage = damage;
+                mod = "6d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
             case WeaponType.WEAPON_BURST_7D6:
                 damage = Compute.d6(7 * mgaSize);
+                priorDamage = damage;
+                mod = "7d6 X " + mgaSize;
                 if (isAttackThruBuilding) {
                     damage *= 0.5;
                 }
                 break;
         }
         damage = Math.ceil(damage);
+        priorDamage = Math.ceil(priorDamage);
+
+        if (mos != 0) {
+            // List MOS change to damage
+            r.extend(9971);
+            r.add(getDamageTypeString(damageType, mgaSize)); // new field in 9971
+        }
+
+        r.extend(9972);
+        r.add((int) priorDamage);
+        r.add(mod);
+
+        if (isAttackThruBuilding && (priorDamage != damage)) {
+            // Fire inside a building halves burst-fire damage to infantry (TW p. 175); its own line in the report
+            r.extend(9977);
+            r.add((int) damage);
+        }
 
         // according to the following ruling, the half damage that mechanized
         // inf get against burst fire should trump the double damage they get
@@ -6800,31 +6904,16 @@ public class Compute {
             } else {
                 damage /= 2;
             }
+            r.extend(9972);
+            // Per TW 7th Ed. pg 217 (and our wonky implementation) this damage is *not* rounded up.
+            r.add((int) damage);
+            r.add(ReportMessages.getString(String.valueOf(9974)));
         }
 
         if (vReport != null) {
-            Report r = new Report();
-            r.subject = attackerId;
-            r.indent(2);
-
-            r.add(getDamageTypeString(origDamageType, mgaSize));
-            if (origDamageType != damageType) {
-                if (isAttackThruBuilding) {
-                    r.messageId = 9973;
-                } else {
-                    r.messageId = 9972;
-                }
-                r.add(getDamageTypeString(damageType, mgaSize));
-            } else if (isAttackThruBuilding) {
-                r.messageId = 9971;
-            } else {
-                r.messageId = 9970;
-            }
-
-            r.add((int) origDamage);
-            r.add((int) damage);
             vReport.addElement(r);
         }
+
         return (int) damage;
     }
 
@@ -6889,6 +6978,11 @@ public class Compute {
         int damage = weaponType.getDamage(range);
         int newDamage = Compute.dialDownDamage(weapon, weaponType, range);
 
+        if (weaponType.hasFlag(WeaponType.F_HEAT_VARIABLE)) {
+            if (weaponType.hasFlag(WeaponType.F_BOMBAST_LASER)) {
+                return BombastLaserWeaponHandler.getHeat(weapon);
+            }
+        }
         toReturn = max(1,
               weaponType.getHeat() - max(0, damage - newDamage));
         return toReturn;
@@ -7064,7 +7158,7 @@ public class Compute {
               ((unitToUnload.getAnyTypeMaxJumpMP() > 0) && !unitToUnload.isImmobileForJump()) ||
               (unitToUnload.isInfantry() && ((Infantry) unitToUnload).canExitVTOLWithGliderWings());
         return (hex != null) && !unitToUnload.isLocationProhibited(position, boardId, unitToUnload.getElevation())
-              && (null == stackingViolation(game, unitToUnload.getId(), position, unitToUnload.climbMode()))
+               && (stackingViolation(game, unitToUnload.getId(), position, unitToUnload.climbMode()) == null)
               && ((Math.abs(hex.getLevel() - elev) < 3) || canIgnoreElevation);
     }
 
@@ -7087,10 +7181,13 @@ public class Compute {
         }
 
         List<Entity> mountable = new ArrayList<>();
+        // Non-infantry mount from within two levels of the transport (TW p.90). Infantry mount as though the carrier
+        // were a Large Support Vehicle, which needs the same level (TW p.89 and p.224).
+        int maximumLevelDifference = entity.isInfantry() ? 0 : 2;
         // the rules don't say that the unit must be facing loader, so lets take the ring
         for (Coords c : pos.allAdjacent()) {
             Hex hex = game.getBoard(boardId).getHex(c);
-            if (null == hex) {
+            if (hex == null) {
                 continue;
             }
             for (Entity other : game.getEntitiesVector(c, boardId)) {
@@ -7101,7 +7198,7 @@ public class Compute {
                       || other.getTowedBy() != Entity.NONE)
                       && other.canLoad(entity)
                       && !other.isAirborne()
-                      && (Math.abs((hex.getLevel() + other.getElevation()) - elev) < 3)
+                      && (Math.abs((hex.getLevel() + other.getElevation()) - elev) <= maximumLevelDifference)
                       && !mountable.contains(other)) {
                     mountable.add(other);
                 }
@@ -7137,9 +7234,37 @@ public class Compute {
                 }
 
                 switch (ammoType.getAmmoType()) {
-                    case SRM_STREAK, LRM_STREAK, LRM, LRM_IMP, LRM_TORPEDO, SRM, SRM_IMP, SRM_TORPEDO, MRM, NARC,
-                         INARC, AMS, ARROW_IV, LONG_TOM, SNIPER, THUMPER, SRM_ADVANCED, LRM_TORPEDO_COMBO, ATM, IATM,
-                         MML, EXLRM, NLRM, TBOLT_5, TBOLT_10, TBOLT_15, TBOLT_20, HAG, ROCKET_LAUNCHER -> {
+                    case SRM_STREAK,
+                         LRM_STREAK,
+                         LRM,
+                         LRM_IMP,
+                         LRM_TORPEDO,
+                         SRM,
+                         SRM_IMP,
+                         SRM_TORPEDO,
+                         MRM,
+                         NARC,
+                         INARC,
+                         AMS,
+                         ARROW_IV,
+                         LONG_TOM,
+                         SNIPER,
+                         THUMPER,
+                         SRM_ADVANCED,
+                         LRM_TORPEDO_COMBO,
+                         ATM,
+                         IATM,
+                         MML,
+                         EXLRM,
+                         NLRM,
+                         NLRM_TORPEDO,
+                         TBOLT_5,
+                         TBOLT_10,
+                         TBOLT_15,
+                         TBOLT_20,
+                         HAG,
+                         MEK_MORTAR,
+                         ROCKET_LAUNCHER -> {
                         return false;
                     }
                     default -> {
@@ -7193,49 +7318,6 @@ public class Compute {
                 break;
         }
         return true;
-    }
-
-    // Taken from MekHQ, assumptions are whatever Taharqa made for there - Dylan
-    public static int getTotalGunnerNeeds(Entity entity) {
-        if (entity.hasDroneOs()) {
-            return 0;
-        }
-
-        if (entity instanceof SmallCraft || entity instanceof Jumpship) {
-            int nStandardW = 0;
-            int nCapitalW = 0;
-            for (Mounted<?> m : entity.getTotalWeaponList()) {
-                EquipmentType type = m.getType();
-                if (type instanceof BayWeapon) {
-                    continue;
-                }
-                if (type instanceof WeaponType) {
-                    if ((((WeaponType) m.getType()).getLongRange() <= 1)
-                          // MML range depends on ammo, and getLongRange() returns 0
-                          && (((WeaponType) m.getType()).getAmmoType() != AmmoTypeEnum.MML)) {
-                        continue;
-                    }
-                    if (((WeaponType) type).isCapital()) {
-                        nCapitalW++;
-                    } else {
-                        nStandardW++;
-                    }
-                }
-            }
-            return nCapitalW + (int) Math.ceil(nStandardW / 6.0);
-        } else if (entity.isSupportVehicle()) {
-            return getSupportVehicleGunnerNeeds(entity);
-        } else if (entity instanceof Tank) {
-            return (getFullCrewSize(entity)
-                  - getTotalDriverNeeds(entity)
-                  - getAdditionalNonGunner(entity));
-        } else if (entity instanceof Infantry) {
-            return getFullCrewSize(entity);
-        } else if (entity.getCrew().getCrewType().getGunnerPos() > 0) {
-            // Tripod, QuadVee, or dual cockpit
-            return 1;
-        }
-        return 0;
     }
 
     // Taken from MekHQ, assumptions are whatever Taharqa made for there - Dylan
@@ -7302,17 +7384,72 @@ public class Compute {
     }
 
     /**
+     * Returns the number of required gunners for an entity.
+     *
+     * @param entity The entity
+     *
+     * @return The number of required gunners
+     */
+    public static int getTotalGunnerNeeds(Entity entity) {
+        if (entity.hasDroneOs()) {
+            return 0;
+        }
+
+        if (entity instanceof SmallCraft || entity instanceof Jumpship) {
+            return getSmallCraftJumpshipGunnerNeeds(entity);
+        } else if (entity.isSupportVehicle()) {
+            return getSupportVehicleGunnerNeeds(entity);
+        } else if (entity instanceof Tank) {
+            return (getFullCrewSize(entity)
+                  - getTotalDriverNeeds(entity)
+                  - getAdditionalNonGunner(entity));
+        } else if (entity instanceof Infantry) {
+            return getFullCrewSize(entity);
+        } else if (entity.getCrew().getCrewType().getGunnerPos() > 0) {
+            // Tripod, QuadVee, or dual cockpit
+            return 1;
+        }
+        return 0;
+    }
+
+    /**
+     * Returns the number of required gunners for a small craft/jumpship. One gunner is required for each capital weapon
+     * and each six standard scale weapons, rounding up. Each Mass Driver requires 10 gunners (TO: AU&amp;E 6th ed, p
+     * 134). Each Screen Launcher requires 1 gunner (TM 6th ed, p 237).
+     *
+     * @param entity The small craft/jumpship
+     *
+     * @return The number of required gunners
+     */
+    private static int getSmallCraftJumpshipGunnerNeeds(Entity entity) {
+        int standardWeapons = 0;
+        int capitalWeapons = 0;
+        for (Mounted<?> m : entity.getTotalWeaponList()) {
+            if ((m.getType() instanceof BayWeapon) ||
+                  ((((WeaponType) m.getType()).getLongRange() <= 1) &&
+                        // MML range depends on ammo
+                        (((WeaponType) m.getType()).getAmmoType() != AmmoTypeEnum.MML))) {
+                continue;
+            }
+            if (m.getType().hasFlag(WeaponType.F_MASS_DRIVER)) {
+                capitalWeapons += 10;
+            } else if (((WeaponType) m.getType()).isCapital() || (m.getType() instanceof ScreenLauncherWeapon)) {
+                capitalWeapons++;
+            } else {
+                standardWeapons++;
+            }
+        }
+        return capitalWeapons + (int) Math.ceil(standardWeapons / 6.0);
+    }
+
+    /**
      * Calculates number of gunners required for a support vehicle. See TM, 131.
      *
      * @param entity The support vehicle
      *
      * @return The number of gunners required.
      */
-    public static int getSupportVehicleGunnerNeeds(Entity entity) {
-        if (entity.hasDroneOs()) {
-            return 0;
-        }
-
+    private static int getSupportVehicleGunnerNeeds(Entity entity) {
         final boolean advFireCon = entity.hasMisc(MiscType.F_ADVANCED_FIRE_CONTROL);
         final boolean basicFireCon = !advFireCon && entity.hasMisc(MiscType.F_BASIC_FIRE_CONTROL);
         if (entity.getWeightClass() == EntityWeightClass.WEIGHT_SMALL_SUPPORT) {
@@ -7496,7 +7633,7 @@ public class Compute {
             return 0;
         }
         if (entity.isSupportVehicle()) {
-            int crew = getSVBaseCrewNeeds(entity) + getSupportVehicleGunnerNeeds(entity)
+            int crew = getSVBaseCrewNeeds(entity) + getTotalGunnerNeeds(entity)
                   + getAdditionalNonGunner(entity);
             if (crew < 4) {
                 return crew;
@@ -7532,6 +7669,9 @@ public class Compute {
             return getAeroCrewNeeds(entity) + getTotalGunnerNeeds(entity) + getAdditionalNonGunner(entity);
         } else if (entity.isSuperHeavy() || entity.isTripodMek()) {
             return getTotalDriverNeeds(entity) + getTotalGunnerNeeds(entity) + getAdditionalNonGunner(entity);
+        } else if (entity instanceof AbstractBuildingEntity building) {
+            // The crew from the unit file or the Advanced Building Minimum Crew Table, plus any bay personnel
+            return building.getNCrew() + building.getBayPersonnel();
         } else {
             return 1;
         }
@@ -7566,7 +7706,10 @@ public class Compute {
         if (entity.getCrew().getCrewType() == CrewType.COMMAND_CONSOLE) {
             return 2;
         }
-        if (entity instanceof Mek || entity instanceof Tank || entity instanceof Aero || entity instanceof ProtoMek) {
+
+        boolean tankWithDriver =
+              entity instanceof Tank tank && !(tank.isTrailer() && (entity.getOriginalWalkMP() <= 0));
+        if (entity instanceof Mek || tankWithDriver || entity instanceof Aero || entity instanceof ProtoMek) {
             // only one driver please
             return 1;
         } else if (entity instanceof Infantry) {
@@ -7731,10 +7874,15 @@ public class Compute {
                     // Infantry attacker needs long-range weapons that can hit an aircraft
                     return false;
                 } else {
-                    boolean hasFieldGuns = ((Infantry) attacker).hasActiveFieldWeapon();
+                    boolean hasFieldGuns =
+                          attacker instanceof ConvInfantry infantry && infantry.hasActiveFieldWeapon();
+                    // A spent Disposable Weapon (TO:AuE p.116, Corrected Sixth Printing) no longer grants anti-air
+                    // capability; the AA ability of a disposable Mk. 1 Light AA only applies when it makes its single
+                    // attack (per ruling).
                     boolean hasInfantryAA = attacker.getEquipment().stream().anyMatch(
-                          eq -> eq instanceof WeaponMounted
-                                && ((WeaponMounted) eq).getType().hasFlag(WeaponType.F_INF_AA)
+                          eq -> (eq instanceof WeaponMounted weaponMounted)
+                                && weaponMounted.getType().hasFlag(WeaponType.F_INF_AA)
+                                && !weaponMounted.isFired()
                     );
                     // Either allows infantry PBS on Aerospace.
                     return (hasFieldGuns || hasInfantryAA);
@@ -7743,6 +7891,32 @@ public class Compute {
         }
 
         return true;
+    }
+
+    /**
+     * Whether a moving enemy reveals a hidden unit in a way that lets it take a point-blank shot (TW p.260).
+     *
+     * <p>A hidden unit revealed by enemy movement may immediately make the shot, and the rule allows the target to
+     * "continue its move after the attack" when it has MP left. That is only possible part way through a move, so a
+     * ground unit reveals as it passes rather than only when it stops. Requiring the mover to stop meant walking
+     * past a hidden unit did nothing at all.</p>
+     *
+     * <p>An airborne mover is different: it reveals what it flies over, so the range depends on whether it carries
+     * an Active Probe.</p>
+     *
+     * @param mover    the unit that is moving
+     * @param distance hexes between the mover's current step and the hidden unit
+     *
+     * @return {@code true} if the hidden unit is revealed and may take its shot
+     */
+    public static boolean revealsHiddenUnitForPointblankShot(Entity mover, int distance) {
+        if (distance > 1) {
+            return false;
+        }
+        if (!mover.isAirborne()) {
+            return true;
+        }
+        return distance == ((mover.getBAPRange() > 0) ? 1 : 0);
     }
 
     /**
@@ -7822,7 +7996,7 @@ public class Compute {
         // Get radius, base damage
         DamageFalloff falloff = AreaEffectHelper.calculateDamageFallOff(
               ammoType,
-              attacker.isBattleArmor() ? ((BattleArmor) attacker).getTroopers() : 0,
+              attacker.isBattleArmor() ? ((BattleArmor) attacker).getSquadSize() : 0,
               false
         );
 
@@ -7890,7 +8064,9 @@ public class Compute {
 
     /**
      * Fast log2 implementation; throws if number &le; 0
-     * @param number        positive int to get the log2 of
+     *
+     * @param number positive int to get the log2 of
+     *
      * @return int          approximate log2 of number; functionally (Math.floor(log10(10)/log10(2))
      */
     public static int log2(int number) throws IllegalArgumentException {
@@ -7901,12 +8077,14 @@ public class Compute {
     }
 
     /**
-     * Helper to get the coordinates from which a unit can load other units.  Not in Entity to avoid bloat.
-     * May need extension for different map types but unlikely.
-     * @param carrier   Entity that will be doing the loading
-     * @param position  Coords of hex to use as the center of the carrier; may not match carrier's current position
-     *                  value.
-     * @param boardId   For future use, e.g. low-altitude or multi-board maps
+     * Helper to get the coordinates from which a unit can load other units.  Not in Entity to avoid bloat. May need
+     * extension for different map types but unlikely.
+     *
+     * @param carrier  Entity that will be doing the loading
+     * @param position Coords of hex to use as the center of the carrier; may not match carrier's current position
+     *                 value.
+     * @param boardId  For future use, e.g. low-altitude or multi-board maps
+     *
      * @return ArrayList of Coords that the carrier entity can legally load units from
      */
     public static ArrayList<Coords> getLoadableCoords(Entity carrier, Coords position, int boardId) {
@@ -7920,12 +8098,15 @@ public class Compute {
         if (carrier.isDropShip() && carrier.isAeroLandedOnGroundMap()) {
             list.addAll(position.allAtDistance(2));
         } else if (
-              // SmallCraft, Large Support Vehicles, flying DropShips, and presumably spaceborne WarShips load from
-              // directly adjacent hexes
-              carrier instanceof SmallCraft ||
-              (carrier.isSupportVehicle() && (carrier.getWeightClass() == EntityWeightClass.WEIGHT_LARGE_SUPPORT)) ||
-              (carrier.isDropShip() && carrier.isAirborne()) ||
-              (carrier.isWarShip())
+            // SmallCraft, Large Support Vehicles, flying DropShips, and presumably spaceborne WarShips load from
+            // directly adjacent hexes
+              carrier instanceof SmallCraft
+                    ||
+                    (carrier.isSupportVehicle() && (carrier.getWeightClass() == EntityWeightClass.WEIGHT_LARGE_SUPPORT))
+                    ||
+                    (carrier.isDropShip() && carrier.isAirborne())
+                    ||
+                    (carrier.isWarShip())
         ) {
             list.addAll(position.allAtDistance(1));
         } else {
