@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2004-2005 - Ben Mazur (bmazur@sev.org)
- * Copyright (C) 2007-2025 The MegaMek Team. All Rights Reserved.
+ * Copyright (C) 2007-2026 The MegaMek Team. All Rights Reserved.
  *
  * This file is part of MegaMek.
  *
@@ -58,6 +58,7 @@ import megamek.common.ToHitData;
 import megamek.common.actions.ArtilleryAttackAction;
 import megamek.common.actions.TeleMissileAttackAction;
 import megamek.common.actions.WeaponAttackAction;
+import megamek.common.actions.compute.ComputeTerrainMods;
 import megamek.common.battleArmor.BattleArmor;
 import megamek.common.board.Board;
 import megamek.common.board.Coords;
@@ -66,6 +67,7 @@ import megamek.common.compute.ComputeArc;
 import megamek.common.compute.ComputeSideTable;
 import megamek.common.enums.AimingMode;
 import megamek.common.enums.GamePhase;
+import megamek.common.enums.HitDamageType;
 import megamek.common.equipment.AmmoMounted;
 import megamek.common.equipment.AmmoType;
 import megamek.common.equipment.EquipmentType;
@@ -75,7 +77,9 @@ import megamek.common.equipment.WeaponType;
 import megamek.common.game.Game;
 import megamek.common.loaders.EntityLoadingException;
 import megamek.common.options.OptionsConstants;
+import megamek.common.planetaryConditions.AtmosphericTaint;
 import megamek.common.planetaryConditions.PlanetaryConditions;
+import megamek.common.planetaryConditions.TaintedAtmosphereRules;
 import megamek.common.rolls.Roll;
 import megamek.common.rolls.TargetRoll;
 import megamek.common.units.*;
@@ -132,7 +136,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
     protected boolean announcedEntityFiring = false;
     protected boolean missed = false;
     protected DamageType damageType;
-    protected int generalDamageType = HitData.DAMAGE_NONE;
+    protected HitDamageType generalDamageType = HitDamageType.DAMAGE_NONE;
     protected Vector<Integer> insertedAttacks = new Vector<>();
     protected int numWeapons; // for capital fighters/fighter squadrons
     protected int numWeaponsHit; // for capital fighters/fighter squadrons
@@ -208,6 +212,13 @@ public class WeaponHandler implements AttackHandler, Serializable {
             return totalHeat;
         }
 
+        // Sized and read from the unit whose declarations are being summed, which is the defender here, not the
+        // attacker holding this handler. Sizing them from the attacker crashed whenever the defender fired from a
+        // location the attacker does not have (issue #8899). Allocated once, so an arc counted for one weapon is
+        // not counted again for the next: rebuilding them per weapon defeated the whole point of the check.
+        boolean[] usedFrontArc = new boolean[entity.locations()];
+        boolean[] usedRearArc = new boolean[entity.locations()];
+
         for (Enumeration<AttackHandler> attack = game.getAttacks(); attack.hasMoreElements(); ) {
             AttackHandler attackHandler = attack.nextElement();
             WeaponAttackAction prevAttack = attackHandler.getWeaponAttackAction();
@@ -218,22 +229,18 @@ public class WeaponHandler implements AttackHandler, Serializable {
                 } else {
                     boolean rearMount = prevWeapon.isRearMounted();
                     int loc = prevWeapon.getLocation();
-
-                    // create an array of booleans of locations
-                    boolean[] usedFrontArc = new boolean[weaponEntity.locations()];
-                    boolean[] usedRearArc = new boolean[weaponEntity.locations()];
-                    for (int i = 0; i < weaponEntity.locations(); i++) {
-                        usedFrontArc[i] = false;
-                        usedRearArc[i] = false;
+                    if ((loc < 0) || (loc >= entity.locations())) {
+                        // A weapon with no real location, such as one held by a squadron rather than a hull
+                        continue;
                     }
                     if (!rearMount) {
                         if (!usedFrontArc[loc]) {
-                            totalHeat += weaponEntity.getHeatInArc(loc, rearMount);
+                            totalHeat += entity.getHeatInArc(loc, rearMount);
                             usedFrontArc[loc] = true;
                         }
                     } else {
                         if (!usedRearArc[loc]) {
-                            totalHeat += weaponEntity.getHeatInArc(loc, rearMount);
+                            totalHeat += entity.getHeatInArc(loc, rearMount);
                             usedRearArc[loc] = true;
                         }
                     }
@@ -319,7 +326,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
         // We need to know how much heat has been assigned to offensive weapons fire by
         // the defender this round
         int weaponHeat = getLargeCraftHeat(entityTarget) + entityTarget.heatBuildup;
-        if (null != lCounters) {
+        if (lCounters != null) {
             for (WeaponMounted counter : lCounters) {
                 // Point defenses only fire vs attacks against the arc they protect
                 Entity pdEnt = counter.getEntity();
@@ -633,7 +640,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
                         // remove the last reports because they showed the
                         // number of shots that hit
                         while (vPhaseReport.size() > reportSize) {
-                            vPhaseReport.remove(vPhaseReport.size() - 1);
+                            vPhaseReport.removeLast();
                         }
                         hits = 0;
                         for (int i = 0; i < numWeaponsHit; i++) {
@@ -667,7 +674,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
                             // remove the last reports because they showed the
                             // number of shots that hit
                             while (vPhaseReport.size() > reportSize) {
-                                vPhaseReport.remove(vPhaseReport.size() - 1);
+                                vPhaseReport.removeLast();
                             }
                             AMSHits = 0;
                             Report r = new Report(3236);
@@ -701,7 +708,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
                             // remove the last reports because they showed the
                             // number of shots that hit
                             while (vPhaseReport.size() > reportSize) {
-                                vPhaseReport.remove(vPhaseReport.size() - 1);
+                                vPhaseReport.removeLast();
                             }
                             // If you're shooting at a target using single AMS
                             // Too many variables here as far as AMS numbers
@@ -822,7 +829,6 @@ public class WeaponHandler implements AttackHandler, Serializable {
                     }
                 } else {
                     bSalvo = false;
-                    nDamPerHit = attackValue;
                     nCluster = 1;
                 }
             }
@@ -903,12 +909,20 @@ public class WeaponHandler implements AttackHandler, Serializable {
 
             // Point Defense fire vs Capital Missiles
 
+            // Glancing and direct blows are damage-attack concepts. They don't apply to fire extinguishing,
+            // which is a simple pass/fail roll to put out a fire, so skip (and don't report) them.
+            boolean isFireExtinguishing = weaponType.hasFlag(WeaponType.F_EXTINGUISHER)
+                  || (target.getTargetType() == Targetable.TYPE_HEX_EXTINGUISH);
+
             // are we a glancing hit? Check for this here, report it later
-            setGlancingBlowFlags(entityTarget);
+            if (!isFireExtinguishing) {
+                setGlancingBlowFlags(entityTarget);
+            }
 
             // Set Margin of Success/Failure and check for Direct Blows
             toHit.setMoS(roll.getIntValue() - Math.max(2, toHit.getValue()));
-            bDirect = game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_DIRECT_BLOW)
+            bDirect = !isFireExtinguishing
+                  && game.getOptions().booleanOption(OptionsConstants.ADVANCED_COMBAT_TAC_OPS_DIRECT_BLOW)
                   && ((toHit.getMoS() / 3) >= 1) && (entityTarget != null);
 
             // This has to be up here so that we don't screw up glancing/direct blow reports
@@ -1132,7 +1146,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
             if (bMissed && id != vPhaseReport.size()) {
                 vPhaseReport.get(id - 1).newlines--;
                 vPhaseReport.get(id).indent(2);
-                vPhaseReport.get(vPhaseReport.size() - 1).newlines++;
+                vPhaseReport.getLast().newlines++;
             }
 
             if (!bMissed) {
@@ -1204,10 +1218,9 @@ public class WeaponHandler implements AttackHandler, Serializable {
                         hits = 0;
                         // Targeting a building.
                     } else if (target.getTargetType() == Targetable.TYPE_BUILDING) {
-                        // The building takes the full brunt of the attack.
-                        nDamage = nDamPerHit * hits;
-                        handleBuildingDamage(vPhaseReport, bldg, nDamage, target.getPosition());
-                        hits = 0;
+                        // The building takes the full brunt of the attack, one damage grouping at a time.
+                        hits = handleBuildingDamageByGrouping(vPhaseReport, bldg, hits, nCluster,
+                              target.getPosition());
                     } else if (entityTarget != null) {
                         handleEntityDamage(entityTarget, vPhaseReport, bldg, hits, nCluster, bldgAbsorbs);
                         gameManager.creditKill(entityTarget, attackingEntity);
@@ -1229,13 +1242,11 @@ public class WeaponHandler implements AttackHandler, Serializable {
                     report.subject = attackingEntity.getId();
                     report.newlines--;
                     vPhaseReport.add(report);
-                    int nDamage = nDamPerHit * hits;
-                    // We want to set bSalvo to true to prevent
-                    // handleBuildingDamage from reporting a hit
+                    // The missed volley hits the building one damage grouping at a time; bSalvo is forced on so the
+                    // building damage does not report a hit
                     boolean savedSalvo = bSalvo;
                     bSalvo = true;
-                    handleBuildingDamage(vPhaseReport, bldg, nDamage,
-                          target.getPosition());
+                    handleBuildingDamageByGrouping(vPhaseReport, bldg, hits, nCluster, target.getPosition());
                     bSalvo = savedSalvo;
                 }
             }
@@ -1256,7 +1267,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
                     report.indent();
                     report.subject = attackingEntity.getId();
                     vPhaseReport.addElement(report);
-                    if (null != attackingEntity.getCrew()) {
+                    if (attackingEntity.getCrew() != null){
                         roll = attackingEntity.getCrew().rollGunnerySkill();
                     } else {
                         roll = Compute.rollD6(2);
@@ -1270,6 +1281,79 @@ public class WeaponHandler implements AttackHandler, Serializable {
 
         returnedReports.addAll(vPhaseReport);
         return false;
+    }
+
+    /**
+     * How many rows this attack is shifted down the Non-Infantry Weapon Damage Against Infantry Table (TW p.217)
+     * before its damage against a conventional infantry platoon is read off it.
+     * <p>
+     * This is the direct blow's shift only, a third of its margin of success. What the atmosphere does to the row is
+     * settled by {@link #resolveInfantryDamageClass(int)} instead, because a flammable atmosphere can push an attack
+     * off the end of the table and that cannot be expressed as a number of rows.
+     *
+     * @return the number of rows to shift, which is zero unless the attack was a direct blow
+     */
+    protected int getInfantryDamageClassShift() {
+        return bDirect ? (toHit.getMoS() / 3) : 0;
+    }
+
+    /**
+     * The row of the Non-Infantry Weapon Damage Against Infantry Table (TW p.217) this attack's damage against a
+     * conventional infantry platoon should be read off.
+     * <p>
+     * Normally that is simply the weapon's own damage class. A flammable atmosphere changes it, and because toxic
+     * air is the same taint at a worse level, both of the following apply there in order (TO:AR p.54).
+     * <p>
+     * First, the attack counts as two types better, to a maximum of the area-effect weapon. So direct fire is read
+     * off the pulse row, cluster ballistic off the cluster missile row, and anything already at or past cluster
+     * missile - the book's own example - lands on area-effect.
+     * <p>
+     * Then, in toxic air only, a non-area-effect attack by a non-infantry unit is resolved as though another infantry
+     * unit had made it, so its damage is applied point for point and the table is skipped altogether. An attack that
+     * the shift has just moved onto area-effect is exempt, which is what stops toxic air resolving a cluster missile
+     * attack more gently than tainted air would.
+     *
+     * @param baseDamageClass the damage class the weapon would use in breathable air
+     *
+     * @return the damage class to use, or one of {@link WeaponType#WEAPON_INFANTRY_ORIGIN} and
+     *       {@link WeaponType#WEAPON_AREA_EFFECT_INFANTRY} for the two rows that are not on the ladder
+     */
+    protected int resolveInfantryDamageClass(int baseDamageClass) {
+        AtmosphericTaint atmosphericTaint = game.getPlanetaryConditions().getAtmosphericTaint();
+        boolean isAreaEffectWeapon = ComputeTerrainMods.isAreaEffectAgainstInfantry(weaponType, ammoType);
+        int shiftedClass = shiftInfantryDamageClass(baseDamageClass, atmosphericTaint, isAreaEffectWeapon);
+
+        if (!TaintedAtmosphereRules.treatsAttacksOnInfantryAsInfantryDamage(atmosphericTaint)) {
+            return shiftedClass;
+        }
+        boolean isInfantryAttacker = (attackingEntity != null) && attackingEntity.isConventionalInfantry();
+        boolean isAreaEffectAttack = isAreaEffectWeapon
+              || (shiftedClass == WeaponType.WEAPON_AREA_EFFECT_INFANTRY);
+        return (isInfantryAttacker || isAreaEffectAttack) ? shiftedClass : WeaponType.WEAPON_INFANTRY_ORIGIN;
+    }
+
+    /**
+     * Moves an attack the two rows down the infantry damage table that a flammable atmosphere calls for, stopping at
+     * area-effect (TO:AR p.54).
+     *
+     * @param baseDamageClass    the damage class the weapon would use in breathable air
+     * @param atmosphericTaint   the air the platoon is standing in
+     * @param isAreaEffectWeapon whether the weapon is area-effect in its own right, which the shift leaves alone
+     *
+     * @return the shifted damage class, or {@code baseDamageClass} when the air shifts nothing
+     */
+    private int shiftInfantryDamageClass(int baseDamageClass, AtmosphericTaint atmosphericTaint,
+          boolean isAreaEffectWeapon) {
+        int rowsBetter = TaintedAtmosphereRules.getInfantryDamageClassShift(atmosphericTaint);
+        boolean isOnTheBookLadder = (baseDamageClass >= WeaponType.WEAPON_DIRECT_FIRE)
+              && (baseDamageClass <= WeaponType.WEAPON_CLUSTER_MISSILE);
+        if ((rowsBetter == 0) || isAreaEffectWeapon || !isOnTheBookLadder) {
+            return baseDamageClass;
+        }
+        int shiftedClass = baseDamageClass + rowsBetter;
+        return (shiftedClass > WeaponType.WEAPON_CLUSTER_MISSILE)
+              ? WeaponType.WEAPON_AREA_EFFECT_INFANTRY
+              : shiftedClass;
     }
 
     /**
@@ -1297,8 +1381,8 @@ public class WeaponHandler implements AttackHandler, Serializable {
                   && !attackingEntity.isConventionalInfantry()
                   && damageType != DamageType.FLECHETTE;
             toReturn = Compute.directBlowInfantryDamage(toReturn,
-                  bDirect ? toHit.getMoS() / 3 : 0,
-                  weaponType.getInfantryDamageClass(),
+                  getInfantryDamageClassShift(),
+                  resolveInfantryDamageClass(weaponType.getInfantryDamageClass()),
                   isNonInfantryVsMechanized,
                   toHit.getThruBldg() != null, attackingEntity.getId(), calcDmgPerHitReport);
         } else if (bDirect) {
@@ -1316,6 +1400,51 @@ public class WeaponHandler implements AttackHandler, Serializable {
             toReturn = (int) Math.floor(toReturn * .5);
         }
         return (int) toReturn;
+    }
+
+    /**
+     * @return {@code true} when the target is battle armor wearing Fire-Resistant armor, whose suit "ignores
+     *       damage by heat-causing weapons" (TM p. 170). Flamers of every size are heat-causing, so they do
+     *       nothing to it.
+     */
+    protected boolean targetIgnoresHeatWeaponDamage() {
+        return (target instanceof BattleArmor battleArmorTarget) && battleArmorTarget.isFireResistant();
+    }
+
+    /**
+     * Halves the damage of a flame-based attack when the target is a pain-shunted infantry or battle armor unit.
+     *
+     * <p>Conventional infantry and battle armor units made up of warriors with an Artificial Pain Shunt reduce by
+     * half any damage caused by flame-based weapons (IO p. 78). Battle armor is covered by the same sentence as
+     * conventional infantry, so both unit types are handled here.</p>
+     *
+     * <p>IO does not define "flame-based weapon". TO:AR p. 171 does, listing plasma, flamer and Firedrake, which
+     * is the same set {@code InfantryWeapon.isFlameBased()} already recognises. Core Rules does not use the term
+     * at all; it tags both flamers and plasma as Heat-Causing (p. 183), so that tag does not separate them
+     * either.</p>
+     *
+     * <p>Callers must apply this to the value that scales the total damage of the attack. That is the damage per
+     * hit for some handlers and the number of hits for others, so the call site differs per weapon.</p>
+     *
+     * @param damage the flame damage before the reduction
+     *
+     * @return half the damage, rounded down, or the unchanged damage when the target has no pain shunt
+     */
+    protected double applyPainShuntModifier(double damage) {
+        if (!(target instanceof Infantry infantryTarget)
+              || !infantryTarget.hasAbility(OptionsConstants.MD_PAIN_SHUNT)) {
+            return damage;
+        }
+
+        double reducedDamage = floor(damage / 2.0);
+
+        Report report = new Report(9975);
+        report.subject = subjectId;
+        report.indent(2);
+        report.add((int) reducedDamage);
+        calcDmgPerHitReport.addElement(report);
+
+        return reducedDamage;
     }
 
     /**
@@ -1606,11 +1735,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
         nDamage = checkTerrain(nDamage, entityTarget, vPhaseReport);
         nDamage = checkLI(nDamage, entityTarget, vPhaseReport);
 
-        // some buildings scale remaining damage that is not absorbed
-        // TODO: this isn't quite right for castles brian
-        if ((null != bldg) && !targetStickingOutOfBuilding) {
-            nDamage = (int) Math.floor(bldg.getDamageToScale() * nDamage);
-        }
+        nDamage = getBuildingDamageAdjustment(entityTarget, bldg, targetStickingOutOfBuilding, nDamage);
 
         // A building may absorb the entire shot.
         if (nDamage == 0) {
@@ -1770,6 +1895,32 @@ public class WeaponHandler implements AttackHandler, Serializable {
         vPhaseReport.addAll(clearReports);
     }
 
+    /**
+     * Applies an attack on a building hex one Damage Value grouping at a time. TW p. 171 treats each grouping of a
+     * cluster weapon as a separate attack against the building, so the building's absorption and the share passed
+     * through to infantry inside (p. 172) are rounded per grouping rather than once on the whole volley. A weapon
+     * that does not fire a salvo is a single grouping.
+     *
+     * @param vPhaseReport the phase report to add to
+     * @param bldg         the building that was hit
+     * @param hits         the number of hits to resolve
+     * @param nCluster     the number of hits in one damage grouping
+     * @param coords       the building hex that was hit
+     *
+     * @return the hits left to resolve, always {@code 0}
+     */
+    protected int handleBuildingDamageByGrouping(Vector<Report> vPhaseReport, IBuilding bldg, int hits,
+          int nCluster, Coords coords) {
+        int groupingSize = bSalvo ? Math.max(1, nCluster) : hits;
+        int remainingHits = hits;
+        while (remainingHits > 0) {
+            int groupingHits = Math.min(groupingSize, remainingHits);
+            handleBuildingDamage(vPhaseReport, bldg, nDamPerHit * groupingHits, coords);
+            remainingHits -= groupingHits;
+        }
+        return 0;
+    }
+
     protected void handleBuildingDamage(Vector<Report> vPhaseReport, IBuilding bldg, int nDamage,
           Coords coords) {
         if (!bSalvo) {
@@ -1861,7 +2012,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
         }
         // is this an underwater attack on a surface naval vessel?
         underWater = toHit.getHitTable() == ToHitData.HIT_UNDERWATER;
-        if (null != attackingEntity.getCrew()) {
+        if (attackingEntity.getCrew() != null){
             roll = attackingEntity.getCrew().rollGunnerySkill();
         } else {
             roll = Compute.rollD6(2);
@@ -1914,11 +2065,11 @@ public class WeaponHandler implements AttackHandler, Serializable {
 
             if (!chain.isEmpty()) {
                 chain.sort((m1, m2) -> Integer.compare(m2.getUsableShotsLeft(), m1.getUsableShotsLeft()));
-                weapon.setLinked(chain.get(0));
+                weapon.setLinked(chain.getFirst());
                 for (int i = 0; i < chain.size() - 1; i++) {
                     chain.get(i).setLinked(chain.get(i + 1));
                 }
-                chain.get(chain.size() - 1).setLinked(null);
+                chain.getLast().setLinked(null);
                 if (weapon.getLinked().getUsableShotsLeft() == 0) {
                     weapon.setFired(true);
                 }
@@ -1945,11 +2096,12 @@ public class WeaponHandler implements AttackHandler, Serializable {
                 int loc = weapon.getLocation();
                 boolean rearMount = weapon.isRearMounted();
                 if (!attackingEntity.hasArcFired(loc, rearMount)) {
-                    attackingEntity.heatBuildup += attackingEntity.getHeatInArc(loc, rearMount);
+                    attackingEntity.changeHeatBuildup(attackingEntity.getHeatInArc(loc, rearMount),
+                          Messages.getString("HeatBreakdown.weaponsFiredArc", attackingEntity.getLocationName(loc)));
                     attackingEntity.setArcFired(loc, rearMount);
                 }
             } else {
-                attackingEntity.heatBuildup += (weapon.getHeatByBay());
+                weaponEntity.changeHeatBuildup(weapon.getHeatByBay(), weapon.getName());
             }
         }
     }
@@ -2126,13 +2278,14 @@ public class WeaponHandler implements AttackHandler, Serializable {
      */
     public void restore() {
         if (typeName == null) {
-            typeName = weaponType.getName();
-        } else {
-            weaponType = (WeaponType) EquipmentType.get(typeName);
+            typeName = weaponType.getInternalName();
         }
+        weaponType = (WeaponType) EquipmentType.get(typeName);
 
         if (weaponType == null) {
             LOGGER.error("Could not restore equipment type \"{}\"", typeName);
+        } else {
+            typeName = weaponType.getInternalName();
         }
     }
 
@@ -2175,7 +2328,7 @@ public class WeaponHandler implements AttackHandler, Serializable {
             nMissilesModifier -= 2;
         }
 
-        if (null != attackingEntity.getCrew()) {
+        if (attackingEntity.getCrew() != null){
             if (attackingEntity.hasAbility(OptionsConstants.GUNNERY_SANDBLASTER, weaponType.getName())) {
                 if (nRange > ranges[RangeType.RANGE_MEDIUM]) {
                     nMissilesModifier += 2;
@@ -2290,25 +2443,26 @@ public class WeaponHandler implements AttackHandler, Serializable {
     }
 
     /**
-     * Used by certain artillery handlers to draw drift markers with "hit" graphics if anything is caught in the blast,
-     * or "drift" marker if nothing is damaged. No-op for direct hits.
+     * Used by certain artillery handlers to draw a drift marker at the hex an artillery round actually landed on when
+     * it missed its target. The round is always marked as a drift: a drift that lands on a unit is still a drift, and
+     * the resulting damage is already shown in the combat report. (It must not be marked as a hit -
+     * {@link SpecialHexDisplay#drawNow} deliberately suppresses "hit" markers whose text says they drifted, which would
+     * leave the landing hex with no marker at all.) No-op for direct hits.
+     *
+     * @param targetPos The hex that was targeted
+     * @param finalPos  The hex the round actually drifted to
+     * @param aaa       The artillery attack
+     * @param hitIds    Ids of units caught in the blast; retained because callers produce it as a side effect of
+     *                  resolving the blast damage, but no longer used to choose the marker type
      */
     protected void handleArtilleryDriftMarker(Coords targetPos, Coords finalPos, ArtilleryAttackAction aaa,
           Vector<Integer> hitIds) {
         if (bMissed) {
             String msg = Messages.getString("ArtilleryMessage.drifted") + " " + targetPos.getBoardNum();
-            final SpecialHexDisplay shd;
-            if (hitIds.isEmpty()) {
-                shd = new SpecialHexDisplay(SpecialHexDisplay.Type.ARTILLERY_DRIFT,
-                      game.getRoundCount(),
-                      game.getPlayer(aaa.getPlayerId()),
-                      msg);
-            } else {
-                shd = new SpecialHexDisplay(SpecialHexDisplay.Type.ARTILLERY_HIT,
-                      game.getRoundCount(),
-                      game.getPlayer(aaa.getPlayerId()),
-                      msg);
-            }
+            SpecialHexDisplay shd = new SpecialHexDisplay(SpecialHexDisplay.Type.ARTILLERY_DRIFT,
+                  game.getRoundCount(),
+                  game.getPlayer(aaa.getPlayerId()),
+                  msg);
             game.getBoard(aaa.getTarget(game)).addSpecialHexDisplay(finalPos, shd);
         }
     }
